--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -6,12 +6,14 @@
 
 \begin{enumerate}
 
-  \item Diese Verordnung gilt für die ganz oder teilweise automatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
-   {personenbezogener Daten} sowie für die nichtautomatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
-   {personenbezogener Daten}, die in einem \hyperref[itm:04-6]{Dateisystem} gespeichert sind oder gespeichert werden sollen.
+  \item Diese Verordnung gilt für die ganz oder teilweise automatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref
+   [itm:04-1]{personenbezogener Daten} sowie für die nichtautomatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref
+   [itm:04-1]{personenbezogener Daten}, die in einem \hyperref[itm:04-6]{Dateisystem} gespeichert sind oder gespeichert
+   werden sollen.
   \label{itm:02-1}
 
-  \item Diese Verordnung findet keine Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}
+  \item Diese Verordnung findet keine Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
+   {personenbezogener Daten}
   \label{itm:02-2}
 
   \begin{enumerate}
@@ -19,8 +21,8 @@
     \item im Rahmen einer Tätigkeit, die nicht in den Anwendungsbereich des Unionsrechts fällt,
     \label{itm:02-2a}
 
-    \item durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2
-     EUV fallen,
+    \item durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2 EUV
+     fallen,
     \label{itm:02-2b}
 
     \item durch natürliche Personen zur Ausübung ausschließlich persönlicher oder familiärer Tätigkeiten,
@@ -33,10 +35,11 @@
 
   \end{enumerate}
 
-  \item Für die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe, Einrichtungen, Ämter und
-   Agenturen der Union gilt die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte
-   der Union, die diese \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} regeln, werden im Einklang
-   mit \hyperref[ch:98]{Artikel 98} an die Grundsätze und Vorschriften der vorliegenden Verordnung angepasst.
+  \item Für die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe,
+   Einrichtungen, Ämter und Agenturen der Union gilt die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001
+   und sonstige Rechtsakte der Union, die diese \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
+   {personenbezogener Daten} regeln, werden im Einklang mit \hyperref[ch:98]{Artikel 98} an die Grundsätze und
+   Vorschriften der vorliegenden Verordnung angepasst.
   \label{itm:02-3}
 
   \item Die vorliegende Verordnung lässt die Anwendung der Richtlinie 2000/31/EG und speziell die Vorschriften der
@@ -56,14 +59,14 @@
 
   \item Die \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32001R0045&qid=1659176445961&from=DE}
    {Verordnung (EG) Nr. 45/2001} in \hyperref[itm:02-3]{Absatz 3} hat den Schutz natürlicher Personen bei der
-   Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe und Einrichtungen der Gemeinschaft und den freien Datenverkehr
-   zum Inhalt.
+   Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} durch die Organe und Einrichtungen der Gemeinschaft und
+   den freien Datenverkehr zum Inhalt.
 
   \item Die in \hyperref[itm:02-4]{Absatz 4} referenzierte
    \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32000L0031&qid=1659176679229&from=DE}
-   {Richtlinie 2000/31/EG} ("`Richtlinie über den elektronischen Geschäftsverkehr"') regelt bestimmte rechtliche
-   Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im
-   Binnenmarkt. Die referenzierten Artikel betreffen die Themenkomplexe
+    {Richtlinie 2000/31/EG} ("`Richtlinie über den elektronischen Geschäftsverkehr"') regelt bestimmte rechtliche
+    Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im
+    Binnenmarkt. Die referenzierten Artikel betreffen die Themenkomplexe
 
    \begin{itemize}
      \item Reine Durchleitung (Artikel 12)
