--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -17,40 +17,42 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-1}
 
   \item „Verarbeitung“ jeden mit oder ohne Hilfe automatisierter Verfahren ausgeführten Vorgang oder jede solche
-   Vorgangsreihe im Zusammenhang mit \hyperref[itm:04-1]{personenbezogenen Daten} wie das Erheben, das Erfassen, die Organisation, das
-   Ordnen, die Speicherung, die Anpassung oder Veränderung, das Auslesen, das Abfragen, die Verwendung, die Offenlegung
-   durch Übermittlung, Verbreitung oder eine andere Form der Bereitstellung, den Abgleich oder die Verknüpfung, die
-   Einschränkung, das Löschen oder die Vernichtung;
+   Vorgangsreihe im Zusammenhang mit \hyperref[itm:04-1]{personenbezogenen Daten} wie das Erheben, das Erfassen, die
+   Organisation, das Ordnen, die Speicherung, die Anpassung oder Veränderung, das Auslesen, das Abfragen, die
+   Verwendung, die Offenlegung durch Übermittlung, Verbreitung oder eine andere Form der Bereitstellung, den Abgleich
+   oder die Verknüpfung, die Einschränkung, das Löschen oder die Vernichtung;
   \label{itm:04-2}
 
-  \item „Einschränkung der Verarbeitung“ die Markierung gespeicherter \hyperref[itm:04-1]{personenbezogener Daten} mit dem Ziel, ihre
-   künftige \hyperref[itm:04-2]{Verarbeitung} einzuschränken;
+  \item „Einschränkung der Verarbeitung“ die Markierung gespeicherter \hyperref[itm:04-1]{personenbezogener Daten} mit
+   dem Ziel, ihre künftige \hyperref[itm:04-2]{Verarbeitung} einzuschränken;
   \label{itm:04-3}
 
-  \item „Profiling“ jede Art der automatisierten \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die darin besteht, dass diese
-   \hyperref[itm:04-1]{personenbezogenen Daten} verwendet werden, um bestimmte persönliche Aspekte, die sich auf eine natürliche Person
-   beziehen, zu bewerten, insbesondere um Aspekte bezüglich Arbeitsleistung, wirtschaftliche Lage, Gesundheit,
-   persönliche Vorlieben, Interessen, Zuverlässigkeit, Verhalten, Aufenthaltsort oder Ortswechsel dieser natürlichen
-   Person zu analysieren oder vorherzusagen;
+  \item „Profiling“ jede Art der automatisierten \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
+   {personenbezogener Daten}, die darin besteht, dass diese
+   \hyperref[itm:04-1]{personenbezogenen Daten} verwendet werden, um bestimmte persönliche Aspekte, die sich auf eine
+    natürliche Person beziehen, zu bewerten, insbesondere um Aspekte bezüglich Arbeitsleistung, wirtschaftliche Lage,
+    Gesundheit, persönliche Vorlieben, Interessen, Zuverlässigkeit, Verhalten, Aufenthaltsort oder Ortswechsel dieser
+    natürlichen Person zu analysieren oder vorherzusagen;
   \label{itm:04-4}
 
-  \item „Pseudonymisierung“ die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} in einer Weise, dass die \hyperref[itm:04-1]{personenbezogenen Daten}
-   ohne Hinzuziehung zusätzlicher Informationen nicht mehr einer spezifischen \hyperref[itm:04-1]{betroffenen Person} zugeordnet werden
-   können, sofern diese zusätzlichen Informationen gesondert aufbewahrt werden und technischen und organisatorischen
-   Maßnahmen unterliegen, die gewährleisten, dass die \hyperref[itm:04-1]{personenbezogenen Daten} nicht einer identifizierten oder
+  \item „Pseudonymisierung“ die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} in einer
+   Weise, dass die \hyperref[itm:04-1]{personenbezogenen Daten} ohne Hinzuziehung zusätzlicher Informationen nicht mehr
+   einer spezifischen \hyperref[itm:04-1]{betroffenen Person} zugeordnet werden können, sofern diese zusätzlichen
+   Informationen gesondert aufbewahrt werden und technischen und organisatorischen Maßnahmen unterliegen, die
+   gewährleisten, dass die \hyperref[itm:04-1]{personenbezogenen Daten} nicht einer identifizierten oder
    identifizierbaren natürlichen Person zugewiesen werden;
   \label{itm:04-5}
 
-  \item „Dateisystem“ jede strukturierte Sammlung \hyperref[itm:04-1]{personenbezogener Daten}, die nach bestimmten Kriterien zugänglich
-   sind, unabhängig davon, ob diese Sammlung zentral, dezentral oder nach funktionalen oder geografischen
-   Gesichtspunkten geordnet geführt wird;
+  \item „Dateisystem“ jede strukturierte Sammlung \hyperref[itm:04-1]{personenbezogener Daten}, die nach bestimmten
+   Kriterien zugänglich sind, unabhängig davon, ob diese Sammlung zentral, dezentral oder nach funktionalen oder
+   geografischen Gesichtspunkten geordnet geführt wird;
   \label{itm:04-6}
 
   \item „Verantwortlicher“ die natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, die allein
-   oder gemeinsam mit anderen über die Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} entscheidet; sind
-   die Zwecke und Mittel dieser \hyperref[itm:04-2]{Verarbeitung} durch das Unionsrecht oder das Recht der Mitgliedstaaten vorgegeben, so
-   kann der Verantwortliche beziehungsweise können die bestimmten Kriterien seiner Benennung nach dem Unionsrecht oder
-   dem Recht der Mitgliedstaaten vorgesehen werden;
+   oder gemeinsam mit anderen über die Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]
+   {personenbezogenen Daten} entscheidet; sind die Zwecke und Mittel dieser \hyperref[itm:04-2]{Verarbeitung} durch das
+   Unionsrecht oder das Recht der Mitgliedstaaten vorgegeben, so kann der Verantwortliche beziehungsweise können die
+   bestimmten Kriterien seiner Benennung nach dem Unionsrecht oder dem Recht der Mitgliedstaaten vorgesehen werden;
   \label{itm:04-7}
 
   \item „Auftragsverarbeiter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, die
@@ -58,45 +60,49 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
   \label{itm:04-8}
 
   \item „Empfänger“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, der
-   \hyperref[itm:04-1]{personenbezogene Daten} offengelegt werden, unabhängig davon, ob es sich bei ihr um einen \hyperref[itm:04-10]{Dritten} handelt oder nicht.
-   Behörden, die im Rahmen eines bestimmten Untersuchungsauftrags nach dem Unionsrecht oder dem Recht der
-   Mitgliedstaaten möglicherweise \hyperref[itm:04-1]{personenbezogene Daten} erhalten, gelten jedoch nicht als Empfänger; die \hyperref[itm:04-2]{Verarbeitung}
-   dieser Daten durch die genannten Behörden erfolgt im Einklang mit den geltenden Datenschutzvorschriften gemäß den
-   Zwecken der \hyperref[itm:04-2]{Verarbeitung};
+   \hyperref[itm:04-1]{personenbezogene Daten} offengelegt werden, unabhängig davon, ob es sich bei ihr um
+    einen \hyperref[itm:04-10]{Dritten} handelt oder nicht. Behörden, die im Rahmen eines bestimmten
+    Untersuchungsauftrags nach dem Unionsrecht oder dem Recht der Mitgliedstaaten möglicherweise \hyperref[itm:04-1]
+    {personenbezogene Daten} erhalten, gelten jedoch nicht als Empfänger; die \hyperref[itm:04-2]{Verarbeitung} dieser
+    Daten durch die genannten Behörden erfolgt im Einklang mit den geltenden Datenschutzvorschriften gemäß den Zwecken
+    der \hyperref[itm:04-2]{Verarbeitung};
   \label{itm:04-9}
 
   \item „Dritter“ eine natürliche oder juristische Person, Behörde, Einrichtung oder andere Stelle, außer der
-   \hyperref[itm:04-1]{betroffenen Person}, dem \hyperref[itm:04-7]{Verantwortlichen}, dem \hyperref[itm:04-8]{Auftragsverarbeiter} und den Personen, die unter der unmittelbaren
-   Verantwortung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} befugt sind, die \hyperref[itm:04-1]{personenbezogenen Daten} zu
-   verarbeiten;
+   \hyperref[itm:04-1]{betroffenen Person}, dem \hyperref[itm:04-7]{Verantwortlichen}, dem \hyperref[itm:04-8]
+    {Auftragsverarbeiter} und den Personen, die unter der unmittelbaren Verantwortung des \hyperref[itm:04-7]
+    {Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} befugt sind, die \hyperref[itm:04-1]
+    {personenbezogenen Daten} zu verarbeiten;
   \label{itm:04-10}
 
-  \item „Einwilligung“ der \hyperref[itm:04-1]{betroffenen Person} jede freiwillig für den bestimmten Fall, in informierter Weise und
-   unmissverständlich abgegebene Willensbekundung in Form einer Erklärung oder einer sonstigen eindeutigen
-   bestätigenden Handlung, mit der die \hyperref[itm:04-1]{betroffene Person} zu verstehen gibt, dass sie mit der \hyperref[itm:04-2]{Verarbeitung} der sie
-   betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} einverstanden ist;
+  \item „Einwilligung“ der \hyperref[itm:04-1]{betroffenen Person} jede freiwillig für den bestimmten Fall, in
+   informierter Weise und unmissverständlich abgegebene Willensbekundung in Form einer Erklärung oder einer sonstigen
+   eindeutigen bestätigenden Handlung, mit der die \hyperref[itm:04-1]{betroffene Person} zu verstehen gibt, dass sie
+   mit der \hyperref[itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
+   einverstanden ist;
   \label{itm:04-11}
 
   \item „Verletzung des Schutzes personenbezogener Daten“ eine Verletzung der Sicherheit, die, ob unbeabsichtigt oder
    unrechtmäßig, zur Vernichtung, zum Verlust, zur Veränderung, oder zur unbefugten Offenlegung von beziehungsweise zum
-   unbefugten Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} führt, die übermittelt, gespeichert oder auf sonstige Weise verarbeitet
-   wurden;
+   unbefugten Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} führt, die übermittelt, gespeichert oder auf
+   sonstige Weise verarbeitet wurden;
   \label{itm:04-12}
 
-  \item „genetische Daten“ \hyperref[itm:04-1]{personenbezogene Daten} zu den ererbten oder erworbenen genetischen Eigenschaften einer
-   natürlichen Person, die eindeutige Informationen über die Physiologie oder die Gesundheit dieser natürlichen Person
-   liefern und insbesondere aus der Analyse einer biologischen Probe der betreffenden natürlichen Person gewonnen
-   wurden;
+  \item „genetische Daten“ \hyperref[itm:04-1]{personenbezogene Daten} zu den ererbten oder erworbenen genetischen
+   Eigenschaften einer natürlichen Person, die eindeutige Informationen über die Physiologie oder die Gesundheit dieser
+   natürlichen Person liefern und insbesondere aus der Analyse einer biologischen Probe der betreffenden natürlichen
+   Person gewonnen wurden;
   \label{itm:04-13}
 
-  \item „biometrische Daten“ mit speziellen technischen Verfahren gewonnene \hyperref[itm:04-1]{personenbezogene Daten} zu den physischen,
-   physiologischen oder verhaltenstypischen Merkmalen einer natürlichen Person, die die eindeutige Identifizierung
-   dieser natürlichen Person ermöglichen oder bestätigen, wie Gesichtsbilder oder daktyloskopische Daten;
+  \item „biometrische Daten“ mit speziellen technischen Verfahren gewonnene \hyperref[itm:04-1]{personenbezogene Daten}
+   zu den physischen, physiologischen oder verhaltenstypischen Merkmalen einer natürlichen Person, die die eindeutige
+   Identifizierung dieser natürlichen Person ermöglichen oder bestätigen, wie Gesichtsbilder oder daktyloskopische
+   Daten;
   \label{itm:04-14}
 
-  \item „Gesundheitsdaten“ \hyperref[itm:04-1]{personenbezogene Daten}, die sich auf die körperliche oder geistige Gesundheit einer
-   natürlichen Person, einschließlich der Erbringung von Gesundheitsdienstleistungen, beziehen und aus denen
-   Informationen über deren Gesundheitszustand hervorgehen;
+  \item „Gesundheitsdaten“ \hyperref[itm:04-1]{personenbezogene Daten}, die sich auf die körperliche oder geistige
+   Gesundheit einer natürlichen Person, einschließlich der Erbringung von Gesundheitsdienstleistungen, beziehen und aus
+   denen Informationen über deren Gesundheitszustand hervorgehen;
   \label{itm:04-15}
 
   \item „Hauptniederlassung“
@@ -104,25 +110,29 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \begin{enumerate}
   
-    \item im Falle eines \hyperref[itm:04-7]{Verantwortlichen} mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
-     Hauptverwaltung in der Union, es sei denn, die Entscheidungen hinsichtlich der Zwecke und Mittel der \hyperref[itm:04-2]{Verarbeitung}
-     \hyperref[itm:04-1]{personenbezogener Daten} werden in einer anderen Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} in der Union getroffen und
-     diese Niederlassung ist befugt, diese Entscheidungen umsetzen zu lassen; in diesem Fall gilt die Niederlassung,
-     die derartige Entscheidungen trifft, als Hauptniederlassung;
+    \item im Falle eines \hyperref[itm:04-7]{Verantwortlichen} mit Niederlassungen in mehr als einem Mitgliedstaat den
+     Ort seiner Hauptverwaltung in der Union, es sei denn, die Entscheidungen hinsichtlich der Zwecke und Mittel
+     der \hyperref[itm:04-2]{Verarbeitung}
+     \hyperref[itm:04-1]{personenbezogener Daten} werden in einer anderen Niederlassung des \hyperref[itm:04-7]
+      {Verantwortlichen} in der Union getroffen und diese Niederlassung ist befugt, diese Entscheidungen umsetzen zu
+      lassen; in diesem Fall gilt die Niederlassung, die derartige Entscheidungen trifft, als Hauptniederlassung;
     \label{itm:04-16a}
 
-    \item im Falle eines \hyperref[itm:04-8]{Auftragsverarbeiters} mit Niederlassungen in mehr als einem Mitgliedstaat den Ort seiner
-     Hauptverwaltung in der Union oder, sofern der \hyperref[itm:04-8]{Auftragsverarbeiter} keine Hauptverwaltung in der Union hat, die
-     Niederlassung des \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union, in der die Verarbeitungstätigkeiten im Rahmen der Tätigkeiten
-     einer Niederlassung eines \hyperref[itm:04-8]{Auftragsverarbeiters} hauptsächlich stattfinden, soweit der \hyperref[itm:04-8]{Auftragsverarbeiter}
-     spezifischen Pflichten aus dieser Verordnung unterliegt;
+    \item im Falle eines \hyperref[itm:04-8]{Auftragsverarbeiters} mit Niederlassungen in mehr als einem Mitgliedstaat
+     den Ort seiner Hauptverwaltung in der Union oder, sofern der \hyperref[itm:04-8]{Auftragsverarbeiter} keine
+     Hauptverwaltung in der Union hat, die Niederlassung des \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union, in
+     der die Verarbeitungstätigkeiten im Rahmen der Tätigkeiten einer Niederlassung eines \hyperref[itm:04-8]
+     {Auftragsverarbeiters} hauptsächlich stattfinden, soweit der \hyperref[itm:04-8]{Auftragsverarbeiter} spezifischen
+     Pflichten aus dieser Verordnung unterliegt;
     \label{itm:04-16b}
 
   \end{enumerate}
 
-  \item „Vertreter“ eine in der Union niedergelassene natürliche oder juristische Person, die von dem \hyperref[itm:04-7]{Verantwortlichen}
-   oder \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich gemäß \hyperref[ch:27]{Artikel 27} bestellt wurde und den \hyperref[itm:04-7]{Verantwortlichen} oder
-   \hyperref[itm:04-8]{Auftragsverarbeiter} in Bezug auf die ihnen jeweils nach dieser Verordnung obliegenden Pflichten vertritt;
+  \item „Vertreter“ eine in der Union niedergelassene natürliche oder juristische Person, die von dem \hyperref
+   [itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich gemäß \hyperref[ch:27]
+   {Artikel 27} bestellt wurde und den \hyperref[itm:04-7]{Verantwortlichen} oder
+   \hyperref[itm:04-8]{Auftragsverarbeiter} in Bezug auf die ihnen jeweils nach dieser Verordnung obliegenden Pflichten
+    vertritt;
   \label{itm:04-17}
 
   \item „Unternehmen“ eine natürliche und juristische Person, die eine wirtschaftliche Tätigkeit ausübt, unabhängig von
@@ -130,33 +140,37 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    Tätigkeit nachgehen;
   \label{itm:04-18}
 
-  \item „Unternehmensgruppe“ eine Gruppe, die aus einem herrschenden \hyperref[itm:04-18]{Unternehmen} und den von diesem abhängigen
+  \item „Unternehmensgruppe“ eine Gruppe, die aus einem herrschenden \hyperref[itm:04-18]{Unternehmen} und den von
+   diesem abhängigen
    \hyperref[itm:04-18]{Unternehmen} besteht;
   \label{itm:04-19}
 
-  \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}, zu deren Einhaltung
-   sich ein im Hoheitsgebiet eines Mitgliedstaats niedergelassener \hyperref[itm:04-7]{Verantwortlicher} oder \hyperref[itm:04-8]{Auftragsverarbeiter}
-   verpflichtet im Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen \hyperref[itm:04-1]{personenbezogener Daten}
-   an einen \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
-   \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren Drittländern;
+  \item „verbindliche interne Datenschutzvorschriften“ Maßnahmen zum Schutz \hyperref[itm:04-1]
+   {personenbezogener Daten}, zu deren Einhaltung sich ein im Hoheitsgebiet eines Mitgliedstaats
+   niedergelassener \hyperref[itm:04-7]{Verantwortlicher} oder \hyperref[itm:04-8]{Auftragsverarbeiter} verpflichtet im
+   Hinblick auf Datenübermittlungen oder eine Kategorie von Datenübermittlungen \hyperref[itm:04-1]
+   {personenbezogener Daten} an einen \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]
+   {Auftragsverarbeiter} derselben \hyperref[itm:04-19]{Unternehmensgruppe} oder derselben Gruppe von
+   \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem oder mehreren
+    Drittländern;
   \label{itm:04-20}
 
   \item „Aufsichtsbehörde“ eine von einem Mitgliedstaat gemäß \hyperref[ch:51]{Artikel 51} eingerichtete unabhängige
    staatliche Stelle;
   \label{itm:04-21}   
 
-  \item „betroffene Aufsichtsbehörde“ eine \hyperref[itm:42-21]{Aufsichtsbehörde}, die von der \hyperref[itm:04-2]
+  \item „betroffene Aufsichtsbehörde“ eine \hyperref[itm:04-21]{Aufsichtsbehörde}, die von der \hyperref[itm:04-2]
    {Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} betroffen ist, weil
   \label{itm:04-22}
 
   \begin{enumerate}
 
-    \item der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} im Hoheitsgebiet des Mitgliedstaats dieser Aufsichtsbehörde
-     niedergelassen ist,
+    \item der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} im Hoheitsgebiet
+     des Mitgliedstaats dieser Aufsichtsbehörde niedergelassen ist,
     \label{itm:04-22a}
 
-    \item diese \hyperref[itm:04-2]{Verarbeitung} erhebliche Auswirkungen auf \hyperref[itm:04-1]{betroffene Personen} mit Wohnsitz im Mitgliedstaat dieser
-     Aufsichtsbehörde hat oder haben kann oder
+    \item diese \hyperref[itm:04-2]{Verarbeitung} erhebliche Auswirkungen auf \hyperref[itm:04-1]{betroffene Personen}
+     mit Wohnsitz im Mitgliedstaat dieser Aufsichtsbehörde hat oder haben kann oder
     \label{itm:04-22b}
 
     \item eine Beschwerde bei dieser Aufsichtsbehörde eingereicht wurde;
@@ -169,23 +183,30 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
   \begin{enumerate}
 
-    \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten von Niederlassungen eines
-     \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union in mehr als einem Mitgliedstaat erfolgt, wenn der
-     \hyperref[itm:04-7]{Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} in mehr als einem Mitgliedstaat niedergelassen ist, oder
+    \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der
+     Tätigkeiten von Niederlassungen eines
+     \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union in mehr als
+      einem Mitgliedstaat erfolgt, wenn der
+     \hyperref[itm:04-7]{Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} in mehr als einem Mitgliedstaat
+      niedergelassen ist, oder
     \label{itm:04-23a}
 
-    \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der Tätigkeiten einer einzelnen Niederlassung eines
-     \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union erfolgt, die jedoch erhebliche Auswirkungen auf
+    \item eine \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten}, die im Rahmen der
+     Tätigkeiten einer einzelnen Niederlassung eines
+     \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union erfolgt,
+      die jedoch erhebliche Auswirkungen auf
      \hyperref[itm:04-1]{betroffene Personen} in mehr als einem Mitgliedstaat hat oder haben kann;
     \label{itm:04-23b}
 
   \end{enumerate}
 
   \item „maßgeblicher und begründeter Einspruch“ einen Einspruch gegen einen Beschlussentwurf im Hinblick darauf, ob ein
-   Verstoß gegen diese Verordnung vorliegt oder ob beabsichtigte Maßnahmen gegen den \hyperref[itm:04-7]{Verantwortlichen} oder den
-   \hyperref[itm:04-8]{Auftragsverarbeiter} im Einklang mit dieser Verordnung steht, wobei aus diesem Einspruch die Tragweite der Risiken
-   klar hervorgeht, die von dem Beschlussentwurf in Bezug auf die Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen
-   Personen} und gegebenenfalls den freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union ausgehen;
+   Verstoß gegen diese Verordnung vorliegt oder ob beabsichtigte Maßnahmen gegen den \hyperref[itm:04-7]
+   {Verantwortlichen} oder den
+   \hyperref[itm:04-8]{Auftragsverarbeiter} im Einklang mit dieser Verordnung steht, wobei aus diesem Einspruch die
+    Tragweite der Risiken klar hervorgeht, die von dem Beschlussentwurf in Bezug auf die Grundrechte und
+    Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Personen} und gegebenenfalls den freien Verkehr \hyperref
+    [itm:04-1]{personenbezogener Daten} in der Union ausgehen;
   \label{itm:04-27}
  
   \item „Dienst der Informationsgesellschaft“ eine Dienstleistung im Sinne des Artikels 1 Nummer 1 Buchstabe b der
@@ -203,11 +224,11 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
 
 \begin{itemize}
 
-  \item zur Ziffer 12 -- klären: Liegt eine \hyperref[itm:04-12]{Verletzung des Schutzes} nur dann vor, wenn ein tatsächlicher Vorfall
-  eingetroffen ist?
+  \item zur Ziffer 12 -- klären: Liegt eine \hyperref[itm:04-12]{Verletzung des Schutzes} nur dann vor, wenn ein
+   tatsächlicher Vorfall eingetroffen ist?
 
   \item zur Ziffer 14 -- klären: Fallen schon die reinen Gesichtsbilder darunter oder müssen es biometrisch
-  aufgeschlüsselte Daten sein?
+   aufgeschlüsselte Daten sein?
 
   \item Die in Ziffer 25 referenzierte 
    \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32015L1535&qid=1659177673712&from=DE}{Richtlinie
