--- a/artikel/13.tex
+++ b/artikel/13.tex
@@ -6,32 +6,39 @@
 
 \begin{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der \hyperref[itm:04-7]{Verantwortliche} der \hyperref[itm:04-1]{betroffenen
-   Person} zum Zeitpunkt der Erhebung dieser Daten Folgendes mit:
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so
+   teilt der \hyperref[itm:04-7]{Verantwortliche} der \hyperref[itm:04-1]{betroffenen Person} zum Zeitpunkt der
+   Erhebung dieser Daten Folgendes mit:
   \label{itm:13-1}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines \hyperref[itm:04-17]{Vertreters};
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines \hyperref
+     [itm:04-17]{Vertreters};
     \label{itm:13-1a}
 
     \item gegebenenfalls die Kontaktdaten des Datenschutzbeauftragten;
     \label{itm:13-1b}
 
-    \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die Rechtsgrundlage für die
+    \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die
+     Rechtsgrundlage für die
      \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:13-1c}
 
-    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
-     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-10]{Dritten} verfolgt werden;
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht,
+     die berechtigten Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-10]
+     {Dritten} verfolgt werden;
     \label{itm:13-1d}
 
-    \item gegebenenfalls die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern} der \hyperref[itm:04-1]{personenbezogenen Daten} und
+    \item gegebenenfalls die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]
+     {Empfängern} der \hyperref[itm:04-1]{personenbezogenen Daten} und
     \label{itm:13-1e}
 
-    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder eine
+    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]
+     {personenbezogenen Daten} an ein Drittland oder eine
      \hyperref[itm:04-29]{internationale Organisation} zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
-     Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
+      Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46}
+      oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
       geeigneten oder angemessenen Garantien und die Möglichkeit, wie eine Kopie von ihnen zu erhalten ist, oder wo sie
       verfügbar sind.
@@ -39,46 +46,52 @@
 
   \end{enumerate}
 
-  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:13-1]{Absatz 1} stellt der \hyperref[itm:04-7]{Verantwortliche} der \hyperref[itm:04-1]{betroffenen
-   Person} zum Zeitpunkt der Erhebung dieser Daten folgende weitere Informationen zur Verfügung, die notwendig sind, um
-   eine faire und transparente \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten:
+  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:13-1]{Absatz 1} stellt der \hyperref[itm:04-7]
+   {Verantwortliche} der \hyperref[itm:04-1]{betroffenen Person} zum Zeitpunkt der Erhebung dieser Daten folgende
+   weitere Informationen zur Verfügung, die notwendig sind, um eine faire und transparente \hyperref[itm:04-2]
+   {Verarbeitung} zu gewährleisten:
   \label{itm:13-2}
 
   \begin{enumerate}
   
-    \item die Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden oder, falls dies nicht möglich ist, die
-     Kriterien für die Festlegung dieser Dauer;
+    \item die Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden oder, falls dies nicht
+     möglich ist, die Kriterien für die Festlegung dieser Dauer;
     \label{itm:13-2a}
 
-    \item das Bestehen eines Rechts auf Auskunft seitens des \hyperref[itm:04-7]{Verantwortlichen} über die betreffenden personenbezogenen
-     Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} oder eines Widerspruchsrechts
-     gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf Datenübertragbarkeit;
+    \item das Bestehen eines Rechts auf Auskunft seitens des \hyperref[itm:04-7]{Verantwortlichen} über die betreffenden
+     personenbezogenen Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der
+     Verarbeitung} oder eines Widerspruchsrechts gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf
+     Datenübertragbarkeit;
     \label{itm:13-2b}
 
-    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]
-     {Artikel 9 Absatz 2 Buchstabe a} beruht, das Bestehen eines Rechts, die \hyperref[itm:04-11]{Einwilligung} jederzeit zu widerrufen, ohne
-     dass die Rechtmäßigkeit der aufgrund der \hyperref[itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a}
+     oder \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} beruht, das Bestehen eines Rechts, die \hyperref
+     [itm:04-11]{Einwilligung} jederzeit zu widerrufen, ohne dass die Rechtmäßigkeit der aufgrund der \hyperref
+     [itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
     \label{itm:13-2c}
 
     \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:13-2d}
 
-    \item ob die Bereitstellung der \hyperref[itm:04-1]{personenbezogenen Daten} gesetzlich oder vertraglich vorgeschrieben oder für einen
-     Vertragsabschluss erforderlich ist, ob die \hyperref[itm:04-1]{betroffene Person} verpflichtet ist, die \hyperref[itm:04-1]{personenbezogenen Daten}
-     bereitzustellen, und welche mögliche Folgen die Nichtbereitstellung hätte und
+    \item ob die Bereitstellung der \hyperref[itm:04-1]{personenbezogenen Daten} gesetzlich oder vertraglich
+     vorgeschrieben oder für einen Vertragsabschluss erforderlich ist, ob die \hyperref[itm:04-1]{betroffene Person}
+     verpflichtet ist, die \hyperref[itm:04-1]{personenbezogenen Daten} bereitzustellen, und welche mögliche Folgen die
+     Nichtbereitstellung hätte und
     \label{itm:13-2e}
 
-    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich \hyperref[itm:04-4]{Profiling} gemäß \hyperref[ch:22]
-     {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
-     aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]{betroffene Person}.
+    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich \hyperref[itm:04-4]
+     {Profiling} gemäß \hyperref[ch:22]{Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und --
+     zumindest in diesen Fällen -- aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die
+     angestrebten Auswirkungen einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]
+     {betroffene Person}.
     \label{itm:13-2f}
 
   \end{enumerate}
 
-  \item Beabsichtigt der \hyperref[itm:04-7]{Verantwortliche}, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
-   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser
-   Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
+  \item Beabsichtigt der \hyperref[itm:04-7]{Verantwortliche}, die \hyperref[itm:04-1]{personenbezogenen Daten} für
+   einen anderen Zweck weiterzuverarbeiten als den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
+   wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser Weiterverarbeitung Informationen über
+   diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:13-2]{Absatz 2} zur Verfügung.
   \label{itm:13-3}  
 
