--- a/artikel/14.tex
+++ b/artikel/14.tex
@@ -6,31 +6,36 @@
 
 \begin{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person} erhoben, so teilt der \hyperref[itm:04-7]{Verantwortliche} der
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person}
+   erhoben, so teilt der \hyperref[itm:04-7]{Verantwortliche} der
    \hyperref[itm:04-1]{betroffenen Person} Folgendes mit:
   \label{itm:14-1}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines \hyperref[itm:04-17]{Vertreters};
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} sowie gegebenenfalls seines \hyperref
+     [itm:04-17]{Vertreters};
     \label{itm:14-1a}
 
     \item zusätzlich die Kontaktdaten des Datenschutzbeauftragten;
     \label{itm:14-1b}
 
-    \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die Rechtsgrundlage für die
+    \item die Zwecke, für die die \hyperref[itm:04-1]{personenbezogenen Daten} verarbeitet werden sollen, sowie die
+     Rechtsgrundlage für die
      \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:14-1c}
 
     \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die verarbeitet werden;
     \label{itm:14-1d}
 
-    \item gegebenenfalls die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern} der \hyperref[itm:04-1]{personenbezogenen Daten};
+    \item gegebenenfalls die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]
+     {Empfängern} der \hyperref[itm:04-1]{personenbezogenen Daten};
     \label{itm:14-1e}
 
-    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]{personenbezogenen Daten} an einen \hyperref[itm:04-9]{Empfänger} in einem
-     Drittland oder einer internationalen Organisation zu übermitteln, sowie das Vorhandensein oder das Fehlen eines
-     Angemessenheitsbeschlusses der Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
+    \item gegebenenfalls die Absicht des \hyperref[itm:04-7]{Verantwortlichen}, die \hyperref[itm:04-1]
+     {personenbezogenen Daten} an einen \hyperref[itm:04-9]{Empfänger} in einem Drittland oder einer internationalen
+     Organisation zu übermitteln, sowie das Vorhandensein oder das Fehlen eines Angemessenheitsbeschlusses der
+     Kommission oder im Falle von Übermittlungen gemäß \hyperref[ch:46]{Artikel 46} oder
      \hyperref[ch:47]{Artikel 47} oder \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} einen Verweis auf die
       geeigneten oder angemessenen Garantien und die Möglichkeit, eine Kopie von ihnen zu erhalten, oder wo sie
       verfügbar sind.
@@ -38,69 +43,76 @@
 
   \end{enumerate}
 
-  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:14-1]{Absatz 1} stellt der \hyperref[itm:04-7]{Verantwortliche} der \hyperref[itm:04-1]{betroffenen
-   Person} die folgenden Informationen zur Verfügung, die erforderlich sind, um der \hyperref[itm:04-1]{betroffenen Person} gegenüber eine
-   faire und transparente \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten:
+  \item Zusätzlich zu den Informationen gemäß \hyperref[itm:14-1]{Absatz 1} stellt der \hyperref[itm:04-7]
+   {Verantwortliche} der \hyperref[itm:04-1]{betroffenen Person} die folgenden Informationen zur Verfügung, die
+   erforderlich sind, um der \hyperref[itm:04-1]{betroffenen Person} gegenüber eine faire und transparente \hyperref
+   [itm:04-2]{Verarbeitung} zu gewährleisten:
   \label{itm:14-2}
 
   \begin{enumerate}
   
-    \item die Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden oder, falls dies nicht möglich ist, die
-     Kriterien für die Festlegung dieser Dauer;
+    \item die Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden oder, falls dies nicht
+     möglich ist, die Kriterien für die Festlegung dieser Dauer;
     \label{itm:14-2a}
 
-    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht, die berechtigten
-     Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-10]{Dritten} verfolgt werden;
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1f]{Artikel 6 Absatz 1 Buchstabe f} beruht,
+     die berechtigten Interessen, die von dem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-10]
+     {Dritten} verfolgt werden;
     \label{itm:14-2b}
 
-    \item das Bestehen eines Rechts auf Auskunft seitens des \hyperref[itm:04-7]{Verantwortlichen} über die betreffenden personenbezogenen
-     Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der Verarbeitung} und eines Widerspruchsrechts
-     gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf Datenübertragbarkeit;
+    \item das Bestehen eines Rechts auf Auskunft seitens des \hyperref[itm:04-7]{Verantwortlichen} über die betreffenden
+     personenbezogenen Daten sowie auf Berichtigung oder Löschung oder auf \hyperref[itm:04-3]{Einschränkung der
+     Verarbeitung} und eines Widerspruchsrechts gegen die \hyperref[itm:04-2]{Verarbeitung} sowie des Rechts auf
+     Datenübertragbarkeit;
     \label{itm:14-2c}
 
-    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder \hyperref[itm:09-2a]
-     {Artikel 9 Absatz 2 Buchstabe a} beruht, das Bestehen eines Rechts, die \hyperref[itm:04-11]{Einwilligung} jederzeit zu widerrufen, ohne
-     dass die Rechtmäßigkeit der aufgrund der \hyperref[itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
+    \item wenn die \hyperref[itm:04-2]{Verarbeitung} auf \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a}
+     oder \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} beruht, das Bestehen eines Rechts, die \hyperref
+     [itm:04-11]{Einwilligung} jederzeit zu widerrufen, ohne dass die Rechtmäßigkeit der aufgrund der \hyperref
+     [itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} berührt wird;
     \label{itm:14-2d}
 
     \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:14-2e}
 
-    \item aus welcher Quelle die \hyperref[itm:04-1]{personenbezogenen Daten} stammen und gegebenenfalls ob sie aus öffentlich zugänglichen
-     Quellen stammen;
+    \item aus welcher Quelle die \hyperref[itm:04-1]{personenbezogenen Daten} stammen und gegebenenfalls ob sie aus
+     öffentlich zugänglichen Quellen stammen;
     \label{itm:14-2f}
 
-    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich \hyperref[itm:04-4]{Profiling} gemäß \hyperref[ch:22]
-     {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
-     aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]{betroffene Person}.
+    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich \hyperref[itm:04-4]
+     {Profiling} gemäß \hyperref[ch:22]{Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und --
+     zumindest in diesen Fällen -- aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die
+     angestrebten Auswirkungen einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]
+     {betroffene Person}.
     \label{itm:14-2g}
 
   \end{enumerate}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} erteilt die Informationen gemäß den Absätzen \hyperref[itm:14-1]{1} und \hyperref[itm:14-2]
-  {2}
+  \item Der \hyperref[itm:04-7]{Verantwortliche} erteilt die Informationen gemäß den Absätzen \hyperref[itm:14-1]
+   {1} und \hyperref[itm:14-2]{2}
   \label{itm:14-3}
 
   \begin{enumerate}
   
-    \item unter Berücksichtigung der spezifischen Umstände der \hyperref[itm:04-2]{Verarbeitung} der \hyperref[itm:04-1]{personenbezogenen Daten} innerhalb einer
-     angemessenen Frist nach Erlangung der \hyperref[itm:04-1]{personenbezogenen Daten}, längstens jedoch innerhalb eines Monats,
+    \item unter Berücksichtigung der spezifischen Umstände der \hyperref[itm:04-2]{Verarbeitung} der \hyperref[itm:04-1]
+     {personenbezogenen Daten} innerhalb einer angemessenen Frist nach Erlangung der \hyperref[itm:04-1]
+     {personenbezogenen Daten}, längstens jedoch innerhalb eines Monats,
     \label{itm:14-3a}
 
-    \item falls die \hyperref[itm:04-1]{personenbezogenen Daten} zur Kommunikation mit der \hyperref[itm:04-1]{betroffenen Person} verwendet werden sollen,
-     spätestens zum Zeitpunkt der ersten Mitteilung an sie, oder,
+    \item falls die \hyperref[itm:04-1]{personenbezogenen Daten} zur Kommunikation mit der \hyperref[itm:04-1]
+     {betroffenen Person} verwendet werden sollen, spätestens zum Zeitpunkt der ersten Mitteilung an sie, oder,
     \label{itm:14-3b}
 
-    \item falls die Offenlegung an einen anderen \hyperref[itm:04-9]{Empfänger} beabsichtigt ist, spätestens zum Zeitpunkt der ersten
-     Offenlegung.
+    \item falls die Offenlegung an einen anderen \hyperref[itm:04-9]{Empfänger} beabsichtigt ist, spätestens zum
+     Zeitpunkt der ersten Offenlegung.
     \label{itm:14-3c}
 
   \end{enumerate}
 
-  \item Beabsichtigt der \hyperref[itm:04-7]{Verantwortliche}, die \hyperref[itm:04-1]{personenbezogenen Daten} für einen anderen Zweck weiterzuverarbeiten als
-   den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erlangt wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser
-   Weiterverarbeitung Informationen über diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
+  \item Beabsichtigt der \hyperref[itm:04-7]{Verantwortliche}, die \hyperref[itm:04-1]{personenbezogenen Daten} für
+   einen anderen Zweck weiterzuverarbeiten als den, für den die \hyperref[itm:04-1]{personenbezogenen Daten} erlangt
+   wurden, so stellt er der \hyperref[itm:04-1]{betroffenen Person} vor dieser Weiterverarbeitung Informationen über
+   diesen anderen Zweck und alle anderen maßgeblichen Informationen gemäß
    \hyperref[itm:14-2]{Absatz 2} zur Verfügung.
   \label{itm:14-4}
 
@@ -113,23 +125,25 @@
     \label{itm:14-5a}
 
     \item die Erteilung dieser Informationen sich als unmöglich erweist oder einen unverhältnismäßigen Aufwand erfordern
-     würde; dies gilt insbesondere für die \hyperref[itm:04-2]{Verarbeitung} für im öffentlichen Interesse liegende Archivzwecke, für
-     wissenschaftliche oder historische Forschungszwecke oder für statistische Zwecke vorbehaltlich der in
+     würde; dies gilt insbesondere für die \hyperref[itm:04-2]{Verarbeitung} für im öffentlichen Interesse liegende
+     Archivzwecke, für wissenschaftliche oder historische Forschungszwecke oder für statistische Zwecke vorbehaltlich
+     der in
      \hyperref[itm:89-1]{Artikel 89 Absatz 1} genannten Bedingungen und Garantien oder soweit die in \hyperref[itm:14-1]
       {Absatz 1 des vorliegenden Artikels} genannte Pflicht voraussichtlich die Verwirklichung der Ziele dieser
-      \hyperref[itm:04-2]{Verarbeitung} unmöglich macht oder ernsthaft beeinträchtigt In diesen Fällen ergreift der \hyperref[itm:04-7]{Verantwortliche}
-      geeignete Maßnahmen zum Schutz der Rechte und Freiheiten sowie der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
-      Person}, einschließlich der Bereitstellung dieser Informationen für die Öffentlichkeit,
+      \hyperref[itm:04-2]{Verarbeitung} unmöglich macht oder ernsthaft beeinträchtigt In diesen Fällen ergreift
+       der \hyperref[itm:04-7]{Verantwortliche} geeignete Maßnahmen zum Schutz der Rechte und Freiheiten sowie der
+       berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Person}, einschließlich der Bereitstellung dieser
+       Informationen für die Öffentlichkeit,
     \label{itm:14-5b}
 
     \item die Erlangung oder Offenlegung durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der
-     \hyperref[itm:04-7]{Verantwortliche} unterliegt und die geeignete Maßnahmen zum Schutz der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen
-     Person} vorsehen, ausdrücklich geregelt ist oder
+     \hyperref[itm:04-7]{Verantwortliche} unterliegt und die geeignete Maßnahmen zum Schutz der berechtigten Interessen
+      der \hyperref[itm:04-1]{betroffenen Person} vorsehen, ausdrücklich geregelt ist oder
     \label{itm:14-5c}
 
-    \item die \hyperref[itm:04-1]{personenbezogenen Daten} gemäß dem Unionsrecht oder dem Recht der Mitgliedstaaten dem Berufsgeheimnis,
-     einschließlich einer satzungsmäßigen Geheimhaltungspflicht, unterliegen und daher vertraulich behandelt werden
-     müssen.
+    \item die \hyperref[itm:04-1]{personenbezogenen Daten} gemäß dem Unionsrecht oder dem Recht der Mitgliedstaaten dem
+     Berufsgeheimnis, einschließlich einer satzungsmäßigen Geheimhaltungspflicht, unterliegen und daher vertraulich
+     behandelt werden müssen.
     \label{itm:14-5d}
 
   \end{enumerate}
