--- a/artikel/15.tex
+++ b/artikel/15.tex
@@ -6,9 +6,10 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} eine Bestätigung darüber zu verlangen, ob sie
-   betreffende \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet werden; ist dies der Fall, so hat sie ein Recht auf Auskunft über
-   diese \hyperref[itm:04-1]{personenbezogenen Daten} und auf folgende Informationen:
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} eine
+   Bestätigung darüber zu verlangen, ob sie betreffende \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet werden;
+   ist dies der Fall, so hat sie ein Recht auf Auskunft über diese \hyperref[itm:04-1]{personenbezogenen Daten} und auf
+   folgende Informationen:
   \label{itm:15-1}
 
   \begin{enumerate}
@@ -19,44 +20,49 @@
     \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die verarbeitet werden;
     \label{itm:15-1b}
 
-    \item die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern}, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden
-     sind oder noch offengelegt werden, insbesondere bei \hyperref[itm:04-9]{Empfängern} in Drittländern oder bei internationalen
-     Organisationen;
+    \item die \hyperref[itm:04-9]{Empfänger} oder Kategorien von \hyperref[itm:04-9]{Empfängern}, gegenüber denen
+     die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden sind oder noch offengelegt werden,
+     insbesondere bei \hyperref[itm:04-9]{Empfängern} in Drittländern oder bei internationalen Organisationen;
     \label{itm:15-1c}
 
-    \item falls möglich die geplante Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden, oder, falls dies
-     nicht möglich ist, die Kriterien für die Festlegung dieser Dauer;
+    \item falls möglich die geplante Dauer, für die die \hyperref[itm:04-1]{personenbezogenen Daten} gespeichert werden,
+     oder, falls dies nicht möglich ist, die Kriterien für die Festlegung dieser Dauer;
     \label{itm:15-1d}
 
-    \item das Bestehen eines Rechts auf Berichtigung oder Löschung der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} oder auf
-     \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den \hyperref[itm:04-7]{Verantwortlichen} oder eines Widerspruchsrechts gegen diese \hyperref[itm:04-2]{Verarbeitung};
+    \item das Bestehen eines Rechts auf Berichtigung oder Löschung der sie betreffenden \hyperref[itm:04-1]
+     {personenbezogenen Daten} oder auf
+     \hyperref[itm:04-3]{Einschränkung der Verarbeitung} durch den \hyperref[itm:04-7]{Verantwortlichen} oder eines
+      Widerspruchsrechts gegen diese \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:15-1e}
 
     \item das Bestehen eines Beschwerderechts bei einer \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:15-1f}
 
-    \item wenn die \hyperref[itm:04-1]{personenbezogenen Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person} erhoben werden, alle verfügbaren
-     Informationen über die Herkunft der Daten;
+    \item wenn die \hyperref[itm:04-1]{personenbezogenen Daten} nicht bei der \hyperref[itm:04-1]{betroffenen Person}
+     erhoben werden, alle verfügbaren Informationen über die Herkunft der Daten;
     \label{itm:15-1g}
 
-    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich \hyperref[itm:04-4]{Profiling} gemäß \hyperref[ch:22]
-     {Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und -- zumindest in diesen Fällen --
-     aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die angestrebten Auswirkungen
-     einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]{betroffene Person}.
+    \item das Bestehen einer automatisierten Entscheidungsfindung einschließlich \hyperref[itm:04-4]
+     {Profiling} gemäß \hyperref[ch:22]{Artikel 22} Absätze \hyperref[itm:22-1]{1} und \hyperref[itm:22-4]{4} und --
+     zumindest in diesen Fällen -- aussagekräftige Informationen über die involvierte Logik sowie die Tragweite und die
+     angestrebten Auswirkungen einer derartigen \hyperref[itm:04-2]{Verarbeitung} für die \hyperref[itm:04-1]
+     {betroffene Person}.
     \label{itm:15-1h}
 
   \end{enumerate}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale Organisation} übermittelt, so hat die
-   \hyperref[itm:04-1]{betroffene Person} das Recht, über die geeigneten Garantien gemäß \hyperref[ch:46]{Artikel 46} im Zusammenhang mit der
-   Übermittlung unterrichtet zu werden.
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder an eine \hyperref[itm:04-29]
+   {internationale Organisation} übermittelt, so hat die
+   \hyperref[itm:04-1]{betroffene Person} das Recht, über die geeigneten Garantien gemäß \hyperref[ch:46]{Artikel 46} im
+    Zusammenhang mit der Übermittlung unterrichtet zu werden.
   \label{itm:15-2}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die Gegenstand der \hyperref[itm:04-2]{Verarbeitung} sind, zur
-   Verfügung. Für alle weiteren Kopien, die die \hyperref[itm:04-1]{betroffene Person} beantragt, kann der \hyperref[itm:04-7]{Verantwortliche} ein angemessenes
-   Entgelt auf der Grundlage der Verwaltungskosten verlangen. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag elektronisch, so
-   sind die Informationen in einem gängigen elektronischen Format zur Verfügung zu stellen, sofern sie nichts anderes
-   angibt.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} stellt eine Kopie der \hyperref[itm:04-1]{personenbezogenen Daten}, die
+   Gegenstand der \hyperref[itm:04-2]{Verarbeitung} sind, zur Verfügung. Für alle weiteren Kopien, die die \hyperref
+   [itm:04-1]{betroffene Person} beantragt, kann der \hyperref[itm:04-7]{Verantwortliche} ein angemessenes Entgelt auf
+   der Grundlage der Verwaltungskosten verlangen. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag
+   elektronisch, so sind die Informationen in einem gängigen elektronischen Format zur Verfügung zu stellen, sofern sie
+   nichts anderes angibt.
   \label{itm:15-3}
 
   \item Das Recht auf Erhalt einer Kopie gemäß \sout{Absatz 1b} \hyperref[itm:15-3]{Absatz 3} darf die Rechte und
