--- a/artikel/18.tex
+++ b/artikel/18.tex
@@ -6,40 +6,48 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]{Verantwortlichen} die \hyperref[itm:04-3]{Einschränkung der Verarbeitung} zu verlangen,
-   wenn eine der folgenden Voraussetzungen gegeben ist:
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, von dem \hyperref[itm:04-7]
+   {Verantwortlichen} die \hyperref[itm:04-3]{Einschränkung der Verarbeitung} zu verlangen, wenn eine der folgenden
+   Voraussetzungen gegeben ist:
   \label{itm:18-1}
 
   \begin{enumerate}
   
-    \item die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} von der \hyperref[itm:04-1]{betroffenen Person} bestritten wird, und zwar für eine
-     Dauer, die es dem \hyperref[itm:04-7]{Verantwortlichen} ermöglicht, die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} zu überprüfen,
+    \item die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} von der \hyperref[itm:04-1]
+     {betroffenen Person} bestritten wird, und zwar für eine Dauer, die es dem \hyperref[itm:04-7]
+     {Verantwortlichen} ermöglicht, die Richtigkeit der \hyperref[itm:04-1]{personenbezogenen Daten} zu überprüfen,
     \label{itm:18-1a}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} unrechtmäßig ist und die \hyperref[itm:04-1]{betroffene Person} die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ablehnt
-     und stattdessen die Einschränkung der Nutzung der \hyperref[itm:04-1]{personenbezogenen Daten} verlangt;
+    \item die \hyperref[itm:04-2]{Verarbeitung} unrechtmäßig ist und die \hyperref[itm:04-1]{betroffene Person} die
+     Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ablehnt und stattdessen die Einschränkung der Nutzung
+     der \hyperref[itm:04-1]{personenbezogenen Daten} verlangt;
     \label{itm:18-1b}
 
-    \item der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{personenbezogenen Daten} für die Zwecke der \hyperref[itm:04-2]{Verarbeitung} nicht länger benötigt, die
-     \hyperref[itm:04-1]{betroffene Person} sie jedoch zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen benötigt, oder
+    \item der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{personenbezogenen Daten} für die Zwecke
+     der \hyperref[itm:04-2]{Verarbeitung} nicht länger benötigt, die
+     \hyperref[itm:04-1]{betroffene Person} sie jedoch zur Geltendmachung, Ausübung oder Verteidigung von
+      Rechtsansprüchen benötigt, oder
     \label{itm:18-1c}
 
-    \item die \hyperref[itm:04-1]{betroffene Person} Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1}
-     eingelegt hat, solange noch nicht feststeht, ob die berechtigten Gründe des \hyperref[itm:04-7]{Verantwortlichen} gegenüber denen der
+    \item die \hyperref[itm:04-1]{betroffene Person} Widerspruch gegen die \hyperref[itm:04-2]
+     {Verarbeitung} gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1} eingelegt hat, solange noch nicht feststeht, ob die
+     berechtigten Gründe des \hyperref[itm:04-7]{Verantwortlichen} gegenüber denen der
      \hyperref[itm:04-1]{betroffenen Person} überwiegen.
     \label{itm:18-1d}
 
   \end{enumerate}
 
-  \item Wurde die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:18-1]{Absatz 1} eingeschränkt, so dürfen diese \hyperref[itm:04-1]{personenbezogenen Daten}
-   -- von ihrer Speicherung abgesehen -- nur mit \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} oder zur Geltendmachung, Ausübung
-   oder Verteidigung von Rechtsansprüchen oder zum Schutz der Rechte einer anderen natürlichen oder juristischen
-   Person oder aus Gründen eines wichtigen öffentlichen Interesses der Union oder eines Mitgliedstaats verarbeitet
-   werden.
+  \item Wurde die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:18-1]{Absatz 1} eingeschränkt, so dürfen
+   diese \hyperref[itm:04-1]{personenbezogenen Daten}
+   -- von ihrer Speicherung abgesehen -- nur mit \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]
+      {betroffenen Person} oder zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen oder zum Schutz der
+      Rechte einer anderen natürlichen oder juristischen Person oder aus Gründen eines wichtigen öffentlichen
+      Interesses der Union oder eines Mitgliedstaats verarbeitet werden.
   \label{itm:18-2}
 
-  \item Eine \hyperref[itm:04-1]{betroffene Person}, die eine \hyperref[itm:04-3]{Einschränkung der Verarbeitung} gemäß \hyperref[itm:18-1]{Absatz 1} erwirkt hat,
-   wird von dem \hyperref[itm:04-7]{Verantwortlichen} unterrichtet, bevor die Einschränkung aufgehoben wird.
+  \item Eine \hyperref[itm:04-1]{betroffene Person}, die eine \hyperref[itm:04-3]{Einschränkung der Verarbeitung}
+   gemäß \hyperref[itm:18-1]{Absatz 1} erwirkt hat, wird von dem \hyperref[itm:04-7]{Verantwortlichen} unterrichtet,
+   bevor die Einschränkung aufgehoben wird.
   \label{itm:18-3}
 
 \end{enumerate}
