--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -6,7 +6,8 @@
 
 \begin{enumerate}
 
-  \item In den Fällen gemäß \hyperref[itm:03-2]{Artikel 3 Absatz 2} benennt der \hyperref[itm:04-7]{Verantwortliche} oder der
+  \item In den Fällen gemäß \hyperref[itm:03-2]{Artikel 3 Absatz 2} benennt der \hyperref[itm:04-7]
+   {Verantwortliche} oder der
    \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich einen \hyperref[itm:04-17]{Vertreter} in der Union.
   \label{itm:27-1}
 
@@ -15,11 +16,13 @@
 
   \begin{enumerate}
   
-    \item eine \hyperref[itm:04-2]{Verarbeitung}, die gelegentlich erfolgt, nicht die umfangreiche \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien im
-     Sinne des \hyperref[itm:09-1]{Artikels 9 Absatz 1} oder die umfangreiche \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten}
-     über strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10} einschließt und
-     unter Berücksichtigung der Art, der Umstände, des Umfangs und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} voraussichtlich nicht zu
-     einem Risiko für die Rechte und Freiheiten natürlicher Personen führt, oder
+    \item eine \hyperref[itm:04-2]{Verarbeitung}, die gelegentlich erfolgt, nicht die umfangreiche \hyperref[itm:04-2]
+     {Verarbeitung} besonderer Datenkategorien im Sinne des \hyperref[itm:09-1]{Artikels 9 Absatz 1} oder die
+     umfangreiche \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} über
+     strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10} einschließt und unter
+     Berücksichtigung der Art, der Umstände, des Umfangs und der Zwecke der \hyperref[itm:04-2]
+     {Verarbeitung} voraussichtlich nicht zu einem Risiko für die Rechte und Freiheiten natürlicher Personen führt,
+     oder
     \label{itm:27-2a}
 
     \item Behörden oder öffentliche Stellen.
@@ -27,18 +30,22 @@
 
   \end{enumerate}
 
-  \item Der \hyperref[itm:04-17]{Vertreter} muss in einem der Mitgliedstaaten niedergelassen sein, in denen die \hyperref[itm:04-1]{betroffenen Personen}, deren
-   \hyperref[itm:04-1]{personenbezogene Daten} im Zusammenhang mit den ihnen angebotenen Waren oder Dienstleistungen verarbeitet werden oder
-   deren Verhalten beobachtet wird, sich befinden.
+  \item Der \hyperref[itm:04-17]{Vertreter} muss in einem der Mitgliedstaaten niedergelassen sein, in denen
+   die \hyperref[itm:04-1]{betroffenen Personen}, deren
+   \hyperref[itm:04-1]{personenbezogene Daten} im Zusammenhang mit den ihnen angebotenen Waren oder Dienstleistungen
+    verarbeitet werden oder deren Verhalten beobachtet wird, sich befinden.
   \label{itm:27-3}
 
-  \item Der \hyperref[itm:04-17]{Vertreter} wird durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} beauftragt, zusätzlich zu diesem oder
-   an seiner Stelle insbesondere für \hyperref[itm:04-21]{Aufsichtsbehörden} und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
-   mit der \hyperref[itm:04-2]{Verarbeitung} zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu dienen.
+  \item Der \hyperref[itm:04-17]{Vertreter} wird durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref
+   [itm:04-8]{Auftragsverarbeiter} beauftragt, zusätzlich zu diesem oder an seiner Stelle insbesondere für \hyperref
+   [itm:04-21]{Aufsichtsbehörden} und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
+   mit der \hyperref[itm:04-2]{Verarbeitung} zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu
+   dienen.
   \label{itm:27-4}
 
-  \item Die Benennung eines \hyperref[itm:04-17]{Vertreters} durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} erfolgt unbeschadet
-   etwaiger rechtlicher Schritte gegen den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} selbst.
+  \item Die Benennung eines \hyperref[itm:04-17]{Vertreters} durch den \hyperref[itm:04-7]{Verantwortlichen} oder
+   den \hyperref[itm:04-8]{Auftragsverarbeiter} erfolgt unbeschadet etwaiger rechtlicher Schritte gegen den \hyperref
+   [itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} selbst.
   \label{itm:27-5}
 
 \end{enumerate}
