--- a/artikel/29.tex
+++ b/artikel/29.tex
@@ -4,9 +4,11 @@
 
 \addsec{Text der Verordnung}
 
-Der \hyperref[itm:04-8]{Auftragsverarbeiter} und jede dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} unterstellte Person, die Zugang zu
-\hyperref[itm:04-1]{personenbezogenen Daten} hat, dürfen diese Daten ausschließlich auf Weisung des \hyperref[itm:04-7]{Verantwortlichen} verarbeiten, es sei
-denn, dass sie nach dem Unionsrecht oder dem Recht der Mitgliedstaaten zur \hyperref[itm:04-2]{Verarbeitung} verpflichtet sind.
+Der \hyperref[itm:04-8]{Auftragsverarbeiter} und jede dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref
+[itm:04-8]{Auftragsverarbeiter} unterstellte Person, die Zugang zu
+\hyperref[itm:04-1]{personenbezogenen Daten} hat, dürfen diese Daten ausschließlich auf Weisung des \hyperref[itm:04-7]
+ {Verantwortlichen} verarbeiten, es sei denn, dass sie nach dem Unionsrecht oder dem Recht der Mitgliedstaaten
+ zur \hyperref[itm:04-2]{Verarbeitung} verpflichtet sind.
 
 \addsec{Eigene Notizen}
 
