--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -7,10 +7,11 @@
 \begin{enumerate}
 
   \item Unter Berücksichtigung des Stands der Technik, der Implementierungskosten und der Art, des Umfangs, der Umstände
-   und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere des Risikos für
-   die Rechte und Freiheiten natürlicher Personen treffen der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete
-   technische und organisatorische Maßnahmen, um ein dem Risiko angemessenes Schutzniveau zu gewährleisten; diese
-   Maßnahmen schließen unter anderem Folgendes ein:
+   und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und
+   Schwere des Risikos für die Rechte und Freiheiten natürlicher Personen treffen der \hyperref[itm:04-7]
+   {Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete technische und organisatorische
+   Maßnahmen, um ein dem Risiko angemessenes Schutzniveau zu gewährleisten; diese Maßnahmen schließen unter anderem
+   Folgendes ein:
   \label{itm:32-1}
 
   \begin{enumerate}
@@ -22,8 +23,8 @@
      Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung} auf Dauer sicherzustellen;
     \label{itm:32-1b}
 
-    \item die Fähigkeit, die Verfügbarkeit der \hyperref[itm:04-1]{personenbezogenen Daten} und den Zugang zu ihnen bei einem physischen oder
-     technischen Zwischenfall rasch wiederherzustellen;
+    \item die Fähigkeit, die Verfügbarkeit der \hyperref[itm:04-1]{personenbezogenen Daten} und den Zugang zu ihnen bei
+     einem physischen oder technischen Zwischenfall rasch wiederherzustellen;
     \label{itm:32-1c}
 
     \item ein Verfahren zur regelmäßigen Überprüfung, Bewertung und Evaluierung der Wirksamkeit der technischen und
@@ -32,10 +33,11 @@
 
   \end{enumerate}
 
-  \item Bei der Beurteilung des angemessenen Schutzniveaus sind insbesondere die Risiken zu berücksichtigen, die mit der
-   \hyperref[itm:04-2]{Verarbeitung} verbunden sind, insbesondere durch -- ob unbeabsichtigt oder unrechtmäßig -- Vernichtung, Verlust,
-   Veränderung oder unbefugte Offenlegung von beziehungsweise unbefugten Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten}, die
-   übermittelt, gespeichert oder auf andere Weise verarbeitet wurden.
+  \item Bei der Beurteilung des angemessenen Schutzniveaus sind insbesondere die Risiken zu berücksichtigen, die mit
+   der
+   \hyperref[itm:04-2]{Verarbeitung} verbunden sind, insbesondere durch -- ob unbeabsichtigt oder unrechtmäßig --
+    Vernichtung, Verlust, Veränderung oder unbefugte Offenlegung von beziehungsweise unbefugten Zugang zu \hyperref
+    [itm:04-1]{personenbezogenen Daten}, die übermittelt, gespeichert oder auf andere Weise verarbeitet wurden.
   \label{itm:32-2}
 
   \item Die Einhaltung genehmigter Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} oder eines genehmigten
@@ -43,9 +45,11 @@
    der in \hyperref[itm:32-1]{Absatz 1} des vorliegenden Artikels genannten Anforderungen nachzuweisen.
   \label{itm:32-3}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} unternehmen Schritte, um sicherzustellen, dass ihnen
-   unterstellte natürliche Personen, die Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten} haben, diese nur auf Anweisung des
-   \hyperref[itm:04-7]{Verantwortlichen} verarbeiten, es sei denn, sie sind nach dem Recht der Union oder der Mitgliedstaaten zur
+  \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} unternehmen Schritte,
+   um sicherzustellen, dass ihnen unterstellte natürliche Personen, die Zugang zu \hyperref[itm:04-1]
+   {personenbezogenen Daten} haben, diese nur auf Anweisung des
+   \hyperref[itm:04-7]{Verantwortlichen} verarbeiten, es sei denn, sie sind nach dem Recht der Union oder der
+    Mitgliedstaaten zur
    \hyperref[itm:04-2]{Verarbeitung} verpflichtet.
   \label{itm:32-4}
 
