--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -6,15 +6,17 @@
 
 \begin{enumerate}
 
-  \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der \hyperref[itm:04-7]{Verantwortliche} unverzüglich und
-   möglichst binnen 72 Stunden, nachdem ihm die Verletzung bekannt wurde, diese der gemäß Artikel 51 zuständigen
-   \hyperref[itm:04-21]{Aufsichtsbehörde}, es sei denn, dass die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich nicht zu
-   einem Risiko für die Rechte und Freiheiten natürlicher Personen führt. Erfolgt die Meldung an die \hyperref[itm:04-21]{Aufsichtsbehörde}
-   nicht binnen 72 Stunden, so ist ihr eine Begründung für die Verzögerung beizufügen.
+  \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der \hyperref
+   [itm:04-7]{Verantwortliche} unverzüglich und möglichst binnen 72 Stunden, nachdem ihm die Verletzung bekannt wurde,
+   diese der gemäß Artikel 51 zuständigen
+   \hyperref[itm:04-21]{Aufsichtsbehörde}, es sei denn, dass die \hyperref[itm:04-12]{Verletzung des Schutzes
+    personenbezogener Daten} voraussichtlich nicht zu einem Risiko für die Rechte und Freiheiten natürlicher Personen
+    führt. Erfolgt die Meldung an die \hyperref[itm:04-21]{Aufsichtsbehörde} nicht binnen 72 Stunden, so ist ihr eine
+    Begründung für die Verzögerung beizufügen.
   \label{itm:33-1}
 
-  \item Wenn dem \hyperref[itm:04-8]{Auftragsverarbeiter} eine \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} bekannt wird, meldet er diese
-   dem \hyperref[itm:04-7]{Verantwortlichen} unverzüglich.
+  \item Wenn dem \hyperref[itm:04-8]{Auftragsverarbeiter} eine \hyperref[itm:04-12]{Verletzung des Schutzes
+   personenbezogener Daten} bekannt wird, meldet er diese dem \hyperref[itm:04-7]{Verantwortlichen} unverzüglich.
   \label{itm:33-2}
 
   \item Die Meldung gemäß \hyperref[itm:33-1]{Absatz 1} enthält zumindest folgende Informationen:
@@ -22,33 +24,37 @@
 
   \begin{enumerate}
   
-    \item eine Beschreibung der Art der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}, soweit möglich mit Angabe der
-     Kategorien und der ungefähren Zahl der \hyperref[itm:04-1]{betroffenen Personen}, der betroffenen Kategorien und der ungefähren Zahl
-     der betroffenen \hyperref[itm:04-1]{personenbezogenen Daten}sätze;
+    \item eine Beschreibung der Art der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}, soweit
+     möglich mit Angabe der Kategorien und der ungefähren Zahl der \hyperref[itm:04-1]{betroffenen Personen}, der
+     betroffenen Kategorien und der ungefähren Zahl der betroffenen \hyperref[itm:04-1]{personenbezogenen Daten}sätze;
     \label{itm:33-3a}
 
     \item den Namen und die Kontaktdaten des Datenschutzbeauftragten oder einer sonstigen Anlaufstelle für weitere
      Informationen;
     \label{itm:33-3b}
 
-    \item eine Beschreibung der wahrscheinlichen Folgen der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten};
+    \item eine Beschreibung der wahrscheinlichen Folgen der \hyperref[itm:04-12]{Verletzung des Schutzes
+     personenbezogener Daten};
     \label{itm:33-3c}
 
-    \item eine Beschreibung der von dem \hyperref[itm:04-7]{Verantwortlichen} ergriffenen oder vorgeschlagenen Maßnahmen zur Behebung der
-     \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} und gegebenenfalls Maßnahmen zur Abmilderung ihrer möglichen
-     nachteiligen Auswirkungen.
+    \item eine Beschreibung der von dem \hyperref[itm:04-7]{Verantwortlichen} ergriffenen oder vorgeschlagenen Maßnahmen
+     zur Behebung der
+     \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} und gegebenenfalls Maßnahmen zur Abmilderung
+      ihrer möglichen nachteiligen Auswirkungen.
     \label{itm:33-3d}
 
   \end{enumerate}
 
-  \item Wenn und soweit die Informationen nicht zur gleichen Zeit bereitgestellt werden können, kann der \hyperref[itm:04-7]{Verantwortliche}
-   diese Informationen ohne unangemessene weitere Verzögerung schrittweise zur Verfügung stellen.
+  \item Wenn und soweit die Informationen nicht zur gleichen Zeit bereitgestellt werden können, kann der \hyperref
+   [itm:04-7]{Verantwortliche} diese Informationen ohne unangemessene weitere Verzögerung schrittweise zur Verfügung
+   stellen.
   \label{itm:33-4}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} dokumentiert \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} einschließlich aller im
-   Zusammenhang mit der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} stehenden Fakten, von deren Auswirkungen und
-   der ergriffenen Abhilfemaßnahmen. Diese Dokumentation muss der \hyperref[itm:04-21]{Aufsichtsbehörde} die Überprüfung der Einhaltung der
-   Bestimmungen dieses Artikels ermöglichen.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} dokumentiert \hyperref[itm:04-12]{Verletzungen des Schutzes
+   personenbezogener Daten} einschließlich aller im Zusammenhang mit der \hyperref[itm:04-12]{Verletzung des Schutzes
+   personenbezogener Daten} stehenden Fakten, von deren Auswirkungen und der ergriffenen Abhilfemaßnahmen. Diese
+   Dokumentation muss der \hyperref[itm:04-21]{Aufsichtsbehörde} die Überprüfung der Einhaltung der Bestimmungen dieses
+   Artikels ermöglichen.
   \label{itm:33-5}
 
 \end{enumerate}
