--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -6,46 +6,49 @@
 
 \begin{enumerate}
 
-  \item Hat die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich ein hohes Risiko für die persönlichen
-   Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{betroffene Person}
-   unverzüglich von der Verletzung.
+  \item Hat die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich ein hohes Risiko
+   für die persönlichen Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der \hyperref[itm:04-7]
+   {Verantwortliche} die \hyperref[itm:04-1]{betroffene Person} unverzüglich von der Verletzung.
   \label{itm:34-1}
 
-  \item Die in \hyperref[itm:34-1]{Absatz 1} genannte Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} beschreibt in klarer und
-   einfacher Sprache die Art der \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} und enthält zumindest die in
+  \item Die in \hyperref[itm:34-1]{Absatz 1} genannte Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person}
+   beschreibt in klarer und einfacher Sprache die Art der \hyperref[itm:04-12]{Verletzung des Schutzes
+   personenbezogener Daten} und enthält zumindest die in
    \hyperref[itm:33-3]{Artikel 33 Absatz 3} Buchstaben \hyperref[itm:33-3b]{b}, \hyperref[itm:33-3c]{c} und \hyperref
     [itm:33-3d]{d} genannten Informationen und Maßnahmen.
   \label{itm:34-2}
 
-  \item Die Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} gemäß \hyperref[itm:34-1]{Absatz 1} ist nicht erforderlich, wenn eine der folgenden
-   Bedingungen erfüllt ist:
+  \item Die Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} gemäß \hyperref[itm:34-1]{Absatz 1} ist nicht
+   erforderlich, wenn eine der folgenden Bedingungen erfüllt ist:
   \label{itm:34-3}
 
   \begin{enumerate}
   
-    \item der \hyperref[itm:04-7]{Verantwortliche} geeignete technische und organisatorische Sicherheitsvorkehrungen getroffen hat und diese
-     Vorkehrungen auf die von der Verletzung betroffenen \hyperref[itm:04-1]{personenbezogenen Daten} angewandt wurden, insbesondere solche,
-     durch die die \hyperref[itm:04-1]{personenbezogenen Daten} für alle Personen, die nicht zum Zugang zu den \hyperref[itm:04-1]{personenbezogenen Daten}
-     befugt sind, unzugänglich gemacht werden, etwa durch Verschlüsselung;
+    \item der \hyperref[itm:04-7]{Verantwortliche} geeignete technische und organisatorische Sicherheitsvorkehrungen
+     getroffen hat und diese Vorkehrungen auf die von der Verletzung betroffenen \hyperref[itm:04-1]
+     {personenbezogenen Daten} angewandt wurden, insbesondere solche, durch die die \hyperref[itm:04-1]
+     {personenbezogenen Daten} für alle Personen, die nicht zum Zugang zu den \hyperref[itm:04-1]
+     {personenbezogenen Daten} befugt sind, unzugänglich gemacht werden, etwa durch Verschlüsselung;
     \label{itm:34-3a}
 
-    \item der \hyperref[itm:04-7]{Verantwortliche} durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe Risiko für die Rechte und
-     Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:34-1]{Absatz 1} aller Wahrscheinlichkeit nach nicht mehr
-     besteht;
+    \item der \hyperref[itm:04-7]{Verantwortliche} durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe Risiko
+     für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:34-1]{Absatz 1}
+     aller Wahrscheinlichkeit nach nicht mehr besteht;
     \label{itm:34-3b}
 
     \item dies mit einem unverhältnismäßigen Aufwand verbunden wäre. In diesem Fall hat stattdessen eine öffentliche
-     Bekanntmachung oder eine ähnliche Maßnahme zu erfolgen, durch die die \hyperref[itm:04-1]{betroffenen Personen} vergleichbar wirksam
-     informiert werden.
+     Bekanntmachung oder eine ähnliche Maßnahme zu erfolgen, durch die die \hyperref[itm:04-1]{betroffenen Personen}
+     vergleichbar wirksam informiert werden.
     \label{itm:34-3c}
 
   \end{enumerate}
 
-  \item Wenn der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{betroffene Person} nicht bereits über die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener
-   Daten} benachrichtigt hat, kann die \hyperref[itm:04-21]{Aufsichtsbehörde} unter Berücksichtigung der Wahrscheinlichkeit, mit der die
-   \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu einem hohen Risiko führt, von dem \hyperref[itm:04-7]{Verantwortlichen} verlangen,
-   dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass bestimmte der in \hyperref[itm:34-3]{Absatz 3}
-   genannten Voraussetzungen erfüllt sind.
+  \item Wenn der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{betroffene Person} nicht bereits über
+   die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} benachrichtigt hat, kann die \hyperref
+   [itm:04-21]{Aufsichtsbehörde} unter Berücksichtigung der Wahrscheinlichkeit, mit der die
+   \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu einem hohen Risiko führt, von dem \hyperref
+    [itm:04-7]{Verantwortlichen} verlangen, dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass
+    bestimmte der in \hyperref[itm:34-3]{Absatz 3} genannten Voraussetzungen erfüllt sind.
   \label{itm:34-4}
 
 \end{enumerate}
