--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -6,10 +6,11 @@
 
 \begin{enumerate}
 
-  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den Artikeln \hyperref[ch:57]
-   {57} und \hyperref[ch:58]{58} kann die Überwachung der Einhaltung von Verhaltensregeln gemäß \hyperref[ch:40]
-   {Artikel 40} von einer Stelle durchgeführt werden, die über das geeignete Fachwissen hinsichtlich des Gegenstands
-   der Verhaltensregeln verfügt und die von der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} zu diesem Zweck akkreditiert wurde.
+  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den
+   Artikeln \hyperref[ch:57]{57} und \hyperref[ch:58]{58} kann die Überwachung der Einhaltung von Verhaltensregeln
+   gemäß \hyperref[ch:40]{Artikel 40} von einer Stelle durchgeführt werden, die über das geeignete Fachwissen
+   hinsichtlich des Gegenstands der Verhaltensregeln verfügt und die von der zuständigen \hyperref[itm:04-21]
+   {Aufsichtsbehörde} zu diesem Zweck akkreditiert wurde.
   \label{itm:41-1}
 
   \item Eine Stelle gemäß \hyperref[itm:41-1]{Absatz 1} kann zum Zwecke der Überwachung der Einhaltung von
@@ -22,38 +23,42 @@
      zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen hat;
     \label{itm:41-2a}
 
-    \item Verfahren festgelegt hat, die es ihr ermöglichen, zu bewerten, ob \hyperref[itm:04-7]{Verantwortliche} und \hyperref[itm:04-8]{Auftragsverarbeiter} die
-     Verhaltensregeln anwenden können, die Einhaltung der Verhaltensregeln durch die \hyperref[itm:04-7]{Verantwortlichen} und
-     \hyperref[itm:04-8]{Auftragsverarbeiter} zu überwachen und die Anwendung der Verhaltensregeln regelmäßig zu überprüfen;
+    \item Verfahren festgelegt hat, die es ihr ermöglichen, zu bewerten, ob \hyperref[itm:04-7]
+     {Verantwortliche} und \hyperref[itm:04-8]{Auftragsverarbeiter} die Verhaltensregeln anwenden können, die
+     Einhaltung der Verhaltensregeln durch die \hyperref[itm:04-7]{Verantwortlichen} und
+     \hyperref[itm:04-8]{Auftragsverarbeiter} zu überwachen und die Anwendung der Verhaltensregeln regelmäßig zu
+      überprüfen;
     \label{itm:41-2b}
 
     \item Verfahren und Strukturen festgelegt hat, mit denen sie Beschwerden über Verletzungen der Verhaltensregeln oder
-     über die Art und Weise, in der die Verhaltensregeln von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter}
-     angewendet werden oder wurden, nachgeht und diese Verfahren und Strukturen für \hyperref[itm:04-1]{betroffene Personen} und die
-     Öffentlichkeit transparent macht, und
+     über die Art und Weise, in der die Verhaltensregeln von dem \hyperref[itm:04-7]{Verantwortlichen} oder
+     dem \hyperref[itm:04-8]{Auftragsverarbeiter} angewendet werden oder wurden, nachgeht und diese Verfahren und
+     Strukturen für \hyperref[itm:04-1]{betroffene Personen} und die Öffentlichkeit transparent macht, und
     \label{itm:41-2c}
 
-    \item zur Zufriedenheit der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen hat, dass ihre Aufgaben und Pflichten nicht zu
-     einem Interessenkonflikt führen.
+    \item zur Zufriedenheit der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen hat, dass ihre Aufgaben
+     und Pflichten nicht zu einem Interessenkonflikt führen.
     \label{itm:41-2d}
 
   \end{enumerate}
 
-  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den Entwurf der Kriterien für die Akkreditierung einer Stelle nach
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den Entwurf der Kriterien für die
+   Akkreditierung einer Stelle nach
    \hyperref[itm:41-1]{Absatz 1} gemäß dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an den Ausschuss.
   \label{itm:41-3}
 
-  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} und der Bestimmungen des \hyperref
-   [part:8]{Kapitels VIII} ergreift eine Stelle gemäß \hyperref[itm:41-1]{Absatz 1} vorbehaltlich geeigneter Garantien
-   im Falle einer Verletzung der Verhaltensregeln durch einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete
-   Maßnahmen, einschließlich eines vorläufigen oder endgültigen Ausschlusses des \hyperref[itm:04-7]{Verantwortlichen} oder
-   \hyperref[itm:04-8]{Auftragsverarbeiters} von den Verhaltensregeln. Sie unterrichtet die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} über solche
-   Maßnahmen und deren Begründung.
+  \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} und der
+   Bestimmungen des \hyperref[part:8]{Kapitels VIII} ergreift eine Stelle gemäß \hyperref[itm:41-1]{Absatz 1}
+   vorbehaltlich geeigneter Garantien im Falle einer Verletzung der Verhaltensregeln durch einen \hyperref[itm:04-7]
+   {Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete Maßnahmen, einschließlich eines
+   vorläufigen oder endgültigen Ausschlusses des \hyperref[itm:04-7]{Verantwortlichen} oder
+   \hyperref[itm:04-8]{Auftragsverarbeiters} von den Verhaltensregeln. Sie unterrichtet die zuständige \hyperref
+    [itm:04-21]{Aufsichtsbehörde} über solche Maßnahmen und deren Begründung.
   \label{itm:41-4}
 
-  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} widerruft die Akkreditierung einer Stelle gemäß \hyperref[itm:41-1]{Absatz 1},
-   wenn die Voraussetzungen für ihre Akkreditierung nicht oder nicht mehr erfüllt sind oder wenn die Stelle Maßnahmen
-   ergreift, die nicht mit dieser Verordnung vereinbar sind.
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} widerruft die Akkreditierung einer Stelle gemäß \hyperref
+   [itm:41-1]{Absatz 1}, wenn die Voraussetzungen für ihre Akkreditierung nicht oder nicht mehr erfüllt sind oder wenn
+   die Stelle Maßnahmen ergreift, die nicht mit dieser Verordnung vereinbar sind.
   \label{itm:41-5}
 
   \item Dieser Artikel gilt nicht für die \hyperref[itm:04-2]{Verarbeitung} durch Behörden oder öffentliche Stellen.
