--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -6,51 +6,60 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern insbesondere auf
-   Unionsebene die Einführung von datenschutzspezifischen Zertifizierungsverfahren sowie von Datenschutzsiegeln
-   und -prüfzeichen, die dazu dienen, nachzuweisen, dass diese Verordnung bei Verarbeitungsvorgängen von
-   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} eingehalten wird. Den besonderen Bedürfnissen von Kleinstunternehmen
-   sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} wird Rechnung getragen.
+  \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern
+   insbesondere auf Unionsebene die Einführung von datenschutzspezifischen Zertifizierungsverfahren sowie von
+   Datenschutzsiegeln und -prüfzeichen, die dazu dienen, nachzuweisen, dass diese Verordnung bei Verarbeitungsvorgängen
+   von
+   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} eingehalten wird. Den besonderen
+    Bedürfnissen von Kleinstunternehmen sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} wird Rechnung
+    getragen.
   \label{itm:42-1}
 
-  \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}
-   können auch datenschutzspezifische Zertifizierungsverfahren, Siegel oder Prüfzeichen, die gemäß \hyperref[itm:42-5]
-   {Absatz 5 des vorliegenden Artikels} genehmigt worden sind, vorgesehen werden, um nachzuweisen, dass die
-   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
-   fallen, im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen} nach
-   Maßgabe von \hyperref[itm:46-2f]{Artikel 46 Absatz 2 Buchstabe f} geeignete Garantien bieten. Diese \hyperref[itm:04-7]{Verantwortlichen}
-   oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger rechtlich bindender Instrumente die verbindliche
-   und durchsetzbare Verpflichtung ein, diese geeigneten Garantien anzuwenden, auch im Hinblick auf die Rechte der
+  \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]
+   {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} können auch datenschutzspezifische
+   Zertifizierungsverfahren, Siegel oder Prüfzeichen, die gemäß \hyperref[itm:42-5]{Absatz 5 des vorliegenden Artikels}
+   genehmigt worden sind, vorgesehen werden, um nachzuweisen, dass die
+   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}, die gemäß \hyperref[ch:3]
+    {Artikel 3} nicht unter diese Verordnung fallen, im Rahmen der Übermittlung \hyperref[itm:04-1]
+    {personenbezogener Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen} nach Maßgabe
+    von \hyperref[itm:46-2f]{Artikel 46 Absatz 2 Buchstabe f} geeignete Garantien bieten. Diese \hyperref[itm:04-7]
+    {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger
+    rechtlich bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, diese geeigneten Garantien
+    anzuwenden, auch im Hinblick auf die Rechte der
    \hyperref[itm:04-1]{betroffenen Personen}.
   \label{itm:42-2}
 
   \item Die Zertifizierung muss freiwillig und über ein transparentes Verfahren zugänglich sein.
   \label{itm:42-3}
 
-  \item Eine Zertifizierung gemäß diesem Artikel mindert nicht die Verantwortung des \hyperref[itm:04-7]{Verantwortlichen} oder des
-   \hyperref[itm:04-8]{Auftragsverarbeiters} für die Einhaltung dieser Verordnung und berührt nicht die Aufgaben und Befugnisse der
-   \hyperref[itm:04-21]{Aufsichtsbehörden}, die gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig sind.
+  \item Eine Zertifizierung gemäß diesem Artikel mindert nicht die Verantwortung des \hyperref[itm:04-7]
+   {Verantwortlichen} oder des
+   \hyperref[itm:04-8]{Auftragsverarbeiters} für die Einhaltung dieser Verordnung und berührt nicht die Aufgaben und
+    Befugnisse der
+   \hyperref[itm:04-21]{Aufsichtsbehörden}, die gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig
+    sind.
   \label{itm:42-4}
 
   \item Eine Zertifizierung nach diesem Artikel wird durch die Zertifizierungsstellen nach \hyperref[ch:43]{Artikel 43}
-   oder durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} anhand der von dieser zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß \hyperref
-   [itm:58-3]{Artikel 58 Absatz 3} oder -- gemäß \hyperref[ch:63]{Artikel 63} -- durch den Ausschuss genehmigten
-   Kriterien erteilt. Werden die Kriterien vom Ausschuss genehmigt, kann dies zu einer gemeinsamen Zertifizierung, dem
-   Europäischen Datenschutzsiegel, führen.
+   oder durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} anhand der von dieser zuständigen \hyperref
+   [itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[itm:58-3]{Artikel 58 Absatz 3} oder -- gemäß \hyperref[ch:63]
+   {Artikel 63} -- durch den Ausschuss genehmigten Kriterien erteilt. Werden die Kriterien vom Ausschuss genehmigt,
+   kann dies zu einer gemeinsamen Zertifizierung, dem Europäischen Datenschutzsiegel, führen.
   \label{itm:42-5}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter}, der die von ihm durchgeführte \hyperref[itm:04-2]{Verarbeitung} dem
-   Zertifizierungsverfahren unterwirft, stellt der Zertifizierungsstelle nach \hyperref[ch:43]{Artikel 43} oder
-   gegebenenfalls der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} alle für die Durchführung des Zertifizierungsverfahrens
-   erforderlichen Informationen zur Verfügung und gewährt ihr den in diesem Zusammenhang erforderlichen Zugang zu
-   seinen Verarbeitungstätigkeiten.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter}, der die von ihm
+   durchgeführte \hyperref[itm:04-2]{Verarbeitung} dem Zertifizierungsverfahren unterwirft, stellt der
+   Zertifizierungsstelle nach \hyperref[ch:43]{Artikel 43} oder gegebenenfalls der zuständigen \hyperref[itm:04-21]
+   {Aufsichtsbehörde} alle für die Durchführung des Zertifizierungsverfahrens erforderlichen Informationen zur
+   Verfügung und gewährt ihr den in diesem Zusammenhang erforderlichen Zugang zu seinen Verarbeitungstätigkeiten.
   \label{itm:42-6}
 
-  \item Die Zertifizierung wird einem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-8]{Auftragsverarbeiter} für eine Höchstdauer von drei
-   Jahren erteilt und kann unter denselben Bedingungen verlängert werden, sofern die einschlägigen Voraussetzungen
-   weiterhin erfüllt werden. Die Zertifizierung wird gegebenenfalls durch die Zertifizierungsstellen nach \hyperref
-   [ch:43]{Artikel 43} oder durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} widerrufen, wenn die Voraussetzungen für die
-   Zertifizierung nicht oder nicht mehr erfüllt werden.
+  \item Die Zertifizierung wird einem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-8]
+   {Auftragsverarbeiter} für eine Höchstdauer von drei Jahren erteilt und kann unter denselben Bedingungen verlängert
+   werden, sofern die einschlägigen Voraussetzungen weiterhin erfüllt werden. Die Zertifizierung wird gegebenenfalls
+   durch die Zertifizierungsstellen nach \hyperref[ch:43]{Artikel 43} oder durch die zuständige \hyperref[itm:04-21]
+   {Aufsichtsbehörde} widerrufen, wenn die Voraussetzungen für die Zertifizierung nicht oder nicht mehr erfüllt
+   werden.
   \label{itm:42-7}
 
   \item Der Ausschuss nimmt alle Zertifizierungsverfahren und Datenschutzsiegel und -prüfzeichen in ein Register auf und
