--- a/artikel/44.tex
+++ b/artikel/44.tex
@@ -4,14 +4,15 @@
 
 \addsec{Text der Verordnung}
 
-Jedwede Übermittlung \hyperref[itm:04-1]{personenbezogener Daten}, die bereits verarbeitet werden oder nach ihrer Übermittlung an ein
-Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} verarbeitet werden sollen, ist nur zulässig, wenn der \hyperref[itm:04-7]{Verantwortliche}
-und der \hyperref[itm:04-8]{Auftragsverarbeiter} die in \hyperref[part:5]{diesem Kapitel} niedergelegten Bedingungen einhalten und auch die
-sonstigen Bestimmungen dieser Verordnung eingehalten werden; dies gilt auch für die etwaige Weiterübermittlung
-\hyperref[itm:04-1]{personenbezogener Daten} durch das betreffende Drittland oder die betreffende \hyperref[itm:04-29]{internationale Organisation} an ein anderes
-Drittland oder eine andere \hyperref[itm:04-29]{internationale Organisation}. Alle Bestimmungen dieses Kapitels sind anzuwenden, um
-sicherzustellen, dass das durch diese Verordnung gewährleistete Schutzniveau für natürliche Personen nicht untergraben
-wird.
+Jedwede Übermittlung \hyperref[itm:04-1]{personenbezogener Daten}, die bereits verarbeitet werden oder nach ihrer
+Übermittlung an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} verarbeitet werden sollen,
+ist nur zulässig, wenn der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} die
+in \hyperref[part:5]{diesem Kapitel} niedergelegten Bedingungen einhalten und auch die sonstigen Bestimmungen dieser
+Verordnung eingehalten werden; dies gilt auch für die etwaige Weiterübermittlung
+\hyperref[itm:04-1]{personenbezogener Daten} durch das betreffende Drittland oder die betreffende \hyperref[itm:04-29]
+ {internationale Organisation} an ein anderes Drittland oder eine andere \hyperref[itm:04-29]
+ {internationale Organisation}. Alle Bestimmungen dieses Kapitels sind anzuwenden, um sicherzustellen, dass das durch
+ diese Verordnung gewährleistete Schutzniveau für natürliche Personen nicht untergraben wird.
 
 \addsec{Eigene Notizen}
 
