--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -6,9 +6,12 @@
 
 \begin{enumerate}
 
-  \item Falls kein Beschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt, darf ein \hyperref[itm:04-7]{Verantwortlicher} oder ein
-   \hyperref[itm:04-8]{Auftragsverarbeiter} \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur übermitteln,
-   sofern der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete Garantien vorgesehen hat und sofern den
+  \item Falls kein Beschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt, darf ein \hyperref[itm:04-7]
+   {Verantwortlicher} oder ein
+   \hyperref[itm:04-8]{Auftragsverarbeiter} \hyperref[itm:04-1]{personenbezogene Daten} an ein Drittland oder
+    eine \hyperref[itm:04-29]{internationale Organisation} nur übermitteln, sofern der \hyperref[itm:04-7]
+    {Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete Garantien vorgesehen hat und sofern
+    den
    \hyperref[itm:04-1]{betroffenen Personen} durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.
   \label{itm:46-1}
 
@@ -28,32 +31,35 @@
      {Artikel 93 Absatz 2} erlassen werden,
     \label{itm:46-2c}
 
-    \item von einer \hyperref[itm:04-21]{Aufsichtsbehörde} angenommenen Standarddatenschutzklauseln, die von der Kommission gemäß dem
-     Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} genehmigt wurden,
+    \item von einer \hyperref[itm:04-21]{Aufsichtsbehörde} angenommenen Standarddatenschutzklauseln, die von der
+     Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} genehmigt wurden,
     \label{itm:46-2d}
 
     \item genehmigten Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} zusammen mit rechtsverbindlichen und
-     durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} in dem Drittland zur Anwendung
-     der geeigneten Garantien, einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}, oder
+     durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
+     {Auftragsverarbeiters} in dem Drittland zur Anwendung der geeigneten Garantien, einschließlich in Bezug auf die
+     Rechte der \hyperref[itm:04-1]{betroffenen Personen}, oder
     \label{itm:46-2e}
 
     \item einem genehmigten Zertifizierungsmechanismus gemäß \hyperref[ch:42]{Artikel 42} zusammen mit
-     rechtsverbindlichen und durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} in dem
-     Drittland zur Anwendung der geeigneten Garantien, einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen
-     Personen}.
+     rechtsverbindlichen und durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder
+     des \hyperref[itm:04-8]{Auftragsverarbeiters} in dem Drittland zur Anwendung der geeigneten Garantien,
+     einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}.
     \label{itm:46-2f}
 
   \end{enumerate}
 
-  \item Vorbehaltlich der Genehmigung durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} können die geeigneten Garantien gemäß
+  \item Vorbehaltlich der Genehmigung durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} können die geeigneten
+   Garantien gemäß
    \hyperref[itm:46-1]{Absatz 1} auch insbesondere bestehen in
   \label{itm:46-3}
 
   \begin{enumerate}
   
-    \item Vertragsklauseln, die zwischen dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} und dem \hyperref[itm:04-7]{Verantwortlichen}, dem
-     \hyperref[itm:04-8]{Auftragsverarbeiter} oder dem \hyperref[itm:04-9]{Empfänger} der \hyperref[itm:04-1]{personenbezogenen Daten} im Drittland oder der internationalen
-     Organisation vereinbart wurden, oder
+    \item Vertragsklauseln, die zwischen dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]
+     {Auftragsverarbeiter} und dem \hyperref[itm:04-7]{Verantwortlichen}, dem
+     \hyperref[itm:04-8]{Auftragsverarbeiter} oder dem \hyperref[itm:04-9]{Empfänger} der \hyperref[itm:04-1]
+      {personenbezogenen Daten} im Drittland oder der internationalen Organisation vereinbart wurden, oder
     \label{itm:46-3a}
 
     \item Bestimmungen, die in Verwaltungsvereinbarungen zwischen Behörden oder öffentlichen Stellen aufzunehmen sind
@@ -62,16 +68,18 @@
 
   \end{enumerate}
 
-  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} wendet das Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an, wenn ein Fall gemäß
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} wendet das Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an,
+   wenn ein Fall gemäß
    \hyperref[itm:46-3]{Absatz 3 des vorliegenden Artikels} vorliegt.
   \label{itm:46-4}
 
-  \item Von einem Mitgliedstaat oder einer \hyperref[itm:04-21]{Aufsichtsbehörde} auf der Grundlage von Artikel 26 Absatz 2 der Richtlinie
-   95/46/EG\todo{nachschlagen} erteilte Genehmigungen bleiben so lange gültig, bis sie erforderlichenfalls von dieser
-   \hyperref[itm:04-21]{Aufsichtsbehörde} geändert, ersetzt oder aufgehoben werden. Von der Kommission auf der Grundlage von Artikel 26
-   Absatz 4 der Richtlinie 95/46/EG erlassene Feststellungen bleiben so lange in Kraft, bis sie erforderlichenfalls mit
-   einem nach \hyperref[itm:46-2]{Absatz 2 des vorliegenden Artikels} erlassenen Beschluss der Kommission geändert,
-   ersetzt oder aufgehoben werden.
+  \item Von einem Mitgliedstaat oder einer \hyperref[itm:04-21]{Aufsichtsbehörde} auf der Grundlage von Artikel 26
+   Absatz 2 der Richtlinie 95/46/EG\todo{nachschlagen} erteilte Genehmigungen bleiben so lange gültig, bis sie
+   erforderlichenfalls von dieser
+   \hyperref[itm:04-21]{Aufsichtsbehörde} geändert, ersetzt oder aufgehoben werden. Von der Kommission auf der Grundlage
+    von Artikel 26 Absatz 4 der Richtlinie 95/46/EG erlassene Feststellungen bleiben so lange in Kraft, bis sie
+    erforderlichenfalls mit einem nach \hyperref[itm:46-2]{Absatz 2 des vorliegenden Artikels} erlassenen Beschluss der
+    Kommission geändert, ersetzt oder aufgehoben werden.
   \label{itm:46-5}
 
 \end{enumerate}
