--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -7,24 +7,28 @@
 \begin{enumerate}
 
   \item Falls weder ein Angemessenheitsbeschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt noch geeignete
-   Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich \hyperref[itm:04-20]{verbindlicher interner Datenschutzvorschriften},
-   bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder an
-   eine \hyperref[itm:04-29]{internationale Organisation} nur unter einer der folgenden Bedingungen zulässig:
+   Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich \hyperref[itm:04-20]{verbindlicher interner
+   Datenschutzvorschriften}, bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]
+   {personenbezogener Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale Organisation} nur unter
+   einer der folgenden Bedingungen zulässig:
   \label{itm:49-1-1}
 
   \begin{enumerate}
   
-    \item die \hyperref[itm:04-1]{betroffene Person} hat in die vorgeschlagene Datenübermittlung ausdrücklich eingewilligt, nachdem sie über
-     die für sie bestehenden möglichen Risiken derartiger Datenübermittlungen ohne Vorliegen eines
-     Angemessenheitsbeschlusses und ohne geeignete Garantien unterrichtet wurde,
+    \item die \hyperref[itm:04-1]{betroffene Person} hat in die vorgeschlagene Datenübermittlung ausdrücklich
+     eingewilligt, nachdem sie über die für sie bestehenden möglichen Risiken derartiger Datenübermittlungen ohne
+     Vorliegen eines Angemessenheitsbeschlusses und ohne geeignete Garantien unterrichtet wurde,
     \label{itm:49-1-1a}
 
-    \item die Übermittlung ist für die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und dem \hyperref[itm:04-7]{Verantwortlichen}
-     oder zur Durchführung von vorvertraglichen Maßnahmen auf Antrag der \hyperref[itm:04-1]{betroffenen Person} erforderlich,
+    \item die Übermittlung ist für die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und
+     dem \hyperref[itm:04-7]{Verantwortlichen} oder zur Durchführung von vorvertraglichen Maßnahmen auf Antrag
+     der \hyperref[itm:04-1]{betroffenen Person} erforderlich,
     \label{itm:49-1-1b}
 
-    \item die Übermittlung ist zum Abschluss oder zur Erfüllung eines im Interesse der \hyperref[itm:04-1]{betroffenen Person} von dem
-     \hyperref[itm:04-7]{Verantwortlichen} mit einer anderen natürlichen oder juristischen Person geschlossenen Vertrags erforderlich,
+    \item die Übermittlung ist zum Abschluss oder zur Erfüllung eines im Interesse der \hyperref[itm:04-1]
+     {betroffenen Person} von dem
+     \hyperref[itm:04-7]{Verantwortlichen} mit einer anderen natürlichen oder juristischen Person geschlossenen Vertrags
+      erforderlich,
     \label{itm:49-1-1c}
 
     \item die Übermittlung ist aus wichtigen Gründen des öffentlichen Interesses notwendig,
@@ -33,8 +37,9 @@
     \item die Übermittlung ist zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen erforderlich,
     \label{itm:49-1-1e}
 
-    \item die Übermittlung ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder anderer Personen
-     erforderlich, sofern die \hyperref[itm:04-1]{betroffene Person} aus physischen oder rechtlichen Gründen außerstande ist, ihre
+    \item die Übermittlung ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder
+     anderer Personen erforderlich, sofern die \hyperref[itm:04-1]{betroffene Person} aus physischen oder rechtlichen
+     Gründen außerstande ist, ihre
      \hyperref[itm:04-11]{Einwilligung} zu geben,
     \label{itm:49-1-1f}
 
@@ -46,24 +51,26 @@
 
   \end{enumerate}
 
-  \phantomsection
-  Falls die Übermittlung nicht auf eine Bestimmung der Artikel \hyperref[ch:45]{45} oder \hyperref[ch:46]
-  {46} -- einschließlich der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} -- gestützt werden könnte und keine der
-  Ausnahmen für einen bestimmten Fall gemäß dem ersten Unterabsatz anwendbar ist, darf eine Übermittlung an ein
-  Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur dann erfolgen, wenn die Übermittlung nicht wiederholt erfolgt,
-  nur eine begrenzte Zahl von \hyperref[itm:04-1]{betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
-  \hyperref[itm:04-7]{Verantwortlichen} erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} nicht
-  überwiegen, und der \hyperref[itm:04-7]{Verantwortliche} alle Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser
-  Beurteilung geeignete Garantien in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der \hyperref[itm:04-7]{Verantwortliche}
-  setzt die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der \hyperref[itm:04-7]{Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene Person}
-  über die Übermittlung und seine zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen
-  Person} nach den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
+  \phantomsection Falls die Übermittlung nicht auf eine Bestimmung der Artikel \hyperref[ch:45]{45} oder \hyperref
+   [ch:46]{46} -- einschließlich der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} -- gestützt
+   werden könnte und keine der Ausnahmen für einen bestimmten Fall gemäß dem ersten Unterabsatz anwendbar ist, darf
+   eine Übermittlung an ein Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} nur dann erfolgen,
+   wenn die Übermittlung nicht wiederholt erfolgt, nur eine begrenzte Zahl von \hyperref[itm:04-1]
+   {betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
+  \hyperref[itm:04-7]{Verantwortlichen} erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten
+   der \hyperref[itm:04-1]{betroffenen Person} nicht überwiegen, und der \hyperref[itm:04-7]{Verantwortliche} alle
+   Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser Beurteilung geeignete Garantien in Bezug auf
+   den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der \hyperref[itm:04-7]
+   {Verantwortliche} setzt die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der \hyperref
+   [itm:04-7]{Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene Person} über die Übermittlung und seine
+   zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen Person} nach
+   den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
   \label{itm:49-1-2}
 
   \item Datenübermittlungen gemäß \hyperref[itm:49-1-1g]{Absatz 1 Unterabsatz 1 Buchstabe g} dürfen nicht die Gesamtheit
-   oder ganze Kategorien der im Register enthaltenen \hyperref[itm:04-1]{personenbezogenen Daten} umfassen. Wenn das Register der
-   Einsichtnahme durch Personen mit berechtigtem Interesse dient, darf die Übermittlung nur auf Anfrage dieser Personen
-   oder nur dann erfolgen, wenn diese Personen die Adressaten der Übermittlung sind.
+   oder ganze Kategorien der im Register enthaltenen \hyperref[itm:04-1]{personenbezogenen Daten} umfassen. Wenn das
+   Register der Einsichtnahme durch Personen mit berechtigtem Interesse dient, darf die Übermittlung nur auf Anfrage
+   dieser Personen oder nur dann erfolgen, wenn diese Personen die Adressaten der Übermittlung sind.
   \label{itm:49-2}
 
   \item Absatz 1 Unterabsatz 1 Buchstaben \hyperref[itm:49-1-1a]{a}, \hyperref[itm:49-1-1b]{b} und \hyperref
@@ -72,18 +79,20 @@
   \label{itm:49-3}
 
   \item Das öffentliche Interesse im Sinne des \hyperref[itm:49-1-1d]{Absatzes 1 Unterabsatz 1 Buchstabe d} muss im
-   Unionsrecht oder im Recht des Mitgliedstaats, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt, anerkannt sein.
+   Unionsrecht oder im Recht des Mitgliedstaats, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt, anerkannt
+   sein.
   \label{itm:49-4}
 
   \item Liegt kein Angemessenheitsbeschluss vor, so können im Unionsrecht oder im Recht der Mitgliedstaaten aus
-   wichtigen Gründen des öffentlichen Interesses ausdrücklich Beschränkungen der Übermittlung bestimmter Kategorien von
-   \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen} vorgesehen werden. Die Mitgliedstaaten
-   teilen der Kommission derartige Bestimmungen mit.
+   wichtigen Gründen des öffentlichen Interesses ausdrücklich Beschränkungen der Übermittlung bestimmter Kategorien
+   von
+   \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen}
+    vorgesehen werden. Die Mitgliedstaaten teilen der Kommission derartige Bestimmungen mit.
   \label{itm:49-5}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} erfasst die von ihm vorgenommene Beurteilung sowie die
-   angemessenen Garantien im Sinne des \hyperref[itm:49-1-2]{Absatzes 1 Unterabsatz 2 des vorliegenden Artikels} in der
-   Dokumentation gemäß \hyperref[ch:30]{Artikel 30}.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} erfasst die von ihm
+   vorgenommene Beurteilung sowie die angemessenen Garantien im Sinne des \hyperref[itm:49-1-2]{Absatzes 1 Unterabsatz
+   2 des vorliegenden Artikels} in der Dokumentation gemäß \hyperref[ch:30]{Artikel 30}.
   \label{itm:49-6}
 
 \end{enumerate}
