--- a/artikel/50.tex
+++ b/artikel/50.tex
@@ -4,8 +4,8 @@
 
 \addsec{Text der Verordnung}
 
-In Bezug auf Drittländer und \hyperref[itm:04-29]{internationale Organisationen} treffen die Kommission und die \hyperref[itm:04-21]{Aufsichtsbehörden} geeignete
-Maßnahmen zur
+In Bezug auf Drittländer und \hyperref[itm:04-29]{internationale Organisationen} treffen die Kommission und
+die \hyperref[itm:04-21]{Aufsichtsbehörden} geeignete Maßnahmen zur
 
 \begin{enumerate}[label=\alph*)]
   
@@ -14,13 +14,14 @@ Maßnahmen zur
   \label{itm:50-a}
 
   \item gegenseitigen Leistung internationaler Amtshilfe bei der Durchsetzung von Rechtsvorschriften zum Schutz
-   \hyperref[itm:04-1]{personenbezogener Daten}, unter anderem durch Meldungen, Beschwerdeverweisungen, Amtshilfe bei Untersuchungen und
-   Informationsaustausch, sofern geeignete Garantien für den Schutz \hyperref[itm:04-1]{personenbezogener Daten} und anderer Grundrechte und
-   Grundfreiheiten bestehen,
+   \hyperref[itm:04-1]{personenbezogener Daten}, unter anderem durch Meldungen, Beschwerdeverweisungen, Amtshilfe bei
+    Untersuchungen und Informationsaustausch, sofern geeignete Garantien für den Schutz \hyperref[itm:04-1]
+    {personenbezogener Daten} und anderer Grundrechte und Grundfreiheiten bestehen,
   \label{itm:50-b}
 
   \item Einbindung maßgeblicher Interessenträger in Diskussionen und Tätigkeiten, die zum Ausbau der internationalen
-   Zusammenarbeit bei der Durchsetzung von Rechtsvorschriften zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} dienen,
+   Zusammenarbeit bei der Durchsetzung von Rechtsvorschriften zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}
+   dienen,
   \label{itm:50-c}
 
   \item Förderung des Austauschs und der Dokumentation von Rechtsvorschriften und Praktiken zum Schutz personenbezogener
