--- a/artikel/52.tex
+++ b/artikel/52.tex
@@ -6,32 +6,34 @@
 
 \begin{enumerate}
 
-  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} handelt bei der Erfüllung ihrer Aufgaben und bei der Ausübung ihrer Befugnisse gemäß
-   dieser Verordnung völlig unabhängig.
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} handelt bei der Erfüllung ihrer Aufgaben und bei der Ausübung ihrer
+   Befugnisse gemäß dieser Verordnung völlig unabhängig.
   \label{itm:52-1}
 
-  \item Das Mitglied oder die Mitglieder jeder \hyperref[itm:04-21]{Aufsichtsbehörde} unterliegen bei der Erfüllung ihrer Aufgaben und der
-   Ausübung ihrer Befugnisse gemäß dieser Verordnung weder direkter noch indirekter Beeinflussung von außen und
-   ersuchen weder um Weisung noch nehmen sie Weisungen entgegen.
+  \item Das Mitglied oder die Mitglieder jeder \hyperref[itm:04-21]{Aufsichtsbehörde} unterliegen bei der Erfüllung
+   ihrer Aufgaben und der Ausübung ihrer Befugnisse gemäß dieser Verordnung weder direkter noch indirekter
+   Beeinflussung von außen und ersuchen weder um Weisung noch nehmen sie Weisungen entgegen.
   \label{itm:52-2}
 
-  \item Das Mitglied oder die Mitglieder der \hyperref[itm:04-21]{Aufsichtsbehörde} sehen von allen mit den Aufgaben ihres Amtes nicht zu
-   vereinbarenden Handlungen ab und üben während ihrer Amtszeit keine andere mit ihrem Amt nicht zu vereinbarende
-   entgeltliche oder unentgeltliche Tätigkeit aus.
+  \item Das Mitglied oder die Mitglieder der \hyperref[itm:04-21]{Aufsichtsbehörde} sehen von allen mit den Aufgaben
+   ihres Amtes nicht zu vereinbarenden Handlungen ab und üben während ihrer Amtszeit keine andere mit ihrem Amt nicht
+   zu vereinbarende entgeltliche oder unentgeltliche Tätigkeit aus.
   \label{itm:52-3}
 
-  \item Jeder Mitgliedstaat stellt sicher, dass jede \hyperref[itm:04-21]{Aufsichtsbehörde} mit den personellen, technischen und finanziellen
-   Ressourcen, Räumlichkeiten und Infrastrukturen ausgestattet wird, die sie benötigt, um ihre Aufgaben und Befugnisse
-   auch im Rahmen der Amtshilfe, Zusammenarbeit und Mitwirkung im Ausschuss effektiv wahrnehmen zu können.
+  \item Jeder Mitgliedstaat stellt sicher, dass jede \hyperref[itm:04-21]{Aufsichtsbehörde} mit den personellen,
+   technischen und finanziellen Ressourcen, Räumlichkeiten und Infrastrukturen ausgestattet wird, die sie benötigt, um
+   ihre Aufgaben und Befugnisse auch im Rahmen der Amtshilfe, Zusammenarbeit und Mitwirkung im Ausschuss effektiv
+   wahrnehmen zu können.
   \label{itm:52-4}
 
-  \item Jeder Mitgliedstaat stellt sicher, dass jede \hyperref[itm:04-21]{Aufsichtsbehörde} ihr eigenes Personal auswählt und hat, das
-   ausschließlich der Leitung des Mitglieds oder der Mitglieder der betreffenden \hyperref[itm:04-21]{Aufsichtsbehörde} untersteht.
+  \item Jeder Mitgliedstaat stellt sicher, dass jede \hyperref[itm:04-21]{Aufsichtsbehörde} ihr eigenes Personal
+   auswählt und hat, das ausschließlich der Leitung des Mitglieds oder der Mitglieder der betreffenden \hyperref
+   [itm:04-21]{Aufsichtsbehörde} untersteht.
   \label{itm:52-5}
 
-  \item Jeder Mitgliedstaat stellt sicher, dass jede \hyperref[itm:04-21]{Aufsichtsbehörde} einer Finanzkontrolle unterliegt, die ihre
-   Unabhängigkeit nicht beeinträchtigt und dass sie über eigene, öffentliche, jährliche Haushaltspläne verfügt, die
-   Teil des gesamten Staatshaushalts oder nationalen Haushalts sein können.
+  \item Jeder Mitgliedstaat stellt sicher, dass jede \hyperref[itm:04-21]{Aufsichtsbehörde} einer Finanzkontrolle
+   unterliegt, die ihre Unabhängigkeit nicht beeinträchtigt und dass sie über eigene, öffentliche, jährliche
+   Haushaltspläne verfügt, die Teil des gesamten Staatshaushalts oder nationalen Haushalts sein können.
   \label{itm:52-6}
 
 \end{enumerate}
