--- a/artikel/53.tex
+++ b/artikel/53.tex
@@ -6,8 +6,8 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten sehen vor, dass jedes Mitglied ihrer \hyperref[itm:04-21]{Aufsichtsbehörden} im Wege eines transparenten
-   Verfahrens ernannt wird, und zwar
+  \item Die Mitgliedstaaten sehen vor, dass jedes Mitglied ihrer \hyperref[itm:04-21]{Aufsichtsbehörden} im Wege eines
+   transparenten Verfahrens ernannt wird, und zwar
   \label{itm:53-1}
 
   \begin{itemize}
@@ -18,7 +18,8 @@
   \end{itemize}
 
   \item Jedes Mitglied muss über die für die Erfüllung seiner Aufgaben und Ausübung seiner Befugnisse erforderliche
-   Qualifikation, Erfahrung und Sachkunde insbesondere im Bereich des Schutzes \hyperref[itm:04-1]{personenbezogener Daten} verfügen.
+   Qualifikation, Erfahrung und Sachkunde insbesondere im Bereich des Schutzes \hyperref[itm:04-1]
+   {personenbezogener Daten} verfügen.
   \label{itm:53-2}
 
   \item Das Amt eines Mitglieds endet mit Ablauf der Amtszeit, mit seinem Rücktritt oder verpflichtender Versetzung in
