--- a/artikel/56.tex
+++ b/artikel/56.tex
@@ -6,39 +6,48 @@
 
 \begin{enumerate}
 
-  \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die \hyperref[itm:04-21]{Aufsichtsbehörde} der \hyperref[itm:04-16]{Hauptniederlassung} oder der einzigen
-   Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} gemäß dem Verfahren nach \hyperref[ch:60]
-   {Artikel 60} die zuständige federführende \hyperref[itm:04-21]{Aufsichtsbehörde} für die von diesem \hyperref[itm:04-7]{Verantwortlichen} oder diesem
+  \item Unbeschadet des \hyperref[ch:55]{Artikels 55} ist die \hyperref[itm:04-21]{Aufsichtsbehörde} der \hyperref
+   [itm:04-16]{Hauptniederlassung} oder der einzigen Niederlassung des \hyperref[itm:04-7]{Verantwortlichen} oder
+   des \hyperref[itm:04-8]{Auftragsverarbeiters} gemäß dem Verfahren nach \hyperref[ch:60]{Artikel 60} die zuständige
+   federführende \hyperref[itm:04-21]{Aufsichtsbehörde} für die von diesem \hyperref[itm:04-7]{Verantwortlichen} oder
+   diesem
    \hyperref[itm:04-8]{Auftragsverarbeiter} durchgeführte \hyperref[itm:04-23]{grenzüberschreitende Verarbeitung}.
   \label{itm:56-1}
 
-  \item Abweichend von \hyperref[itm:56-1]{Absatz 1} ist jede \hyperref[itm:04-21]{Aufsichtsbehörde} dafür zuständig, sich mit einer bei ihr
-   eingereichten Beschwerde oder einem etwaigen Verstoß gegen diese Verordnung zu befassen, wenn der Gegenstand nur mit
-   einer Niederlassung in ihrem Mitgliedstaat zusammenhängt oder \hyperref[itm:04-1]{betroffene Personen} nur ihres Mitgliedstaats erheblich
-   beeinträchtigt.
+  \item Abweichend von \hyperref[itm:56-1]{Absatz 1} ist jede \hyperref[itm:04-21]{Aufsichtsbehörde} dafür zuständig,
+   sich mit einer bei ihr eingereichten Beschwerde oder einem etwaigen Verstoß gegen diese Verordnung zu befassen, wenn
+   der Gegenstand nur mit einer Niederlassung in ihrem Mitgliedstaat zusammenhängt oder \hyperref[itm:04-1]
+   {betroffene Personen} nur ihres Mitgliedstaats erheblich beeinträchtigt.
   \label{itm:56-2}
 
   \item In den in \hyperref[itm:56-2]{Absatz 2 des vorliegenden Artikels} genannten Fällen unterrichtet die
-   \hyperref[itm:04-21]{Aufsichtsbehörde} unverzüglich die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} über diese Angelegenheit. Innerhalb einer Frist von
-   drei Wochen nach der Unterrichtung entscheidet die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, ob sie sich mit dem Fall gemäß
-   dem Verfahren nach \hyperref[ch:60]{Artikel 60} befasst oder nicht, wobei sie berücksichtigt, ob der \hyperref[itm:04-7]{Verantwortliche}
-   oder der \hyperref[itm:04-8]{Auftragsverarbeiter} in dem Mitgliedstaat, dessen \hyperref[itm:04-21]{Aufsichtsbehörde} sie unterrichtet hat, eine Niederlassung
-   hat oder nicht.
+   \hyperref[itm:04-21]{Aufsichtsbehörde} unverzüglich die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} über
+    diese Angelegenheit. Innerhalb einer Frist von drei Wochen nach der Unterrichtung entscheidet die
+    federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, ob sie sich mit dem Fall gemäß dem Verfahren nach \hyperref
+    [ch:60]{Artikel 60} befasst oder nicht, wobei sie berücksichtigt, ob der \hyperref[itm:04-7]{Verantwortliche} oder
+    der \hyperref[itm:04-8]{Auftragsverarbeiter} in dem Mitgliedstaat, dessen \hyperref[itm:04-21]
+    {Aufsichtsbehörde} sie unterrichtet hat, eine Niederlassung hat oder nicht.
   \label{itm:56-3}
 
-  \item Entscheidet die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich mit dem Fall zu befassen, so findet das Verfahren nach
-   \hyperref[ch:60]{Artikel 60} Anwendung. Die \hyperref[itm:04-21]{Aufsichtsbehörde}, die die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} unterrichtet
-    hat, kann dieser einen Beschlussentwurf vorlegen. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} trägt diesem Entwurf bei der
-    Ausarbeitung des Beschlussentwurfs nach \hyperref[itm:60-3]{Artikel 60 Absatz 3} weitestgehend Rechnung.
+  \item Entscheidet die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich mit dem Fall zu befassen, so findet
+   das Verfahren nach
+   \hyperref[ch:60]{Artikel 60} Anwendung. Die \hyperref[itm:04-21]{Aufsichtsbehörde}, die die federführende \hyperref
+    [itm:04-21]{Aufsichtsbehörde} unterrichtet hat, kann dieser einen Beschlussentwurf vorlegen. Die
+    federführende \hyperref[itm:04-21]{Aufsichtsbehörde} trägt diesem Entwurf bei der Ausarbeitung des
+    Beschlussentwurfs nach \hyperref[itm:60-3]{Artikel 60 Absatz 3} weitestgehend Rechnung.
   \label{itm:56-4}
 
-  \item Entscheidet die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich mit dem Fall nicht selbst zu befassen, so befasst die
-   \hyperref[itm:04-21]{Aufsichtsbehörde}, die die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} unterrichtet hat, sich mit dem Fall gemäß den Artikeln
+  \item Entscheidet die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich mit dem Fall nicht selbst zu
+   befassen, so befasst die
+   \hyperref[itm:04-21]{Aufsichtsbehörde}, die die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} unterrichtet
+    hat, sich mit dem Fall gemäß den Artikeln
    \hyperref[ch:61]{61} und \hyperref[ch:62]{62}.
   \label{itm:56-5}
 
-  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} ist der einzige Ansprechpartner der \hyperref[itm:04-7]{Verantwortlichen} oder der
-   \hyperref[itm:04-8]{Auftragsverarbeiter} für Fragen der von diesem \hyperref[itm:04-7]{Verantwortlichen} oder diesem \hyperref[itm:04-8]{Auftragsverarbeiter} durchgeführten
+  \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} ist der einzige Ansprechpartner der \hyperref[itm:04-7]
+   {Verantwortlichen} oder der
+   \hyperref[itm:04-8]{Auftragsverarbeiter} für Fragen der von diesem \hyperref[itm:04-7]{Verantwortlichen} oder
+    diesem \hyperref[itm:04-8]{Auftragsverarbeiter} durchgeführten
    \hyperref[itm:04-23]{grenzüberschreitenden Verarbeitung}.
   \label{itm:56-6}
 
