--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -6,14 +6,16 @@
 
 \begin{enumerate}
 
-  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Untersuchungsbefugnisse, die es ihr gestatten,
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Untersuchungsbefugnisse, die es ihr
+   gestatten,
   \label{itm:58-1}
 
   \begin{enumerate}
   
-    \item den \hyperref[itm:04-7]{Verantwortlichen}, den \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls den \hyperref[itm:04-17]{Vertreter} des \hyperref[itm:04-7]{Verantwortlichen} oder des
-     \hyperref[itm:04-8]{Auftragsverarbeiters} anzuweisen, alle Informationen bereitzustellen, die für die Erfüllung ihrer Aufgaben
-     erforderlich sind,
+    \item den \hyperref[itm:04-7]{Verantwortlichen}, den \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls
+     den \hyperref[itm:04-17]{Vertreter} des \hyperref[itm:04-7]{Verantwortlichen} oder des
+     \hyperref[itm:04-8]{Auftragsverarbeiters} anzuweisen, alle Informationen bereitzustellen, die für die Erfüllung
+      ihrer Aufgaben erforderlich sind,
     \label{itm:58-1a}
 
     \item Untersuchungen in Form von Datenschutzüberprüfungen durchzuführen,
@@ -22,54 +24,59 @@
     \item eine Überprüfung der nach \hyperref[itm:42-7]{Artikel 42 Absatz 7} erteilten Zertifizierungen durchzuführen,
     \label{itm:58-1c}
 
-    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} auf einen vermeintlichen Verstoß gegen diese Verordnung
-     hinzuweisen,
+    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} auf einen
+     vermeintlichen Verstoß gegen diese Verordnung hinzuweisen,
     \label{itm:58-1d}
 
-    \item von dem \hyperref[itm:04-7]{Verantwortlichen} und dem \hyperref[itm:04-8]{Auftragsverarbeiter} Zugang zu allen \hyperref[itm:04-1]{personenbezogenen Daten} und
-     Informationen, die zur Erfüllung ihrer Aufgaben notwendig sind, zu erhalten,
+    \item von dem \hyperref[itm:04-7]{Verantwortlichen} und dem \hyperref[itm:04-8]{Auftragsverarbeiter} Zugang zu
+     allen \hyperref[itm:04-1]{personenbezogenen Daten} und Informationen, die zur Erfüllung ihrer Aufgaben notwendig
+     sind, zu erhalten,
     \label{itm:58-1e}
 
     \item gemäß dem Verfahrensrecht der Union oder dem Verfahrensrecht des Mitgliedstaats Zugang zu den Geschäftsräumen,
-     einschließlich aller Datenverarbeitungsanlagen und -geräte, des \hyperref[itm:04-7]{Verantwortlichen} und des \hyperref[itm:04-8]{Auftragsverarbeiters} zu
-     erhalten.
+     einschließlich aller Datenverarbeitungsanlagen und -geräte, des \hyperref[itm:04-7]{Verantwortlichen} und
+     des \hyperref[itm:04-8]{Auftragsverarbeiters} zu erhalten.
     \label{itm:58-1f}
 
   \end{enumerate}
 
-  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Abhilfebefugnisse, die es ihr gestatten,
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Abhilfebefugnisse, die es ihr
+   gestatten,
   \label{itm:58-2}
 
   \begin{enumerate}
   
-    \item einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} zu warnen, dass beabsichtigte Verarbeitungsvorgänge
-     voraussichtlich gegen diese Verordnung verstoßen,
+    \item einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} zu warnen,
+     dass beabsichtigte Verarbeitungsvorgänge voraussichtlich gegen diese Verordnung verstoßen,
     \label{itm:58-2a}
 
-    \item einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} zu verwarnen, wenn er mit Verarbeitungsvorgängen gegen
-     diese Verordnung verstoßen hat,
+    \item einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter} zu verwarnen,
+     wenn er mit Verarbeitungsvorgängen gegen diese Verordnung verstoßen hat,
     \label{itm:58-2b}
 
-    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} anzuweisen, den Anträgen der \hyperref[itm:04-1]{betroffenen Person} auf Ausübung
-     der ihr nach dieser Verordnung zustehenden Rechte zu entsprechen,
+    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} anzuweisen, den
+     Anträgen der \hyperref[itm:04-1]{betroffenen Person} auf Ausübung der ihr nach dieser Verordnung zustehenden
+     Rechte zu entsprechen,
     \label{itm:58-2c}
 
-    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} anzuweisen, Verarbeitungsvorgänge gegebenenfalls auf
-     bestimmte Weise und innerhalb eines bestimmten Zeitraums in Einklang mit dieser Verordnung zu bringen,
+    \item den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} anzuweisen,
+     Verarbeitungsvorgänge gegebenenfalls auf bestimmte Weise und innerhalb eines bestimmten Zeitraums in Einklang mit
+     dieser Verordnung zu bringen,
     \label{itm:58-2d}
 
-    \item den \hyperref[itm:04-7]{Verantwortlichen} anzuweisen, die von einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} \hyperref[itm:04-1]{betroffenen
-     Person} entsprechend zu benachrichtigen,
+    \item den \hyperref[itm:04-7]{Verantwortlichen} anzuweisen, die von einer \hyperref[itm:04-12]{Verletzung des
+     Schutzes personenbezogener Daten} \hyperref[itm:04-1]{betroffenen Person} entsprechend zu benachrichtigen,
     \label{itm:58-2e}
 
-    \item eine vorübergehende oder endgültige Beschränkung der \hyperref[itm:04-2]{Verarbeitung}, einschließlich eines Verbots, zu
-     verhängen,
+    \item eine vorübergehende oder endgültige Beschränkung der \hyperref[itm:04-2]{Verarbeitung}, einschließlich eines
+     Verbots, zu verhängen,
     \label{itm:58-2f}
 
-    \item die Berichtigung oder Löschung von \hyperref[itm:04-1]{personenbezogenen Daten} oder die \hyperref[itm:04-3]{Einschränkung der Verarbeitung} gemäß den
-     Artikeln \hyperref[ch:16]{16}, \hyperref[ch:17]{17} und \hyperref[ch:17]{18} und die Unterrichtung der \hyperref[itm:04-9]{Empfänger},
-     an die diese \hyperref[itm:04-1]{personenbezogenen Daten} gemäß \hyperref[itm:17-2]{Artikel 17 Absatz 2} und \hyperref[ch:19]
-     {Artikel 19} offengelegt wurden, über solche Maßnahmen anzuordnen,
+    \item die Berichtigung oder Löschung von \hyperref[itm:04-1]{personenbezogenen Daten} oder die \hyperref[itm:04-3]
+     {Einschränkung der Verarbeitung} gemäß den Artikeln \hyperref[ch:16]{16}, \hyperref[ch:17]{17} und \hyperref
+     [ch:17]{18} und die Unterrichtung der \hyperref[itm:04-9]{Empfänger}, an die diese \hyperref[itm:04-1]
+     {personenbezogenen Daten} gemäß \hyperref[itm:17-2]{Artikel 17 Absatz 2} und \hyperref[ch:19]{Artikel 19}
+     offengelegt wurden, über solche Maßnahmen anzuordnen,
     \label{itm:58-2g}
 
     \item eine Zertifizierung zu widerrufen oder die Zertifizierungsstelle anzuweisen, eine gemäß den Artikel \hyperref
@@ -82,29 +89,30 @@
      Absatz genannten Maßnahmen, je nach den Umständen des Einzelfalls,
     \label{itm:58-2i}
 
-    \item die Aussetzung der Übermittlung von Daten an einen \hyperref[itm:04-9]{Empfänger} in einem Drittland oder an eine \hyperref[itm:04-29]{internationale
-     Organisation} anzuordnen.
+    \item die Aussetzung der Übermittlung von Daten an einen \hyperref[itm:04-9]{Empfänger} in einem Drittland oder an
+     eine \hyperref[itm:04-29]{internationale Organisation} anzuordnen.
     \label{itm:58-2j}
 
   \end{enumerate}
 
-  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Genehmigungsbefugnisse und beratenden Befugnisse, die es
-   ihr gestatten,
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Genehmigungsbefugnisse und
+   beratenden Befugnisse, die es ihr gestatten,
   \label{itm:58-3}
 
   \begin{enumerate}
   
-    \item gemäß dem Verfahren der vorherigen Konsultation nach \hyperref[ch:36]{Artikel 36} den \hyperref[itm:04-7]{Verantwortlichen} zu
-     beraten,
+    \item gemäß dem Verfahren der vorherigen Konsultation nach \hyperref[ch:36]{Artikel 36} den \hyperref[itm:04-7]
+     {Verantwortlichen} zu beraten,
     \label{itm:58-3a}
 
-    \item zu allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} stehen, von sich aus oder auf
-     Anfrage Stellungnahmen an das nationale Parlament, die Regierung des Mitgliedstaats oder im Einklang mit dem Recht
-     des Mitgliedstaats an sonstige Einrichtungen und Stellen sowie an die Öffentlichkeit zu richten,
+    \item zu allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} stehen, von
+     sich aus oder auf Anfrage Stellungnahmen an das nationale Parlament, die Regierung des Mitgliedstaats oder im
+     Einklang mit dem Recht des Mitgliedstaats an sonstige Einrichtungen und Stellen sowie an die Öffentlichkeit zu
+     richten,
     \label{itm:58-3b}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-5]{Artikel 36 Absatz 5} zu genehmigen, falls im Recht des
-     Mitgliedstaats eine derartige vorherige Genehmigung verlangt wird,
+    \item die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:36-5]{Artikel 36 Absatz 5} zu genehmigen, falls im
+     Recht des Mitgliedstaats eine derartige vorherige Genehmigung verlangt wird,
     \label{itm:58-3c}
 
     \item eine Stellungnahme abzugeben und Entwürfe von Verhaltensregeln gemäß \hyperref[itm:40-5]{Artikel 40 Absatz 5}
@@ -133,20 +141,21 @@
 
   \end{enumerate}
 
-  \item Die Ausübung der der \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß diesem Artikel übertragenen Befugnisse erfolgt vorbehaltlich
-   geeigneter Garantien einschließlich wirksamer gerichtlicher Rechtsbehelfe und ordnungsgemäßer Verfahren gemäß dem
-   Unionsrecht und dem Recht des Mitgliedstaats im Einklang mit der Charta.
+  \item Die Ausübung der der \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß diesem Artikel übertragenen Befugnisse erfolgt
+   vorbehaltlich geeigneter Garantien einschließlich wirksamer gerichtlicher Rechtsbehelfe und ordnungsgemäßer
+   Verfahren gemäß dem Unionsrecht und dem Recht des Mitgliedstaats im Einklang mit der Charta.
   \label{itm:58-4}
 
-  \item Jeder Mitgliedstaat sieht durch Rechtsvorschriften vor, dass seine \hyperref[itm:04-21]{Aufsichtsbehörde} befugt ist, Verstöße gegen
-   diese Verordnung den Justizbehörden zur Kenntnis zu bringen und gegebenenfalls die Einleitung eines gerichtlichen
-   Verfahrens zu betreiben oder sich sonst daran zu beteiligen, um die Bestimmungen dieser Verordnung durchzusetzen.
+  \item Jeder Mitgliedstaat sieht durch Rechtsvorschriften vor, dass seine \hyperref[itm:04-21]{Aufsichtsbehörde} befugt
+   ist, Verstöße gegen diese Verordnung den Justizbehörden zur Kenntnis zu bringen und gegebenenfalls die Einleitung
+   eines gerichtlichen Verfahrens zu betreiben oder sich sonst daran zu beteiligen, um die Bestimmungen dieser
+   Verordnung durchzusetzen.
   \label{itm:58-5}
 
-  \item Jeder Mitgliedstaat kann durch Rechtsvorschriften vorsehen, dass seine \hyperref[itm:04-21]{Aufsichtsbehörde} neben den in den
-   Absätzen \hyperref[itm:58-1]{1}, \hyperref[itm:58-2]{2} und \hyperref[itm:58-3]{3} aufgeführten Befugnissen über
-   zusätzliche Befugnisse verfügt. Die Ausübung dieser Befugnisse darf nicht die effektive Durchführung des \hyperref
-   [part:7]{Kapitels VII} beeinträchtigen.
+  \item Jeder Mitgliedstaat kann durch Rechtsvorschriften vorsehen, dass seine \hyperref[itm:04-21]
+   {Aufsichtsbehörde} neben den in den Absätzen \hyperref[itm:58-1]{1}, \hyperref[itm:58-2]{2} und \hyperref[itm:58-3]
+   {3} aufgeführten Befugnissen über zusätzliche Befugnisse verfügt. Die Ausübung dieser Befugnisse darf nicht die
+   effektive Durchführung des \hyperref[part:7]{Kapitels VII} beeinträchtigen.
   \label{itm:58-6}
 
 \end{enumerate}
