--- a/artikel/59.tex
+++ b/artikel/59.tex
@@ -4,10 +4,10 @@
 
 \addsec{Text der Verordnung}
 
-Jede \hyperref[itm:04-21]{Aufsichtsbehörde} erstellt einen Jahresbericht über ihre Tätigkeit, der eine Liste der Arten der gemeldeten Verstöße
-und der Arten der getroffenen Maßnahmen nach \hyperref[itm:58-2]{Artikel 58 Absatz 2} enthalten kann. Diese Berichte
-werden dem nationalen Parlament, der Regierung und anderen nach dem Recht der Mitgliedstaaten bestimmten Behörden
-übermittelt. Sie werden der Öffentlichkeit, der Kommission und dem Ausschuss zugänglich gemacht.
+Jede \hyperref[itm:04-21]{Aufsichtsbehörde} erstellt einen Jahresbericht über ihre Tätigkeit, der eine Liste der Arten
+der gemeldeten Verstöße und der Arten der getroffenen Maßnahmen nach \hyperref[itm:58-2]{Artikel 58 Absatz 2} enthalten
+kann. Diese Berichte werden dem nationalen Parlament, der Regierung und anderen nach dem Recht der Mitgliedstaaten
+bestimmten Behörden übermittelt. Sie werden der Öffentlichkeit, der Kommission und dem Ausschuss zugänglich gemacht.
 
 \addsec{Eigene Notizen}
 
