--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -6,9 +6,9 @@
 
 \begin{enumerate}
 
-  \item Der Ausschuss gibt eine Stellungnahme ab, wenn die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} beabsichtigt, eine der
-   nachstehenden Maßnahmen zu erlassen. Zu diesem Zweck übermittelt die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} dem Ausschuss den
-   Entwurf des Beschlusses, wenn dieser
+  \item Der Ausschuss gibt eine Stellungnahme ab, wenn die zuständige \hyperref[itm:04-21]
+   {Aufsichtsbehörde} beabsichtigt, eine der nachstehenden Maßnahmen zu erlassen. Zu diesem Zweck übermittelt die
+   zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} dem Ausschuss den Entwurf des Beschlusses, wenn dieser
   \label{itm:64-1}
 
   \begin{enumerate}
@@ -38,10 +38,11 @@
 
   \end{enumerate}
 
-  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde}, der Vorsitz des Ausschuss oder die Kommission können beantragen, dass eine Angelegenheit
-   mit allgemeiner Geltung oder mit Auswirkungen in mehr als einem Mitgliedstaat vom Ausschuss geprüft wird, um eine
-   Stellungnahme zu erhalten, insbesondere wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} den Verpflichtungen zur Amtshilfe
-   gemäß \hyperref[ch:61]{Artikel 61} oder zu gemeinsamen Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} nicht nachkommt.
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde}, der Vorsitz des Ausschuss oder die Kommission können beantragen,
+   dass eine Angelegenheit mit allgemeiner Geltung oder mit Auswirkungen in mehr als einem Mitgliedstaat vom Ausschuss
+   geprüft wird, um eine Stellungnahme zu erhalten, insbesondere wenn eine zuständige \hyperref[itm:04-21]
+   {Aufsichtsbehörde} den Verpflichtungen zur Amtshilfe gemäß \hyperref[ch:61]{Artikel 61} oder zu gemeinsamen
+   Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} nicht nachkommt.
   \label{itm:64-2}
 
   \item In den in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannten Fällen gibt der Ausschuss
@@ -54,10 +55,11 @@
    Beschlussentwurf zustimmt.
   \label{itm:64-3}
 
-  \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} und die Kommission übermitteln unverzüglich dem Ausschuss auf elektronischem Wege unter
-   Verwendung eines standardisierten Formats alle zweckdienlichen Informationen, einschließlich -- je nach Fall --
-   einer kurzen Darstellung des Sachverhalts, des Beschlussentwurfs, der Gründe, warum eine solche Maßnahme ergriffen
-   werden muss, und der Standpunkte anderer \hyperref[itm:04-22]{betroffener Aufsichtsbehörden}.
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} und die Kommission übermitteln unverzüglich dem Ausschuss auf
+   elektronischem Wege unter Verwendung eines standardisierten Formats alle zweckdienlichen Informationen,
+   einschließlich -- je nach Fall -- einer kurzen Darstellung des Sachverhalts, des Beschlussentwurfs, der Gründe,
+   warum eine solche Maßnahme ergriffen werden muss, und der Standpunkte anderer \hyperref[itm:04-22]
+   {betroffener Aufsichtsbehörden}.
   \label{itm:64-4}
 
   \item Der Vorsitz des Ausschusses unterrichtet unverzüglich auf elektronischem Wege
@@ -70,26 +72,26 @@
      Übersetzungen der zweckdienlichen Informationen zur Verfügung und
     \label{itm:64-5a}
 
-    \item je nach Fall die in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannte \hyperref[itm:04-21]{Aufsichtsbehörde}
-     und die Kommission über die Stellungnahme und veröffentlicht sie.
+    \item je nach Fall die in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannte \hyperref
+     [itm:04-21]{Aufsichtsbehörde} und die Kommission über die Stellungnahme und veröffentlicht sie.
     \label{itm:64-5b}
 
   \end{enumerate}
 
-  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} nimmt den in \hyperref[itm:64-1]{Absatz 1} genannten Beschlussentwurf nicht vor
-   Ablauf der in \hyperref[itm:64-3]{Absatz 3} genannten Frist an.
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} nimmt den in \hyperref[itm:64-1]{Absatz 1} genannten
+   Beschlussentwurf nicht vor Ablauf der in \hyperref[itm:64-3]{Absatz 3} genannten Frist an.
   \label{itm:64-6}
 
-  \item Die in \hyperref[itm:64-1]{Absatz 1} genannte \hyperref[itm:04-21]{Aufsichtsbehörde} trägt der Stellungnahme des Ausschusses
-   weitestgehend Rechnung und teilt dessen Vorsitz binnen zwei Wochen nach Eingang der Stellungnahme auf elektronischem
-   Wege unter Verwendung eines standardisierten Formats mit, ob sie den Beschlussentwurf beibehalten oder ändern wird;
-   gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.
+  \item Die in \hyperref[itm:64-1]{Absatz 1} genannte \hyperref[itm:04-21]{Aufsichtsbehörde} trägt der Stellungnahme des
+   Ausschusses weitestgehend Rechnung und teilt dessen Vorsitz binnen zwei Wochen nach Eingang der Stellungnahme auf
+   elektronischem Wege unter Verwendung eines standardisierten Formats mit, ob sie den Beschlussentwurf beibehalten
+   oder ändern wird; gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.
   \label{itm:64-7}
 
-  \item Teilt die \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} dem Vorsitz des Ausschusses innerhalb der Frist nach \hyperref[itm:64-7]
-   {Absatz 7} des vorliegenden Artikels unter Angabe der maßgeblichen Gründe mit, dass sie beabsichtigt, der
-   Stellungnahme des Ausschusses insgesamt oder teilweise nicht zu folgen, so gilt \hyperref[itm:65-2]{Artikel 65
-   Absatz 1}.
+  \item Teilt die \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} dem Vorsitz des Ausschusses innerhalb der Frist
+   nach \hyperref[itm:64-7]{Absatz 7} des vorliegenden Artikels unter Angabe der maßgeblichen Gründe mit, dass sie
+   beabsichtigt, der Stellungnahme des Ausschusses insgesamt oder teilweise nicht zu folgen, so gilt \hyperref
+   [itm:65-2]{Artikel 65 Absatz 1}.
   \label{itm:64-8}
 
 \end{enumerate}
