--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -1,23 +1,26 @@
 %!TEX root = ../DSGVO-Bearbeitung.tex
-\chapter{Recht auf wirksamen gerichtlichen Rechtsbehelf gegen \hyperref[itm:04-7]{Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter}}
+\chapter{Recht auf wirksamen gerichtlichen Rechtsbehelf gegen Verantwortliche oder Auftragsverarbeiter}
 \label{ch:79}
 
 \addsec{Text der Verordnung}
 
 \begin{enumerate}
 
-  \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines verfügbaren verwaltungsrechtlichen oder außergerichtlichen
-   Rechtsbehelfs einschließlich des Rechts auf Beschwerde bei einer \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[ch:77]{Artikel 77}
-   das Recht auf einen wirksamen gerichtlichen Rechtsbehelf, wenn sie der Ansicht ist, dass die ihr aufgrund dieser
-   Verordnung zustehenden Rechte infolge einer nicht im Einklang mit dieser Verordnung stehenden \hyperref[itm:04-2]{Verarbeitung} ihrer
+  \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines verfügbaren verwaltungsrechtlichen oder
+   außergerichtlichen Rechtsbehelfs einschließlich des Rechts auf Beschwerde bei einer \hyperref[itm:04-21]
+   {Aufsichtsbehörde} gemäß \hyperref[ch:77]{Artikel 77} das Recht auf einen wirksamen gerichtlichen Rechtsbehelf, wenn
+   sie der Ansicht ist, dass die ihr aufgrund dieser Verordnung zustehenden Rechte infolge einer nicht im Einklang mit
+   dieser Verordnung stehenden \hyperref[itm:04-2]{Verarbeitung} ihrer
    \hyperref[itm:04-1]{personenbezogenen Daten} verletzt wurden.
   \label{itm:79-1}
 
-  \item Für Klagen gegen einen \hyperref[itm:04-7]{Verantwortlichen} oder gegen einen \hyperref[itm:04-8]{Auftragsverarbeiter} sind die Gerichte des
-   Mitgliedstaats zuständig, in dem der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} eine Niederlassung hat. Wahlweise
-   können solche Klagen auch bei den Gerichten des Mitgliedstaats erhoben werden, in dem die \hyperref[itm:04-1]{betroffene Person} ihren
-   Aufenthaltsort hat, es sei denn, es handelt sich bei dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} um eine
-   Behörde eines Mitgliedstaats, die in Ausübung ihrer hoheitlichen Befugnisse tätig geworden ist.
+  \item Für Klagen gegen einen \hyperref[itm:04-7]{Verantwortlichen} oder gegen einen \hyperref[itm:04-8]
+   {Auftragsverarbeiter} sind die Gerichte des Mitgliedstaats zuständig, in dem der \hyperref[itm:04-7]
+   {Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} eine Niederlassung hat. Wahlweise können solche
+   Klagen auch bei den Gerichten des Mitgliedstaats erhoben werden, in dem die \hyperref[itm:04-1]{betroffene Person}
+   ihren Aufenthaltsort hat, es sei denn, es handelt sich bei dem \hyperref[itm:04-7]{Verantwortlichen} oder
+   dem \hyperref[itm:04-8]{Auftragsverarbeiter} um eine Behörde eines Mitgliedstaats, die in Ausübung ihrer
+   hoheitlichen Befugnisse tätig geworden ist.
   \label{itm:79-2}
 
 \end{enumerate}
