--- a/artikel/81.tex
+++ b/artikel/81.tex
@@ -7,14 +7,15 @@
 \begin{enumerate}
 
   \item Erhält ein zuständiges Gericht in einem Mitgliedstaat Kenntnis von einem Verfahren zu demselben Gegenstand in
-   Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch denselben \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}, das vor einem Gericht in einem
-   anderen Mitgliedstaat anhängig ist, so nimmt es mit diesem Gericht Kontakt auf, um sich zu vergewissern, dass ein
-   solches Verfahren existiert.
+   Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch denselben \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
+   [itm:04-8]{Auftragsverarbeiter}, das vor einem Gericht in einem anderen Mitgliedstaat anhängig ist, so nimmt es mit
+   diesem Gericht Kontakt auf, um sich zu vergewissern, dass ein solches Verfahren existiert.
   \label{itm:81-1}
 
-  \item Ist ein Verfahren zu demselben Gegenstand in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch denselben \hyperref[itm:04-7]{Verantwortlichen} oder
-   \hyperref[itm:04-8]{Auftragsverarbeiter} vor einem Gericht in einem anderen Mitgliedstaat anhängig, so kann jedes später angerufene
-   zuständige Gericht das bei ihm anhängige Verfahren aussetzen.
+  \item Ist ein Verfahren zu demselben Gegenstand in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} durch
+   denselben \hyperref[itm:04-7]{Verantwortlichen} oder
+   \hyperref[itm:04-8]{Auftragsverarbeiter} vor einem Gericht in einem anderen Mitgliedstaat anhängig, so kann jedes
+    später angerufene zuständige Gericht das bei ihm anhängige Verfahren aussetzen.
   \label{itm:81-2}
 
   \item Sind diese Verfahren in erster Instanz anhängig, so kann sich jedes später angerufene Gericht auf Antrag einer
