--- a/artikel/82.tex
+++ b/artikel/82.tex
@@ -7,33 +7,41 @@
 \begin{enumerate}
 
   \item Jede Person, der wegen eines Verstoßes gegen diese Verordnung ein materieller oder immaterieller Schaden
-   entstanden ist, hat Anspruch auf Schadenersatz gegen den \hyperref[itm:04-7]{Verantwortlichen} oder gegen den \hyperref[itm:04-8]{Auftragsverarbeiter}.
+   entstanden ist, hat Anspruch auf Schadenersatz gegen den \hyperref[itm:04-7]{Verantwortlichen} oder gegen
+   den \hyperref[itm:04-8]{Auftragsverarbeiter}.
   \label{itm:82-1}
 
-  \item Jeder an einer \hyperref[itm:04-2]{Verarbeitung} beteiligte \hyperref[itm:04-7]{Verantwortliche} haftet für den Schaden, der durch eine nicht dieser
-   Verordnung entsprechende \hyperref[itm:04-2]{Verarbeitung} verursacht wurde. Ein \hyperref[itm:04-8]{Auftragsverarbeiter} haftet für den durch eine
-   \hyperref[itm:04-2]{Verarbeitung} verursachten Schaden nur dann, wenn er seinen speziell den \hyperref[itm:04-8]{Auftragsverarbeitern} auferlegten Pflichten
-   aus dieser Verordnung nicht nachgekommen ist oder unter Nichtbeachtung der rechtmäßig erteilten Anweisungen des für
-   die Daten\hyperref[itm:04-2]{verarbeitung} \hyperref[itm:04-7]{Verantwortlichen} oder gegen diese Anweisungen gehandelt hat.
+  \item Jeder an einer \hyperref[itm:04-2]{Verarbeitung} beteiligte \hyperref[itm:04-7]{Verantwortliche} haftet für den
+   Schaden, der durch eine nicht dieser Verordnung entsprechende \hyperref[itm:04-2]{Verarbeitung} verursacht wurde.
+   Ein \hyperref[itm:04-8]{Auftragsverarbeiter} haftet für den durch eine
+   \hyperref[itm:04-2]{Verarbeitung} verursachten Schaden nur dann, wenn er seinen speziell den \hyperref[itm:04-8]
+    {Auftragsverarbeitern} auferlegten Pflichten aus dieser Verordnung nicht nachgekommen ist oder unter Nichtbeachtung
+    der rechtmäßig erteilten Anweisungen des für die Daten\hyperref[itm:04-2]{verarbeitung} \hyperref[itm:04-7]
+    {Verantwortlichen} oder gegen diese Anweisungen gehandelt hat.
   \label{itm:82-2}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} wird von der Haftung gemäß \hyperref[itm:82-2]{Absatz 2}
-   befreit, wenn er nachweist, dass er in keinerlei Hinsicht für den Umstand, durch den der Schaden eingetreten ist,
-   verantwortlich ist.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} wird von der Haftung
+   gemäß \hyperref[itm:82-2]{Absatz 2} befreit, wenn er nachweist, dass er in keinerlei Hinsicht für den Umstand, durch
+   den der Schaden eingetreten ist, verantwortlich ist.
   \label{itm:82-3}
 
-  \item Ist mehr als ein \hyperref[itm:04-7]{Verantwortlicher} oder mehr als ein \hyperref[itm:04-8]{Auftragsverarbeiter} bzw. sowohl ein \hyperref[itm:04-7]{Verantwortlicher} als
-   auch ein \hyperref[itm:04-8]{Auftragsverarbeiter} an derselben \hyperref[itm:04-2]{Verarbeitung} beteiligt und sind sie gemäß den Absätzen \hyperref[itm:82-2]
-   {2} und \hyperref[itm:82-3]{3} für einen durch die \hyperref[itm:04-2]{Verarbeitung} verursachten Schaden verantwortlich, so haftet jeder
-   \hyperref[itm:04-7]{Verantwortliche} oder jeder \hyperref[itm:04-8]{Auftragsverarbeiter} für den gesamten Schaden, damit ein wirksamer Schadensersatz für die
+  \item Ist mehr als ein \hyperref[itm:04-7]{Verantwortlicher} oder mehr als ein \hyperref[itm:04-8]
+   {Auftragsverarbeiter} bzw. sowohl ein \hyperref[itm:04-7]{Verantwortlicher} als auch ein \hyperref[itm:04-8]
+   {Auftragsverarbeiter} an derselben \hyperref[itm:04-2]{Verarbeitung} beteiligt und sind sie gemäß den
+   Absätzen \hyperref[itm:82-2]{2} und \hyperref[itm:82-3]{3} für einen durch die \hyperref[itm:04-2]
+   {Verarbeitung} verursachten Schaden verantwortlich, so haftet jeder
+   \hyperref[itm:04-7]{Verantwortliche} oder jeder \hyperref[itm:04-8]{Auftragsverarbeiter} für den gesamten Schaden,
+    damit ein wirksamer Schadensersatz für die
    \hyperref[itm:04-1]{betroffene Person} sichergestellt ist.
   \label{itm:82-4}
 
-  \item Hat ein \hyperref[itm:04-7]{Verantwortlicher} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß \hyperref[itm:82-4]{Absatz 4} vollständigen
-   Schadenersatz für den erlittenen Schaden gezahlt, so ist dieser \hyperref[itm:04-7]{Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} berechtigt,
-   von den übrigen an derselben \hyperref[itm:04-2]{Verarbeitung} beteiligten für die Datenverarbeitung \hyperref[itm:04-7]{Verantwortlichen} oder
-   \hyperref[itm:04-8]{Auftragsverarbeitern} den Teil des Schadenersatzes zurückzufordern, der unter den in \hyperref[itm:82-2]{Absatz 2}
-   festgelegten Bedingungen ihrem Anteil an der Verantwortung für den Schaden entspricht.
+  \item Hat ein \hyperref[itm:04-7]{Verantwortlicher} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß \hyperref
+   [itm:82-4]{Absatz 4} vollständigen Schadenersatz für den erlittenen Schaden gezahlt, so ist dieser \hyperref
+   [itm:04-7]{Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} berechtigt, von den übrigen an
+   derselben \hyperref[itm:04-2]{Verarbeitung} beteiligten für die Datenverarbeitung \hyperref[itm:04-7]
+   {Verantwortlichen} oder
+   \hyperref[itm:04-8]{Auftragsverarbeitern} den Teil des Schadenersatzes zurückzufordern, der unter den in \hyperref
+    [itm:82-2]{Absatz 2} festgelegten Bedingungen ihrem Anteil an der Verantwortung für den Schaden entspricht.
   \label{itm:82-5}
 
   \item Mit Gerichtsverfahren zur Inanspruchnahme des Rechts auf Schadenersatz sind die Gerichte zu befassen, die nach
