--- a/artikel/86.tex
+++ b/artikel/86.tex
@@ -4,11 +4,12 @@
 
 \addsec{Text der Verordnung}
 
-\hyperref[itm:04-1]{Personenbezogene Daten} in amtlichen Dokumenten, die sich im Besitz einer Behörde oder einer öffentlichen Einrichtung
-oder einer privaten Einrichtung zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe befinden, können von
-der Behörde oder der Einrichtung gemäß dem Unionsrecht oder dem Recht des Mitgliedstaats, dem die Behörde oder
-Einrichtung unterliegt, offengelegt werden, um den Zugang der Öffentlichkeit zu amtlichen Dokumenten mit dem Recht auf
-Schutz \hyperref[itm:04-1]{personenbezogener Daten} gemäß dieser Verordnung in Einklang zu bringen.
+\hyperref[itm:04-1]{Personenbezogene Daten} in amtlichen Dokumenten, die sich im Besitz einer Behörde oder einer
+ öffentlichen Einrichtung oder einer privaten Einrichtung zur Erfüllung einer im öffentlichen Interesse liegenden
+ Aufgabe befinden, können von der Behörde oder der Einrichtung gemäß dem Unionsrecht oder dem Recht des Mitgliedstaats,
+ dem die Behörde oder Einrichtung unterliegt, offengelegt werden, um den Zugang der Öffentlichkeit zu amtlichen
+ Dokumenten mit dem Recht auf Schutz \hyperref[itm:04-1]{personenbezogener Daten} gemäß dieser Verordnung in Einklang
+ zu bringen.
 
 \addsec{Eigene Notizen}
 
