--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -6,50 +6,57 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-2]{Verarbeitung} ist nur rechtmäßig, wenn mindestens eine der nachstehenden Bedingungen erfüllt ist:
+  \item Die \hyperref[itm:04-2]{Verarbeitung} ist nur rechtmäßig, wenn mindestens eine der nachstehenden Bedingungen
+   erfüllt ist:
   \label{itm:06-1}
 
   \begin{enumerate}
   
-    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre \hyperref[itm:04-11]{Einwilligung} zu der \hyperref[itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten}
-     für einen oder mehrere bestimmte Zwecke gegeben;
+    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre \hyperref[itm:04-11]{Einwilligung} zu der \hyperref
+     [itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
+     bestimmte Zwecke gegeben;
     \label{itm:06-1a}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Erfüllung eines Vertrags, dessen Vertragspartei die \hyperref[itm:04-1]{betroffene Person} ist, oder
-     zur Durchführung vorvertraglicher Maßnahmen erforderlich, die auf Anfrage der \hyperref[itm:04-1]{betroffenen Person} erfolgen;
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Erfüllung eines Vertrags, dessen Vertragspartei
+     die \hyperref[itm:04-1]{betroffene Person} ist, oder zur Durchführung vorvertraglicher Maßnahmen erforderlich, die
+     auf Anfrage der \hyperref[itm:04-1]{betroffenen Person} erfolgen;
     \label{itm:06-1b}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der der \hyperref[itm:04-7]{Verantwortliche}
-     unterliegt;
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der
+     der \hyperref[itm:04-7]{Verantwortliche} unterliegt;
     \label{itm:06-1c}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, um lebenswichtige Interessen der \hyperref[itm:04-1]{betroffenen Person} oder einer anderen
-     natürlichen Person zu schützen;
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, um lebenswichtige Interessen der \hyperref[itm:04-1]
+     {betroffenen Person} oder einer anderen natürlichen Person zu schützen;
     \label{itm:06-1d}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Wahrnehmung einer Aufgabe erforderlich, die im öffentlichen Interesse liegt oder
-     in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde;
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Wahrnehmung einer Aufgabe erforderlich, die im öffentlichen
+     Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]
+     {Verantwortlichen} übertragen wurde;
     \label{itm:06-1e}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-10]{Dritten}
-     erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Person}, die den
-     Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]{betroffenen Person}
-     um ein Kind handelt.
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des \hyperref[itm:04-7]
+     {Verantwortlichen} oder eines \hyperref[itm:04-10]{Dritten} erforderlich, sofern nicht die Interessen oder
+     Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Person}, die den Schutz \hyperref[itm:04-1]
+     {personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]
+     {betroffenen Person} um ein Kind handelt.
     \label{itm:06-1f}
 
   \end{enumerate}
 
-  Unterabsatz 1 Buchstabe f gilt nicht für die von Behörden in Erfüllung ihrer Aufgaben vorgenommene \hyperref[itm:04-2]{Verarbeitung}.
+  Unterabsatz 1 Buchstabe f gilt nicht für die von Behörden in Erfüllung ihrer Aufgaben vorgenommene \hyperref[itm:04-2]
+  {Verarbeitung}.
 
   \item Die Mitgliedstaaten können spezifischere Bestimmungen zur Anpassung der Anwendung der Vorschriften dieser
-   Verordnung in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung von \hyperref[itm:06-1c]{Absatz 1 Buchstaben c} und \hyperref
-   [itm:06-1e]{e} beibehalten oder einführen, indem sie spezifische Anforderungen für die \hyperref[itm:04-2]{Verarbeitung} sowie sonstige
-   Maßnahmen präziser bestimmen, um eine rechtmäßig und nach Treu und Glauben erfolgende \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten,
-   einschließlich für andere besondere Verarbeitungssituationen gemäß \hyperref[part:9]{Kapitel IX}.
+   Verordnung in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung von \hyperref[itm:06-1c]{Absatz 1
+   Buchstaben c} und \hyperref[itm:06-1e]{e} beibehalten oder einführen, indem sie spezifische Anforderungen für
+   die \hyperref[itm:04-2]{Verarbeitung} sowie sonstige Maßnahmen präziser bestimmen, um eine rechtmäßig und nach Treu
+   und Glauben erfolgende \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten, einschließlich für andere besondere
+   Verarbeitungssituationen gemäß \hyperref[part:9]{Kapitel IX}.
   \label{itm:06-2}
 
-  \item Die Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitungen} gemäß \hyperref[itm:06-1c]{Absatz 1 Buchstaben c} und \hyperref
-   [itm:06-1e]{e} wird festgelegt durch
+  \item Die Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitungen} gemäß \hyperref[itm:06-1c]{Absatz 1 Buchstaben
+   c} und \hyperref[itm:06-1e]{e} wird festgelegt durch
   \label{itm:06-3}
 
   \begin{enumerate}
@@ -62,46 +69,52 @@
 
   \end{enumerate}
 
-  Der Zweck der \hyperref[itm:04-2]{Verarbeitung} muss in dieser Rechtsgrundlage festgelegt oder hinsichtlich der \hyperref[itm:04-2]{Verarbeitung} gemäß
+  Der Zweck der \hyperref[itm:04-2]{Verarbeitung} muss in dieser Rechtsgrundlage festgelegt oder hinsichtlich
+  der \hyperref[itm:04-2]{Verarbeitung} gemäß
   \hyperref[itm:06-1e]{Absatz 1 Buchstaben e} für die Erfüllung einer Aufgabe erforderlich sein, die im öffentlichen
-   Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde. Diese
-   Rechtsgrundlage kann spezifische Bestimmungen zur Anpassung der Anwendung der Vorschriften dieser Verordnung
-   enthalten, unter anderem Bestimmungen darüber, welche allgemeinen Bedingungen für die Regelung der Rechtmäßigkeit
-   der \hyperref[itm:04-2]{Verarbeitung} durch den \hyperref[itm:04-7]{Verantwortlichen} gelten, welche Arten von Daten verarbeitet werden, welche Personen
-   betroffen sind, an welche Einrichtungen und für welche Zwecke die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt werden dürfen,
+   Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]
+   {Verantwortlichen} übertragen wurde. Diese Rechtsgrundlage kann spezifische Bestimmungen zur Anpassung der Anwendung
+   der Vorschriften dieser Verordnung enthalten, unter anderem Bestimmungen darüber, welche allgemeinen Bedingungen für
+   die Regelung der Rechtmäßigkeit der \hyperref[itm:04-2]{Verarbeitung} durch den \hyperref[itm:04-7]
+   {Verantwortlichen} gelten, welche Arten von Daten verarbeitet werden, welche Personen betroffen sind, an welche
+   Einrichtungen und für welche Zwecke die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt werden dürfen,
    welcher Zweckbindung sie unterliegen, wie lange sie gespeichert werden dürfen und welche Verarbeitungsvorgänge
    und -verfahren angewandt werden dürfen, einschließlich Maßnahmen zur Gewährleistung einer rechtmäßig und nach Treu
    und Glauben erfolgenden Verarbeitung, wie solche für sonstige besondere Verarbeitungssituationen gemäß \hyperref
    [part:9]{Kapitel IX}. Das Unionsrecht oder das Recht der Mitgliedstaaten müssen ein im öffentlichen Interesse
    liegendes Ziel verfolgen und in einem angemessenen Verhältnis zu dem verfolgten legitimen Zweck stehen.
 
-  \item Beruht die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben
-   wurden, nicht auf der \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} oder auf einer Rechtsvorschrift der Union oder der
-   Mitgliedstaaten, die in einer demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz
-   der in \hyperref[itm:23-1]{Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der \hyperref[itm:04-7]{Verantwortliche} --
-   um festzustellen, ob die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck mit demjenigen, zu dem die \hyperref[itm:04-1]{personenbezogenen Daten}
-   ursprünglich erhoben wurden, vereinbar ist -- unter anderem
+  \item Beruht die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck als zu demjenigen, zu dem die \hyperref
+   [itm:04-1]{personenbezogenen Daten} erhoben wurden, nicht auf der \hyperref[itm:04-11]{Einwilligung} der \hyperref
+   [itm:04-1]{betroffenen Person} oder auf einer Rechtsvorschrift der Union oder der Mitgliedstaaten, die in einer
+   demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz der in \hyperref[itm:23-1]
+   {Artikel 23 Absatz 1} genannten Ziele darstellt, so berücksichtigt der \hyperref[itm:04-7]{Verantwortliche} -- um
+   festzustellen, ob die \hyperref[itm:04-2]{Verarbeitung} zu einem anderen Zweck mit demjenigen, zu dem die \hyperref
+   [itm:04-1]{personenbezogenen Daten} ursprünglich erhoben wurden, vereinbar ist -- unter anderem
   \label{itm:06-4}
 
   \begin{enumerate}
   
-    \item jede Verbindung zwischen den Zwecken, für die die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, und den Zwecken der
-     beabsichtigten Weiterverarbeitung,
+    \item jede Verbindung zwischen den Zwecken, für die die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden,
+     und den Zwecken der beabsichtigten Weiterverarbeitung,
     \label{itm:06-4a}
 
-    \item den Zusammenhang, in dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, insbesondere hinsichtlich des
-     Verhältnisses zwischen den \hyperref[itm:04-1]{betroffenen Personen} und dem \hyperref[itm:04-7]{Verantwortlichen},
+    \item den Zusammenhang, in dem die \hyperref[itm:04-1]{personenbezogenen Daten} erhoben wurden, insbesondere
+     hinsichtlich des Verhältnisses zwischen den \hyperref[itm:04-1]{betroffenen Personen} und dem \hyperref[itm:04-7]
+     {Verantwortlichen},
     \label{itm:06-4b}
 
-    \item die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, insbesondere ob besondere Kategorien \hyperref[itm:04-1]{personenbezogener Daten} gemäß
-     \hyperref[ch:9]{Artikel 9} verarbeitet werden oder ob \hyperref[itm:04-1]{personenbezogene Daten} über strafrechtliche Verurteilungen
-      und Straftaten gemäß \hyperref[ch:10]{Artikel 10} verarbeitet werden,
+    \item die Art der \hyperref[itm:04-1]{personenbezogenen Daten}, insbesondere ob besondere Kategorien \hyperref
+     [itm:04-1]{personenbezogener Daten} gemäß
+     \hyperref[ch:9]{Artikel 9} verarbeitet werden oder ob \hyperref[itm:04-1]{personenbezogene Daten} über
+      strafrechtliche Verurteilungen und Straftaten gemäß \hyperref[ch:10]{Artikel 10} verarbeitet werden,
     \label{itm:06-4c}
 
     \item die möglichen Folgen der beabsichtigten Weiterverarbeitung für die \hyperref[itm:04-1]{betroffenen Personen},
     \label{itm:06-4d}
 
-    \item das Vorhandensein geeigneter Garantien, wozu Verschlüsselung oder \hyperref[itm:04-5]{Pseudonymisierung} gehören kann.
+    \item das Vorhandensein geeigneter Garantien, wozu Verschlüsselung oder \hyperref[itm:04-5]
+     {Pseudonymisierung} gehören kann.
     \label{itm:06-4e}
 
   \end{enumerate}
