--- a/artikel/21.tex
+++ b/artikel/21.tex
@@ -6,39 +6,44 @@
 
 \begin{enumerate}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, jederzeit
-   gegen die \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die aufgrund von \hyperref[itm:06-1]{Artikel 6
-   Absatz 1} Buchstaben \hyperref[itm:06-1e]{e} oder \hyperref[itm:06-1f]{f} erfolgt, Widerspruch einzulegen; dies gilt
-   auch für ein auf diese Bestimmungen gestütztes \hyperref[itm:04-4]{Profiling}. Der \hyperref[itm:04-7]{Verantwortliche} verarbeitet die personenbezogenen
-   Daten nicht mehr, es sei denn, er kann zwingende schutzwürdige Gründe für die \hyperref[itm:04-2]{Verarbeitung} nachweisen, die die
-   Interessen, Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} überwiegen, oder die \hyperref[itm:04-2]{Verarbeitung} dient der Geltendmachung,
-   Ausübung oder Verteidigung von Rechtsansprüchen.
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation
+   ergeben, jederzeit gegen die \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]
+   {personenbezogener Daten}, die aufgrund von \hyperref[itm:06-1]{Artikel 6 Absatz 1} Buchstaben \hyperref[itm:06-1e]
+   {e} oder \hyperref[itm:06-1f]{f} erfolgt, Widerspruch einzulegen; dies gilt auch für ein auf diese Bestimmungen
+   gestütztes \hyperref[itm:04-4]{Profiling}. Der \hyperref[itm:04-7]{Verantwortliche} verarbeitet die
+   personenbezogenen Daten nicht mehr, es sei denn, er kann zwingende schutzwürdige Gründe für die \hyperref[itm:04-2]
+   {Verarbeitung} nachweisen, die die Interessen, Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person}
+   überwiegen, oder die \hyperref[itm:04-2]{Verarbeitung} dient der Geltendmachung, Ausübung oder Verteidigung von
+   Rechtsansprüchen.
   \label{itm:21-1}
 
-  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, um Direktwerbung zu betreiben, so hat die \hyperref[itm:04-1]{betroffene Person} das
-   Recht, jederzeit Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]{personenbezogener Daten} zum Zwecke derartiger
-   Werbung einzulegen; dies gilt auch für das \hyperref[itm:04-4]{Profiling}, soweit es mit solcher Direktwerbung in Verbindung steht.
+  \item Werden \hyperref[itm:04-1]{personenbezogene Daten} verarbeitet, um Direktwerbung zu betreiben, so hat
+   die \hyperref[itm:04-1]{betroffene Person} das Recht, jederzeit Widerspruch gegen die \hyperref[itm:04-2]
+   {Verarbeitung} sie betreffender \hyperref[itm:04-1]{personenbezogener Daten} zum Zwecke derartiger Werbung
+   einzulegen; dies gilt auch für das \hyperref[itm:04-4]{Profiling}, soweit es mit solcher Direktwerbung in Verbindung
+   steht.
   \label{itm:21-2}
 
-  \item Widerspricht die \hyperref[itm:04-1]{betroffene Person} der \hyperref[itm:04-2]{Verarbeitung} für Zwecke der Direktwerbung, so werden die
+  \item Widerspricht die \hyperref[itm:04-1]{betroffene Person} der \hyperref[itm:04-2]{Verarbeitung} für Zwecke der
+   Direktwerbung, so werden die
    \hyperref[itm:04-1]{personenbezogenen Daten} nicht mehr für diese Zwecke verarbeitet.
   \label{itm:21-3}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} muss spätestens zum Zeitpunkt der ersten Kommunikation mit ihr ausdrücklich auf das in den
-   Absätzen \hyperref[itm:21-1]{1} und \hyperref[itm:21-2]{2} genannte Recht hingewiesen werden; dieser Hinweis hat in
-   einer verständlichen und von anderen Informationen getrennten Form zu erfolgen.
+  \item Die \hyperref[itm:04-1]{betroffene Person} muss spätestens zum Zeitpunkt der ersten Kommunikation mit ihr
+   ausdrücklich auf das in den Absätzen \hyperref[itm:21-1]{1} und \hyperref[itm:21-2]{2} genannte Recht hingewiesen
+   werden; dieser Hinweis hat in einer verständlichen und von anderen Informationen getrennten Form zu erfolgen.
   \label{itm:21-4}
 
-  \item Im Zusammenhang mit der Nutzung von \hyperref[itm:04-28]{Diensten der Informationsgesellschaft} kann die \hyperref[itm:04-1]{betroffene Person} ungeachtet
-   der Richtlinie 2002/58/EG ihr Widerspruchsrecht mittels automatisierter Verfahren ausüben, bei denen technische
-   Spezifikationen verwendet werden.
+  \item Im Zusammenhang mit der Nutzung von \hyperref[itm:04-28]{Diensten der Informationsgesellschaft} kann
+   die \hyperref[itm:04-1]{betroffene Person} ungeachtet der Richtlinie 2002/58/EG ihr Widerspruchsrecht mittels
+   automatisierter Verfahren ausüben, bei denen technische Spezifikationen verwendet werden.
   \label{itm:21-5}
 
-  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation ergeben, gegen die sie
-   betreffende \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]{personenbezogener Daten}, die zu wissenschaftlichen oder historischen
-   Forschungszwecken oder zu statistischen Zwecken gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1} erfolgt, Widerspruch
-   einzulegen, es sei denn, die \hyperref[itm:04-2]{Verarbeitung} ist zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe
-   erforderlich.
+  \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, aus Gründen, die sich aus ihrer besonderen Situation
+   ergeben, gegen die sie betreffende \hyperref[itm:04-2]{Verarbeitung} sie betreffender \hyperref[itm:04-1]
+   {personenbezogener Daten}, die zu wissenschaftlichen oder historischen Forschungszwecken oder zu statistischen
+   Zwecken gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1} erfolgt, Widerspruch einzulegen, es sei denn, die \hyperref
+   [itm:04-2]{Verarbeitung} ist zur Erfüllung einer im öffentlichen Interesse liegenden Aufgabe erforderlich.
   \label{itm:21-6}
 
 \end{enumerate}
@@ -49,8 +54,8 @@
 
   \item Die in \hyperref[itm:21-5]{Absatz 5} referenzierte
    \href{https://eur-lex.europa.eu/legal-content/DE/TXT/HTML/?uri=CELEX:32002L0058&qid=1659212895940&from=DE}
-    {Richtlinie 2002/58/EG} regelt die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} und den Schutz der Privatsphäre in der
-    elektronischen Kommunikation.
+    {Richtlinie 2002/58/EG} regelt die Verarbeitung \hyperref[itm:04-1]{personenbezogener Daten} und den Schutz der
+    Privatsphäre in der elektronischen Kommunikation.
 
 \end{itemize}
 
