--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -6,13 +6,14 @@
 
 \begin{enumerate}
 
-  \item Durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der \hyperref[itm:04-7]{Verantwortliche} oder der
-   \hyperref[itm:04-8]{Auftragsverarbeiter} unterliegt, können die Pflichten und Rechte gemäß den Artikeln \hyperref[ch:12]
-   {12} bis \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34} sowie \hyperref[ch:5]{Artikel 5}, insofern dessen
-   Bestimmungen den in den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22} vorgesehenen Rechten und Pflichten
-   entsprechen, im Wege von Gesetzgebungsmaßnahmen beschränkt werden, sofern eine solche Beschränkung den Wesensgehalt
-   der Grundrechte und Grundfreiheiten achtet und in einer demokratischen Gesellschaft eine notwendige und
-   verhältnismäßige Maßnahme darstellt, die Folgendes sicherstellt:
+  \item Durch Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der \hyperref[itm:04-7]{Verantwortliche} oder
+   der
+   \hyperref[itm:04-8]{Auftragsverarbeiter} unterliegt, können die Pflichten und Rechte gemäß den Artikeln \hyperref
+    [ch:12]{12} bis \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34} sowie \hyperref[ch:5]{Artikel 5}, insofern
+    dessen Bestimmungen den in den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22} vorgesehenen Rechten und
+    Pflichten entsprechen, im Wege von Gesetzgebungsmaßnahmen beschränkt werden, sofern eine solche Beschränkung den
+    Wesensgehalt der Grundrechte und Grundfreiheiten achtet und in einer demokratischen Gesellschaft eine notwendige
+    und verhältnismäßige Maßnahme darstellt, die Folgendes sicherstellt:
   \label{itm:23-1}
 
   \begin{enumerate}
@@ -74,7 +75,8 @@
     \item die Garantien gegen Missbrauch oder unrechtmäßigen Zugang oder unrechtmäßige Übermittlung;
     \label{itm:23-2d}
 
-    \item die Angaben zu dem \hyperref[itm:04-7]{Verantwortlichen} oder den Kategorien von \hyperref[itm:04-7]{Verantwortlichen},
+    \item die Angaben zu dem \hyperref[itm:04-7]{Verantwortlichen} oder den Kategorien von \hyperref[itm:04-7]
+     {Verantwortlichen},
     \label{itm:23-2e}
 
     \item die jeweiligen Speicherfristen sowie die geltenden Garantien unter Berücksichtigung von Art, Umfang und
@@ -84,8 +86,8 @@
     \item die Risiken für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} und
     \label{itm:23-2g}
 
-    \item das Recht der \hyperref[itm:04-1]{betroffenen Personen} auf Unterrichtung über die Beschränkung, sofern dies nicht dem Zweck der
-     Beschränkung abträglich ist.
+    \item das Recht der \hyperref[itm:04-1]{betroffenen Personen} auf Unterrichtung über die Beschränkung, sofern dies
+     nicht dem Zweck der Beschränkung abträglich ist.
     \label{itm:23-2h}
 
   \end{enumerate}
