--- a/artikel/24.tex
+++ b/artikel/24.tex
@@ -6,15 +6,17 @@
 
 \begin{enumerate}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} setzt unter Berücksichtigung der Art, des Umfangs, der Umstände und der Zwecke der
-   \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere der Risiken für die Rechte und
-   Freiheiten natürlicher Personen geeignete technische und organisatorische Maßnahmen um, um sicherzustellen und den
-   Nachweis dafür erbringen zu können, dass die \hyperref[itm:04-2]{Verarbeitung} gemäß dieser Verordnung erfolgt. Diese Maßnahmen werden
-   erforderlichenfalls überprüft und aktualisiert.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} setzt unter Berücksichtigung der Art, des Umfangs, der Umstände und der
+   Zwecke der
+   \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere der Risiken für
+    die Rechte und Freiheiten natürlicher Personen geeignete technische und organisatorische Maßnahmen um, um
+    sicherzustellen und den Nachweis dafür erbringen zu können, dass die \hyperref[itm:04-2]{Verarbeitung} gemäß dieser
+    Verordnung erfolgt. Diese Maßnahmen werden erforderlichenfalls überprüft und aktualisiert.
   \label{itm:24-1}
 
   \item Sofern dies in einem angemessenen Verhältnis zu den Verarbeitungstätigkeiten steht, müssen die Maßnahmen gemäß
-   \hyperref[itm:24-1]{Absatz 1} die Anwendung geeigneter Datenschutzvorkehrungen durch den \hyperref[itm:04-7]{Verantwortlichen} umfassen.
+   \hyperref[itm:24-1]{Absatz 1} die Anwendung geeigneter Datenschutzvorkehrungen durch den \hyperref[itm:04-7]
+    {Verantwortlichen} umfassen.
   \label{itm:24-2}
 
   \item Die Einhaltung der genehmigten Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} oder eines genehmigten
