--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -7,21 +7,26 @@
 \begin{enumerate}
 
   \item Unter Berücksichtigung des Stands der Technik, der Implementierungskosten und der Art, des Umfangs, der Umstände
-   und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und Schwere der mit der
-   \hyperref[itm:04-2]{Verarbeitung} verbundenen Risiken für die Rechte und Freiheiten natürlicher Personen trifft der \hyperref[itm:04-7]{Verantwortliche}
-   sowohl zum Zeitpunkt der Festlegung der Mittel für die \hyperref[itm:04-2]{Verarbeitung} als auch zum Zeitpunkt der eigentlichen
-   \hyperref[itm:04-2]{Verarbeitung} geeignete technische und organisatorische Maßnahmen -- wie z. B. \hyperref[itm:04-5]{Pseudonymisierung} -- trifft, die dafür
-   ausgelegt sind, die Datenschutzgrundsätze wie etwa Datenminimierung wirksam umzusetzen und die notwendigen Garantien
-   in die \hyperref[itm:04-2]{Verarbeitung} aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref[itm:04-1]{betroffenen
-   Personen} zu schützen.
+   und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und
+   Schwere der mit der
+   \hyperref[itm:04-2]{Verarbeitung} verbundenen Risiken für die Rechte und Freiheiten natürlicher Personen trifft
+    der \hyperref[itm:04-7]{Verantwortliche} sowohl zum Zeitpunkt der Festlegung der Mittel für die \hyperref[itm:04-2]
+    {Verarbeitung} als auch zum Zeitpunkt der eigentlichen
+   \hyperref[itm:04-2]{Verarbeitung} geeignete technische und organisatorische Maßnahmen -- wie z. B. \hyperref
+    [itm:04-5]{Pseudonymisierung} -- trifft, die dafür ausgelegt sind, die Datenschutzgrundsätze wie etwa
+    Datenminimierung wirksam umzusetzen und die notwendigen Garantien in die \hyperref[itm:04-2]
+    {Verarbeitung} aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref
+    [itm:04-1]{betroffenen Personen} zu schützen.
   \label{itm:25-1}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} trifft geeignete technische und organisatorische Maßnahmen, die sicherstellen, dass durch
-   Voreinstellung grundsätzlich nur \hyperref[itm:04-1]{personenbezogene Daten}, deren \hyperref[itm:04-2]{Verarbeitung} für den jeweiligen bestimmten
-   Verarbeitungszweck erforderlich ist, verarbeitet werden. Diese Verpflichtung gilt für die Menge der erhobenen
-   \hyperref[itm:04-1]{personenbezogenen Daten}, den Umfang ihrer \hyperref[itm:04-2]{Verarbeitung}, ihre Speicherfrist und ihre Zugänglichkeit. Solche Maßnahmen
-   müssen insbesondere sicherstellen, dass \hyperref[itm:04-1]{personenbezogene Daten} durch Voreinstellungen nicht ohne Eingreifen der
-   Person einer unbestimmten Zahl von natürlichen Personen zugänglich gemacht werden.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} trifft geeignete technische und organisatorische Maßnahmen, die
+   sicherstellen, dass durch Voreinstellung grundsätzlich nur \hyperref[itm:04-1]{personenbezogene Daten},
+   deren \hyperref[itm:04-2]{Verarbeitung} für den jeweiligen bestimmten Verarbeitungszweck erforderlich ist,
+   verarbeitet werden. Diese Verpflichtung gilt für die Menge der erhobenen
+   \hyperref[itm:04-1]{personenbezogenen Daten}, den Umfang ihrer \hyperref[itm:04-2]{Verarbeitung}, ihre Speicherfrist
+    und ihre Zugänglichkeit. Solche Maßnahmen müssen insbesondere sicherstellen, dass \hyperref[itm:04-1]
+    {personenbezogene Daten} durch Voreinstellungen nicht ohne Eingreifen der Person einer unbestimmten Zahl von
+    natürlichen Personen zugänglich gemacht werden.
   \label{itm:25-2}
 
   \item Ein genehmigtes Zertifizierungsverfahren gemäß \hyperref[ch:42]{Artikel 42} kann als Faktor herangezogen werden,
