--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -6,30 +6,34 @@
 
 \begin{enumerate}
 
-  \item Jeder \hyperref[itm:04-7]{Verantwortliche} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen ein Verzeichnis aller Verarbeitungstätigkeiten,
-   die ihrer Zuständigkeit unterliegen. Dieses Verzeichnis enthält sämtliche folgenden Angaben:
+  \item Jeder \hyperref[itm:04-7]{Verantwortliche} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen ein
+   Verzeichnis aller Verarbeitungstätigkeiten, die ihrer Zuständigkeit unterliegen. Dieses Verzeichnis enthält
+   sämtliche folgenden Angaben:
   \label{itm:30-1}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} und gegebenenfalls des gemeinsam mit ihm \hyperref[itm:04-7]{Verantwortlichen},
-     des \hyperref[itm:04-17]{Vertreters} des \hyperref[itm:04-7]{Verantwortlichen} sowie eines etwaigen Datenschutzbeauftragten;
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} und gegebenenfalls des gemeinsam mit
+     ihm \hyperref[itm:04-7]{Verantwortlichen}, des \hyperref[itm:04-17]{Vertreters} des \hyperref[itm:04-7]
+     {Verantwortlichen} sowie eines etwaigen Datenschutzbeauftragten;
     \label{itm:30-1a}
 
     \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung};
     \label{itm:30-1b}
 
-    \item eine Beschreibung der Kategorien \hyperref[itm:04-1]{betroffener Personen} und der Kategorien \hyperref[itm:04-1]{personenbezogener Daten};
+    \item eine Beschreibung der Kategorien \hyperref[itm:04-1]{betroffener Personen} und der Kategorien \hyperref
+     [itm:04-1]{personenbezogener Daten};
     \label{itm:30-1c}
 
-    \item die Kategorien von \hyperref[itm:04-9]{Empfängern}, gegenüber denen die \hyperref[itm:04-1]{personenbezogenen Daten} offengelegt worden sind oder noch
-     offengelegt werden, einschließlich \hyperref[itm:04-9]{Empfänger} in Drittländern oder internationalen Organisationen;
+    \item die Kategorien von \hyperref[itm:04-9]{Empfängern}, gegenüber denen die \hyperref[itm:04-1]
+     {personenbezogenen Daten} offengelegt worden sind oder noch offengelegt werden, einschließlich \hyperref[itm:04-9]
+     {Empfänger} in Drittländern oder internationalen Organisationen;
     \label{itm:30-1d}
 
-    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale
-     Organisation}, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
-     Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} genannten
-     Datenübermittlungen die Dokumentierung geeigneter Garantien;
+    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an
+     eine \hyperref[itm:04-29]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
+     der betreffenden internationalen Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1
+     Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;
     \label{itm:30-1e}
 
     \item wenn möglich, die vorgesehenen Fristen für die Löschung der verschiedenen Datenkategorien;
@@ -41,24 +45,29 @@
 
   \end{enumerate}
 
-  \item Jeder \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen ein Verzeichnis zu allen Kategorien von im
-   Auftrag eines \hyperref[itm:04-7]{Verantwortlichen} durchgeführten Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
+  \item Jeder \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen
+   ein Verzeichnis zu allen Kategorien von im Auftrag eines \hyperref[itm:04-7]{Verantwortlichen} durchgeführten
+   Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, die Folgendes enthält:
   \label{itm:30-2}
 
   \begin{enumerate}
   
-    \item den Namen und die Kontaktdaten des \hyperref[itm:04-8]{Auftragsverarbeiters} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} und jedes
-     \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der \hyperref[itm:04-8]{Auftragsverarbeiter} tätig ist, sowie gegebenenfalls des \hyperref[itm:04-17]{Vertreters} des
-     \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} und eines etwaigen Datenschutzbeauftragten;
+    \item den Namen und die Kontaktdaten des \hyperref[itm:04-8]{Auftragsverarbeiters} oder der \hyperref[itm:04-8]
+     {Auftragsverarbeiter} und jedes
+     \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der \hyperref[itm:04-8]{Auftragsverarbeiter} tätig ist,
+      sowie gegebenenfalls des \hyperref[itm:04-17]{Vertreters} des
+     \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} und eines etwaigen
+      Datenschutzbeauftragten;
     \label{itm:30-2a}
 
-    \item die Kategorien von \hyperref[itm:04-2]{Verarbeitungen}, die im Auftrag jedes \hyperref[itm:04-7]{Verantwortlichen} durchgeführt werden;
+    \item die Kategorien von \hyperref[itm:04-2]{Verarbeitungen}, die im Auftrag jedes \hyperref[itm:04-7]
+     {Verantwortlichen} durchgeführt werden;
     \label{itm:30-2b}
 
-    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale
-     Organisation}, einschließlich der Angabe des betreffenden Drittlands oder der betreffenden internationalen
-     Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1 Unterabsatz 2} genannten
-     Datenübermittlungen die Dokumentierung geeigneter Garantien;
+    \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an
+     eine \hyperref[itm:04-29]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
+     der betreffenden internationalen Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1
+     Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;
     \label{itm:30-2c}
 
     \item wenn möglich, eine allgemeine Beschreibung der technischen und organisatorischen Maßnahmen gemäß \hyperref
@@ -71,16 +80,20 @@
    führen, was auch in einem elektronischen Format erfolgen kann.
   \label{itm:30-3}
 
-  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} sowie gegebenenfalls der \hyperref[itm:04-17]{Vertreter} des \hyperref[itm:04-7]{Verantwortlichen} oder
-   des \hyperref[itm:04-8]{Auftragsverarbeiters} stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur Verfügung.
+  \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} sowie gegebenenfalls
+   der \hyperref[itm:04-17]{Vertreter} des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
+   {Auftragsverarbeiters} stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur
+   Verfügung.
   \label{itm:30-4}
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
-   \hyperref[itm:04-18]{Unternehmen} oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von ihnen vorgenommene
-   \hyperref[itm:04-2]{Verarbeitung} nicht ein Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} birgt, die \hyperref[itm:04-2]{Verarbeitung} nicht
-   nur gelegentlich erfolgt oder nicht die \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9
-   Absatz 1} bzw. die  \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten im
-   Sinne des \hyperref[ch:10]{Artikels 10} einschließt.
+   \hyperref[itm:04-18]{Unternehmen} oder Einrichtungen, die weniger als 250 Mitarbeiter beschäftigen, sofern die von
+    ihnen vorgenommene
+   \hyperref[itm:04-2]{Verarbeitung} nicht ein Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]
+    {betroffenen Personen} birgt, die \hyperref[itm:04-2]{Verarbeitung} nicht nur gelegentlich erfolgt oder nicht
+    die \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien gemäß \hyperref[itm:09-1]{Artikel 9 Absatz 1} bzw.
+    die  \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche
+    Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10} einschließt.
   \label{itm:30-5}
 
 \end{enumerate}
