--- a/artikel/39.tex
+++ b/artikel/39.tex
@@ -11,15 +11,17 @@
 
   \begin{enumerate}
   
-    \item Unterrichtung und Beratung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} und der Beschäftigten, die
-     \hyperref[itm:04-2]{Verarbeitungen} durchführen, hinsichtlich ihrer Pflichten nach dieser Verordnung sowie nach sonstigen
-     Datenschutzvorschriften der Union bzw. der Mitgliedstaaten;
+    \item Unterrichtung und Beratung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
+     {Auftragsverarbeiters} und der Beschäftigten, die
+     \hyperref[itm:04-2]{Verarbeitungen} durchführen, hinsichtlich ihrer Pflichten nach dieser Verordnung sowie nach
+      sonstigen Datenschutzvorschriften der Union bzw. der Mitgliedstaaten;
     \label{itm:39-1a}
 
     \item Überwachung der Einhaltung dieser Verordnung, anderer Datenschutzvorschriften der Union bzw. der
-     Mitgliedstaaten sowie der Strategien des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} für den Schutz
-     \hyperref[itm:04-1]{personenbezogener Daten} einschließlich der Zuweisung von Zuständigkeiten, der Sensibilisierung und Schulung der an
-     den Verarbeitungsvorgängen beteiligten Mitarbeiter und der diesbezüglichen Überprüfungen;
+     Mitgliedstaaten sowie der Strategien des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
+     {Auftragsverarbeiters} für den Schutz
+     \hyperref[itm:04-1]{personenbezogener Daten} einschließlich der Zuweisung von Zuständigkeiten, der Sensibilisierung
+      und Schulung der an den Verarbeitungsvorgängen beteiligten Mitarbeiter und der diesbezüglichen Überprüfungen;
     \label{itm:39-1b}
 
     \item Beratung -- auf Anfrage -- im Zusammenhang mit der Datenschutz-Folgenabschätzung und Überwachung ihrer
@@ -29,16 +31,16 @@
     \item Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:39-1d}
 
-    \item Tätigkeit als Anlaufstelle für die \hyperref[itm:04-21]{Aufsichtsbehörde} in mit der \hyperref[itm:04-2]{Verarbeitung} zusammenhängenden Fragen,
-     einschließlich der vorherigen Konsultation gemäß \hyperref[ch:36]{Artikel 36}, und gegebenenfalls Beratung zu
-     allen sonstigen Fragen.
+    \item Tätigkeit als Anlaufstelle für die \hyperref[itm:04-21]{Aufsichtsbehörde} in mit der \hyperref[itm:04-2]
+     {Verarbeitung} zusammenhängenden Fragen, einschließlich der vorherigen Konsultation gemäß \hyperref[ch:36]
+     {Artikel 36}, und gegebenenfalls Beratung zu allen sonstigen Fragen.
     \label{itm:39-1e}
 
   \end{enumerate}
 
   \item Der Datenschutzbeauftragte trägt bei der Erfüllung seiner Aufgaben dem mit den Verarbeitungsvorgängen
-   verbundenen Risiko gebührend Rechnung, wobei er die Art, den Umfang, die Umstände und die Zwecke der \hyperref[itm:04-2]{Verarbeitung}
-   berücksichtigt.
+   verbundenen Risiko gebührend Rechnung, wobei er die Art, den Umfang, die Umstände und die Zwecke der \hyperref
+   [itm:04-2]{Verarbeitung} berücksichtigt.
   \label{itm:39-e}
 
 \end{enumerate}
