--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -6,15 +6,15 @@
 
 \begin{enumerate}
 
-  \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern die Ausarbeitung von
-   Verhaltensregeln, die nach Maßgabe der Besonderheiten der einzelnen Verarbeitungsbereiche und der besonderen
-   Bedürfnisse von Kleinstunternehmen sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} zur ordnungsgemäßen Anwendung dieser
-   Verordnung beitragen sollen.
+  \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern die
+   Ausarbeitung von Verhaltensregeln, die nach Maßgabe der Besonderheiten der einzelnen Verarbeitungsbereiche und der
+   besonderen Bedürfnisse von Kleinstunternehmen sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} zur
+   ordnungsgemäßen Anwendung dieser Verordnung beitragen sollen.
   \label{itm:40-1}
 
-  \item Verbände und andere Vereinigungen, die Kategorien von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} vertreten,
-   können Verhaltensregeln ausarbeiten oder ändern oder erweitern, mit denen die Anwendung dieser Verordnung
-   beispielsweise zu dem Folgenden präzisiert wird:
+  \item Verbände und andere Vereinigungen, die Kategorien von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
+   [itm:04-8]{Auftragsverarbeitern} vertreten, können Verhaltensregeln ausarbeiten oder ändern oder erweitern, mit
+   denen die Anwendung dieser Verordnung beispielsweise zu dem Folgenden präzisiert wird:
   \label{itm:40-2}
 
   \begin{enumerate}
@@ -37,67 +37,75 @@
     \item Ausübung der Rechte \hyperref[itm:04-1]{betroffener Personen};
     \label{itm:40-2f}
 
-    \item Unterrichtung und Schutz von Kindern und Art und Weise, in der die \hyperref[itm:04-11]{Einwilligung} des Trägers der elterlichen
-     Verantwortung für das Kind einzuholen ist;
+    \item Unterrichtung und Schutz von Kindern und Art und Weise, in der die \hyperref[itm:04-11]{Einwilligung} des
+     Trägers der elterlichen Verantwortung für das Kind einzuholen ist;
     \label{itm:40-2g}
 
     \item die Maßnahmen und Verfahren gemäß den Artikeln \hyperref[ch:24]{24} und \hyperref[ch:25]{25} und die Maßnahmen
      für die Sicherheit der \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[ch:32]{Artikel 32};
     \label{itm:40-2h}
 
-    \item die Meldung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} an \hyperref[itm:04-21]{Aufsichtsbehörden} und die
-     Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} von solchen \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten};
+    \item die Meldung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} an \hyperref
+     [itm:04-21]{Aufsichtsbehörden} und die Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} von
+     solchen \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten};
     \label{itm:40-2i}
 
-    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an \hyperref[itm:04-29]{internationale Organisationen} oder
+    \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an \hyperref[itm:04-29]
+     {internationale Organisationen} oder
     \label{itm:40-2j}
 
     \item außergerichtliche Verfahren und sonstige Streitbeilegungsverfahren zur Beilegung von Streitigkeiten zwischen
-     \hyperref[itm:04-7]{Verantwortlichen} und \hyperref[itm:04-1]{betroffenen Personen} im Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung}, unbeschadet der Rechte \hyperref[itm:04-1]{betroffener
-     Personen} gemäß den Artikeln \hyperref[ch:77]{77} und \hyperref[ch:79]{79}.
+     \hyperref[itm:04-7]{Verantwortlichen} und \hyperref[itm:04-1]{betroffenen Personen} im Zusammenhang mit
+      der \hyperref[itm:04-2]{Verarbeitung}, unbeschadet der Rechte \hyperref[itm:04-1]{betroffener Personen} gemäß den
+      Artikeln \hyperref[ch:77]{77} und \hyperref[ch:79]{79}.
     \label{itm:40-2k}
 
   \end{enumerate}
 
-  \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}
-   können Verhaltensregeln, die gemäß \hyperref[itm:40-5]{Absatz 5 des vorliegenden Artikels} genehmigt wurden und
-   gemäß \hyperref[itm:40-9]{Absatz 9 des vorliegenden Artikels} allgemeine Gültigkeit besitzen, können auch von
-   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern}, die gemäß \hyperref[ch:3]{Artikel 3} nicht unter diese Verordnung
-   fallen, eingehalten werden, um geeignete Garantien im Rahmen der Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer
-   oder \hyperref[itm:04-29]{internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu
-   bieten. Diese \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger rechtlich
-   bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, die geeigneten Garantien anzuwenden,
-   auch im Hinblick auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}.
+  \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]
+   {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} können Verhaltensregeln, die gemäß \hyperref
+   [itm:40-5]{Absatz 5 des vorliegenden Artikels} genehmigt wurden und gemäß \hyperref[itm:40-9]{Absatz 9 des
+   vorliegenden Artikels} allgemeine Gültigkeit besitzen, können auch von
+   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern}, die gemäß \hyperref[ch:3]
+    {Artikel 3} nicht unter diese Verordnung fallen, eingehalten werden, um geeignete Garantien im Rahmen der
+    Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder \hyperref[itm:04-29]
+    {internationale Organisationen} nach Maßgabe des \hyperref[itm:46-2e]{Artikels 46 Absatz 2 Buchstabe e} zu bieten.
+    Diese \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels
+    vertraglicher oder sonstiger rechtlich bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein,
+    die geeigneten Garantien anzuwenden, auch im Hinblick auf die Rechte der \hyperref[itm:04-1]
+    {betroffenen Personen}.
   \label{itm:40-3}
 
   \item Die Verhaltensregeln gemäß \hyperref[itm:40-2]{Absatz 2 des vorliegenden Artikels} müssen Verfahren vorsehen,
    die es der in \hyperref[itm:41-2]{Artikel 41 Absatz 1} genannten Stelle ermöglichen, die obligatorische Überwachung
-   der Einhaltung ihrer Bestimmungen durch die \hyperref[itm:04-7]{Verantwortlichen} oder die \hyperref[itm:04-8]{Auftragsverarbeiter}, die sich zur Anwendung
-   der Verhaltensregeln verpflichten, vorzunehmen, unbeschadet der Aufgaben und Befugnisse der \hyperref[itm:04-21]{Aufsichtsbehörde}, die
-   nach Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig ist.
+   der Einhaltung ihrer Bestimmungen durch die \hyperref[itm:04-7]{Verantwortlichen} oder die \hyperref[itm:04-8]
+   {Auftragsverarbeiter}, die sich zur Anwendung der Verhaltensregeln verpflichten, vorzunehmen, unbeschadet der
+   Aufgaben und Befugnisse der \hyperref[itm:04-21]{Aufsichtsbehörde}, die nach Artikel \hyperref[ch:55]
+   {55} oder \hyperref[ch:56]{56} zuständig ist.
   \label{itm:40-4}
 
   \item Verbände und andere Vereinigungen gemäß \hyperref[itm:40-2]{Absatz 2 des vorliegenden Artikels}, die
    beabsichtigen, Verhaltensregeln auszuarbeiten oder bestehende Verhaltensregeln zu ändern oder zu erweitern, legen
-   den Entwurf der Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung der \hyperref[itm:04-21]{Aufsichtsbehörde} vor, die
-   nach \hyperref[ch:55]{Artikel 55} zuständig ist. Die \hyperref[itm:04-21]{Aufsichtsbehörde} gibt eine Stellungnahme darüber ab, ob der
-   Entwurf der Verhaltensregeln bzw. der Entwurf zu deren Änderung oder Erweiterung mit dieser Verordnung vereinbar ist
-   und genehmigt diesen Entwurf der Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung, wenn sie der
-   Auffassung ist, dass er ausreichende geeignete Garantien bietet.
+   den Entwurf der Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung der \hyperref[itm:04-21]
+   {Aufsichtsbehörde} vor, die nach \hyperref[ch:55]{Artikel 55} zuständig ist. Die \hyperref[itm:04-21]
+   {Aufsichtsbehörde} gibt eine Stellungnahme darüber ab, ob der Entwurf der Verhaltensregeln bzw. der Entwurf zu deren
+   Änderung oder Erweiterung mit dieser Verordnung vereinbar ist und genehmigt diesen Entwurf der Verhaltensregeln bzw.
+   den Entwurf zu deren Änderung oder Erweiterung, wenn sie der Auffassung ist, dass er ausreichende geeignete
+   Garantien bietet.
   \label{itm:40-5}
 
   \item Wird durch die Stellungnahme nach \hyperref[itm:40-5]{Absatz 5} der Entwurf der Verhaltensregeln bzw. der
    Entwurf zu deren Änderung oder Erweiterung genehmigt und beziehen sich die betreffenden Verhaltensregeln nicht auf
-   Verarbeitungstätigkeiten in mehreren Mitgliedstaaten, so nimmt die \hyperref[itm:04-21]{Aufsichtsbehörde} die Verhaltensregeln in ein
-   Verzeichnis auf und veröffentlicht sie.
+   Verarbeitungstätigkeiten in mehreren Mitgliedstaaten, so nimmt die \hyperref[itm:04-21]{Aufsichtsbehörde} die
+   Verhaltensregeln in ein Verzeichnis auf und veröffentlicht sie.
   \label{itm:40-6}
 
   \item Bezieht sich der Entwurf der Verhaltensregeln auf Verarbeitungstätigkeiten in mehreren Mitgliedstaaten, so legt
-   die nach \hyperref[ch:55]{Artikel 55} zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} -- bevor sie den Entwurf der Verhaltensregeln bzw.
-   den Entwurf zu deren Änderung oder Erweiterung genehmigt -- ihn nach dem Verfahren gemäß \hyperref[ch:63]
-   {Artikel 63} dem Ausschuss vor, der zu der Frage Stellung nimmt, ob der Entwurf der Verhaltensregeln bzw. der
-   Entwurf zu deren Änderung oder Erweiterung mit dieser Verordnung vereinbar ist oder -- im Fall nach \hyperref
-   [itm:40-3]{Absatz 3 dieses Artikels} -- geeignete Garantien vorsieht.
+   die nach \hyperref[ch:55]{Artikel 55} zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} -- bevor sie den Entwurf der
+   Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung genehmigt -- ihn nach dem Verfahren
+   gemäß \hyperref[ch:63]{Artikel 63} dem Ausschuss vor, der zu der Frage Stellung nimmt, ob der Entwurf der
+   Verhaltensregeln bzw. der Entwurf zu deren Änderung oder Erweiterung mit dieser Verordnung vereinbar ist oder -- im
+   Fall nach \hyperref[itm:40-3]{Absatz 3 dieses Artikels} -- geeignete Garantien vorsieht.
   \label{itm:40-7}
 
   \item Wird durch die Stellungnahme nach \hyperref[itm:40-3]{Absatz 7} bestätigt, dass der Entwurf der Verhaltensregeln
