--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -6,18 +6,21 @@
 
 \begin{enumerate}
 
-  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} genehmigt gemäß dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63}
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} genehmigt gemäß dem Kohärenzverfahren nach \hyperref
+   [ch:63]{Artikel 63}
    \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften}, sofern diese
   \label{itm:47-1}
 
   \begin{enumerate}
   
-    \item rechtlich bindend sind, für alle betreffenden Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder einer Gruppe von
-     \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, gelten und von diesen Mitgliedern durchgesetzt
-     werden, und dies auch für ihre Beschäftigten gilt,
+    \item rechtlich bindend sind, für alle betreffenden Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder
+     einer Gruppe von
+     \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, gelten und von diesen
+      Mitgliedern durchgesetzt werden, und dies auch für ihre Beschäftigten gilt,
     \label{itm:47-1a}
 
-    \item den \hyperref[itm:04-1]{betroffenen Personen} ausdrücklich durchsetzbare Rechte in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} ihrer
+    \item den \hyperref[itm:04-1]{betroffenen Personen} ausdrücklich durchsetzbare Rechte in Bezug auf die \hyperref
+     [itm:04-2]{Verarbeitung} ihrer
      \hyperref[itm:04-1]{personenbezogenen Daten} übertragen und
     \label{itm:47-1b}
 
@@ -26,19 +29,20 @@
 
   \end{enumerate}
 
-  \item Die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} nach \hyperref[itm:47-1]{Absatz 1} enthalten mindestens
-   folgende Angaben:
+  \item Die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} nach \hyperref[itm:47-1]{Absatz 1}
+   enthalten mindestens folgende Angaben:
   \label{itm:47-2}
 
   \begin{enumerate}
   
-    \item Struktur und Kontaktdaten der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame
-     Wirtschaftstätigkeit ausüben, und jedes ihrer Mitglieder;
+    \item Struktur und Kontaktdaten der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]
+     {Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, und jedes ihrer Mitglieder;
     \label{itm:4722a}
 
-    \item die betreffenden Datenübermittlungen oder Reihen von Datenübermittlungen einschließlich der betreffenden Arten
-     \hyperref[itm:04-1]{personenbezogener Daten}, Art und Zweck der Datenverarbeitung, Art der \hyperref[itm:04-1]{betroffenen Personen} und das betreffende
-     Drittland beziehungsweise die betreffenden Drittländer;
+    \item die betreffenden Datenübermittlungen oder Reihen von Datenübermittlungen einschließlich der betreffenden
+     Arten
+     \hyperref[itm:04-1]{personenbezogener Daten}, Art und Zweck der Datenverarbeitung, Art der \hyperref[itm:04-1]
+      {betroffenen Personen} und das betreffende Drittland beziehungsweise die betreffenden Drittländer;
     \label{itm:47-2b}
 
     \item interne und externe Rechtsverbindlichkeit der betreffenden internen Datenschutzvorschriften;
@@ -46,64 +50,77 @@
 
     \item die Anwendung der allgemeinen Datenschutzgrundsätze, insbesondere Zweckbindung, Datenminimierung, begrenzte
      Speicherfristen, Datenqualität, Datenschutz durch Technikgestaltung und durch datenschutzfreundliche
-     Voreinstellungen, Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitung}, \hyperref[itm:04-2]{Verarbeitung} besonderer Kategorien von personenbezogenen
-     Daten, Maßnahmen zur Sicherstellung der Datensicherheit und Anforderungen für die Weiterübermittlung an nicht an
-     diese internen Datenschutzvorschriften gebundene Stellen;
+     Voreinstellungen, Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitung}, \hyperref[itm:04-2]
+     {Verarbeitung} besonderer Kategorien von personenbezogenen Daten, Maßnahmen zur Sicherstellung der Datensicherheit
+     und Anforderungen für die Weiterübermittlung an nicht an diese internen Datenschutzvorschriften gebundene
+     Stellen;
     \label{itm:47-2d}
 
-    \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} und die diesen offenstehenden Mittel zur
-     Wahrnehmung dieser Rechte einschließlich des Rechts, nicht einer ausschließlich auf einer automatisierten
-     \hyperref[itm:04-2]{Verarbeitung} -- einschließlich \hyperref[itm:04-4]{Profiling} -- beruhenden Entscheidung nach \hyperref[ch:22]{Artikel 22} unterworfen
-     zu werden sowie des in \hyperref[ch:79]{Artikel 79} niedergelegten Rechts auf Beschwerde bei der zuständigen
-     \hyperref[itm:04-21]{Aufsichtsbehörde} beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen Gerichten der
-     Mitgliedstaaten und im Falle einer Verletzung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} Wiedergutmachung
-     und gegebenenfalls Schadenersatz zu erhalten;
+    \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die \hyperref[itm:04-2]
+     {Verarbeitung} und die diesen offenstehenden Mittel zur Wahrnehmung dieser Rechte einschließlich des Rechts, nicht
+     einer ausschließlich auf einer automatisierten
+     \hyperref[itm:04-2]{Verarbeitung} -- einschließlich \hyperref[itm:04-4]{Profiling} -- beruhenden Entscheidung
+      nach \hyperref[ch:22]{Artikel 22} unterworfen zu werden sowie des in \hyperref[ch:79]{Artikel 79} niedergelegten
+      Rechts auf Beschwerde bei der zuständigen
+     \hyperref[itm:04-21]{Aufsichtsbehörde} beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen
+      Gerichten der Mitgliedstaaten und im Falle einer Verletzung der \hyperref[itm:04-20]{verbindlichen internen
+      Datenschutzvorschriften} Wiedergutmachung und gegebenenfalls Schadenersatz zu erhalten;
     \label{itm:47-2e}
 
-    \item die von dem in einem Mitgliedstaat niedergelassenen \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} übernommene
-     Haftung für etwaige Verstöße eines nicht in der Union niedergelassenen betreffenden Mitglieds der
-     \hyperref[itm:04-19]{Unternehmensgruppe} gegen die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}; der \hyperref[itm:04-7]{Verantwortliche} oder der
-     \hyperref[itm:04-8]{Auftragsverarbeiter} ist nur dann teilweise oder vollständig von dieser Haftung befreit, wenn er nachweist, dass
-     der Umstand, durch den der Schaden eingetreten ist, dem betreffenden Mitglied nicht zur Last gelegt werden kann;
+    \item die von dem in einem Mitgliedstaat niedergelassenen \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
+     [itm:04-8]{Auftragsverarbeiter} übernommene Haftung für etwaige Verstöße eines nicht in der Union niedergelassenen
+     betreffenden Mitglieds der
+     \hyperref[itm:04-19]{Unternehmensgruppe} gegen die \hyperref[itm:04-20]{verbindlichen internen
+      Datenschutzvorschriften}; der \hyperref[itm:04-7]{Verantwortliche} oder der
+     \hyperref[itm:04-8]{Auftragsverarbeiter} ist nur dann teilweise oder vollständig von dieser Haftung befreit, wenn
+      er nachweist, dass der Umstand, durch den der Schaden eingetreten ist, dem betreffenden Mitglied nicht zur Last
+      gelegt werden kann;
     \label{itm:47-2f}
 
-    \item die Art und Weise, wie die \hyperref[itm:04-1]{betroffenen Personen} über die Bestimmungen der Artikel \hyperref[ch:13]{13} und
-     \hyperref[ch:14]{14} hinaus über die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} und insbesondere über die unter
-     den Buchstaben \hyperref[itm:47-2d]{d}, \hyperref[itm:47-2e]{e} und \hyperref[itm:47-2f]{f} dieses Absatzes
-     genannten Aspekte informiert werden;
+    \item die Art und Weise, wie die \hyperref[itm:04-1]{betroffenen Personen} über die Bestimmungen der
+     Artikel \hyperref[ch:13]{13} und
+     \hyperref[ch:14]{14} hinaus über die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} und
+      insbesondere über die unter den Buchstaben \hyperref[itm:47-2d]{d}, \hyperref[itm:47-2e]{e} und \hyperref
+      [itm:47-2f]{f} dieses Absatzes genannten Aspekte informiert werden;
     \label{itm:47-2g}
 
     \item die Aufgaben jedes gemäß \hyperref[ch:37]{Artikel 37} benannten Datenschutzbeauftragten oder jeder anderen
-     Person oder Einrichtung, die mit der Überwachung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}
-     in der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, sowie mit
-     der Überwachung der Schulungsmaßnahmen und dem Umgang mit Beschwerden befasst ist;
+     Person oder Einrichtung, die mit der Überwachung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen
+     Datenschutzvorschriften} in der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]
+     {Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, sowie mit der Überwachung der Schulungsmaßnahmen
+     und dem Umgang mit Beschwerden befasst ist;
     \label{itm:47-2h}
 
     \item die Beschwerdeverfahren;
     \label{itm:47-2i}
 
-    \item die innerhalb der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit
-     ausüben, bestehenden Verfahren zur Überprüfung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}.
-     Derartige Verfahren beinhalten Datenschutzüberprüfungen und Verfahren zur Gewährleistung von Abhilfemaßnahmen zum
-     Schutz der Rechte der \hyperref[itm:04-1]{betroffenen Person}. Die Ergebnisse derartiger Überprüfungen sollten der in \hyperref
+    \item die innerhalb der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]
+     {Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, bestehenden Verfahren zur Überprüfung der
+     Einhaltung der \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften}. Derartige Verfahren
+     beinhalten Datenschutzüberprüfungen und Verfahren zur Gewährleistung von Abhilfemaßnahmen zum Schutz der Rechte
+     der \hyperref[itm:04-1]{betroffenen Person}. Die Ergebnisse derartiger Überprüfungen sollten der in \hyperref
      [itm:47-2h]{Buchstabe h} genannten Person oder Einrichtung sowie dem Verwaltungsrat des herrschenden Unternehmens
-     einer \hyperref[itm:04-19]{Unternehmensgruppe} oder der Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben,
-     mitgeteilt werden und sollten der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} auf Anfrage zur Verfügung gestellt werden;
+     einer \hyperref[itm:04-19]{Unternehmensgruppe} oder der Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine
+     gemeinsame Wirtschaftstätigkeit ausüben, mitgeteilt werden und sollten der zuständigen \hyperref[itm:04-21]
+     {Aufsichtsbehörde} auf Anfrage zur Verfügung gestellt werden;
     \label{itm:47-2j}
 
     \item die Verfahren für die Meldung und Erfassung von Änderungen der Vorschriften und ihre Meldung an die
      \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:47-2k}
 
-    \item die Verfahren für die Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, die die Befolgung der Vorschriften durch
-     sämtliche Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit
-     ausüben, gewährleisten, insbesondere durch Offenlegung der Ergebnisse von Überprüfungen der unter \hyperref
-     [itm:47-2j]{Buchstabe j} genannten Maßnahmen gegenüber der \hyperref[itm:04-21]{Aufsichtsbehörde};
+    \item die Verfahren für die Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, die die Befolgung der
+     Vorschriften durch sämtliche Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref
+     [itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, gewährleisten, insbesondere durch
+     Offenlegung der Ergebnisse von Überprüfungen der unter \hyperref[itm:47-2j]{Buchstabe j} genannten Maßnahmen
+     gegenüber der \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:47-2l}
 
-    \item die Meldeverfahren zur Unterrichtung der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} über jegliche für ein Mitglied der
-     \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, in einem
-     Drittland geltenden rechtlichen Bestimmungen, die sich nachteilig auf die Garantien auswirken könnten, die die
+    \item die Meldeverfahren zur Unterrichtung der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} über jegliche für
+     ein Mitglied der
+     \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame
+      Wirtschaftstätigkeit ausüben, in einem Drittland geltenden rechtlichen Bestimmungen, die sich nachteilig auf die
+      Garantien auswirken könnten, die die
      \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} bieten, und
     \label{itm:47-2m}
 
@@ -113,10 +130,11 @@
 
   \end{enumerate}
 
-  \item Die Kommission kann das Format und die Verfahren für den Informationsaustausch über \hyperref[itm:04-20]{verbindliche interne
-   Datenschutzvorschriften} im Sinne des vorliegenden Artikels zwischen \hyperref[itm:04-7]{Verantwortlichen}, \hyperref[itm:04-8]{Auftragsverarbeitern} und
-   \hyperref[itm:04-21]{Aufsichtsbehörden} festlegen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
-   {Artikel 93 Absatz 2} erlassen.
+  \item Die Kommission kann das Format und die Verfahren für den Informationsaustausch über \hyperref[itm:04-20]
+   {verbindliche interne Datenschutzvorschriften} im Sinne des vorliegenden Artikels zwischen \hyperref[itm:04-7]
+   {Verantwortlichen}, \hyperref[itm:04-8]{Auftragsverarbeitern} und
+   \hyperref[itm:04-21]{Aufsichtsbehörden} festlegen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren
+    nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} erlassen.
   \label{itm:47-3}
 
 \end{enumerate}
