--- a/artikel/54.tex
+++ b/artikel/54.tex
@@ -18,32 +18,34 @@
      \hyperref[itm:04-21]{Aufsichtsbehörde};
     \label{itm:54-1b}
 
-    \item die Vorschriften und Verfahren für die Ernennung des Mitglieds oder der Mitglieder jeder \hyperref[itm:04-21]{Aufsichtsbehörde};
+    \item die Vorschriften und Verfahren für die Ernennung des Mitglieds oder der Mitglieder jeder \hyperref[itm:04-21]
+     {Aufsichtsbehörde};
     \label{itm:54-1c}
 
-    \item die Amtszeit des Mitglieds oder der Mitglieder jeder \hyperref[itm:04-21]{Aufsichtsbehörde} von mindestens vier Jahren; dies gilt
-     nicht für die erste Amtszeit nach 24. Mai 2016, die für einen Teil der Mitglieder kürzer sein kann, wenn eine
-     zeitlich versetzte Ernennung zur Wahrung der Unabhängigkeit der \hyperref[itm:04-21]{Aufsichtsbehörde} notwendig ist;
+    \item die Amtszeit des Mitglieds oder der Mitglieder jeder \hyperref[itm:04-21]{Aufsichtsbehörde} von mindestens
+     vier Jahren; dies gilt nicht für die erste Amtszeit nach 24. Mai 2016, die für einen Teil der Mitglieder kürzer
+     sein kann, wenn eine zeitlich versetzte Ernennung zur Wahrung der Unabhängigkeit der \hyperref[itm:04-21]
+     {Aufsichtsbehörde} notwendig ist;
     \label{itm:54-1d}
 
-    \item die Frage, ob und -- wenn ja -- wie oft das Mitglied oder die Mitglieder jeder \hyperref[itm:04-21]{Aufsichtsbehörde} wiederernannt
-     werden können;
+    \item die Frage, ob und -- wenn ja -- wie oft das Mitglied oder die Mitglieder jeder \hyperref[itm:04-21]
+     {Aufsichtsbehörde} wiederernannt werden können;
     \label{itm:54-1e}
 
     \item die Bedingungen im Hinblick auf die Pflichten des Mitglieds oder der Mitglieder und der Bediensteten jeder
-     \hyperref[itm:04-21]{Aufsichtsbehörde}, die Verbote von Handlungen, beruflichen Tätigkeiten und Vergütungen während und nach der
-     Amtszeit, die mit diesen Pflichten unvereinbar sind, und die Regeln für die Beendigung des
-     Beschäftigungsverhältnisses.
+     \hyperref[itm:04-21]{Aufsichtsbehörde}, die Verbote von Handlungen, beruflichen Tätigkeiten und Vergütungen während
+      und nach der Amtszeit, die mit diesen Pflichten unvereinbar sind, und die Regeln für die Beendigung des
+      Beschäftigungsverhältnisses.
    \label{itm:54-1f}
 
   \end{enumerate}
 
-  \item Das Mitglied oder die Mitglieder und die Bediensteten jeder \hyperref[itm:04-21]{Aufsichtsbehörde} sind gemäß dem Unionsrecht oder dem
-   Recht der Mitgliedstaaten sowohl während ihrer Amts- beziehungsweise Dienstzeit als auch nach deren Beendigung
-   verpflichtet, über alle vertraulichen Informationen, die ihnen bei der Wahrnehmung ihrer Aufgaben oder der Ausübung
-   ihrer Befugnisse bekannt geworden sind, Verschwiegenheit zu wahren. Während dieser Amts- beziehungsweise Dienstzeit
-   gilt diese Verschwiegenheitspflicht insbesondere für die von natürlichen Personen gemeldeten Verstößen gegen diese
-   Verordnung.
+  \item Das Mitglied oder die Mitglieder und die Bediensteten jeder \hyperref[itm:04-21]{Aufsichtsbehörde} sind gemäß
+   dem Unionsrecht oder dem Recht der Mitgliedstaaten sowohl während ihrer Amts- beziehungsweise Dienstzeit als auch
+   nach deren Beendigung verpflichtet, über alle vertraulichen Informationen, die ihnen bei der Wahrnehmung ihrer
+   Aufgaben oder der Ausübung ihrer Befugnisse bekannt geworden sind, Verschwiegenheit zu wahren. Während dieser Amts-
+   beziehungsweise Dienstzeit gilt diese Verschwiegenheitspflicht insbesondere für die von natürlichen Personen
+   gemeldeten Verstößen gegen diese Verordnung.
   \label{itm:54-2}
 
 \end{enumerate}
