--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -6,7 +6,8 @@
 
 \begin{enumerate}
 
-  \item Unbeschadet anderer in dieser Verordnung dargelegter Aufgaben muss jede \hyperref[itm:04-21]{Aufsichtsbehörde} in ihrem Hoheitsgebiet
+  \item Unbeschadet anderer in dieser Verordnung dargelegter Aufgaben muss jede \hyperref[itm:04-21]
+   {Aufsichtsbehörde} in ihrem Hoheitsgebiet
 \label{itm:57-1}
 
   \begin{enumerate}
@@ -14,8 +15,9 @@
     \item die Anwendung dieser Verordnung überwachen und durchsetzen;
     \label{itm:57-1a}
 
-    \item die Öffentlichkeit für die Risiken, Vorschriften, Garantien und Rechte im Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung}
-     sensibilisieren und sie darüber aufklären. Besondere Beachtung finden dabei spezifische Maßnahmen für Kinder;
+    \item die Öffentlichkeit für die Risiken, Vorschriften, Garantien und Rechte im Zusammenhang mit der \hyperref
+     [itm:04-2]{Verarbeitung} sensibilisieren und sie darüber aufklären. Besondere Beachtung finden dabei spezifische
+     Maßnahmen für Kinder;
     \label{itm:57-1b}
 
     \item im Einklang mit dem Recht des Mitgliedsstaats das nationale Parlament, die Regierung und andere Einrichtungen
@@ -23,32 +25,34 @@
      Personen in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} beraten;
     \label{itm:57-1c}
 
-    \item die \hyperref[itm:04-7]{Verantwortlichen} und die \hyperref[itm:04-8]{Auftragsverarbeiter} für die ihnen aus dieser Verordnung entstehenden Pflichten
-     sensibilisieren;
+    \item die \hyperref[itm:04-7]{Verantwortlichen} und die \hyperref[itm:04-8]{Auftragsverarbeiter} für die ihnen aus
+     dieser Verordnung entstehenden Pflichten sensibilisieren;
     \label{itm:57-1d}
 
-    \item auf Anfrage jeder \hyperref[itm:04-1]{betroffenen Person} Informationen über die Ausübung ihrer Rechte aufgrund dieser Verordnung
-     zur Verfügung stellen und gegebenenfalls zu diesem Zweck mit den \hyperref[itm:04-21]{Aufsichtsbehörden} in anderen Mitgliedstaaten
-     zusammenarbeiten;
+    \item auf Anfrage jeder \hyperref[itm:04-1]{betroffenen Person} Informationen über die Ausübung ihrer Rechte
+     aufgrund dieser Verordnung zur Verfügung stellen und gegebenenfalls zu diesem Zweck mit den \hyperref[itm:04-21]
+     {Aufsichtsbehörden} in anderen Mitgliedstaaten zusammenarbeiten;
     \label{itm:57-1e}
 
-    \item sich mit Beschwerden einer \hyperref[itm:04-1]{betroffenen Person} oder Beschwerden einer Stelle, einer Organisation oder eines
-     Verbandes gemäß \hyperref[ch:80]{Artikel 80} befassen, den Gegenstand der Beschwerde in angemessenem Umfang
-     untersuchen und den Beschwerdeführer innerhalb einer angemessenen Frist über den Fortgang und das Ergebnis der
-     Untersuchung unterrichten, insbesondere, wenn eine weitere Untersuchung oder Koordinierung mit einer anderen
+    \item sich mit Beschwerden einer \hyperref[itm:04-1]{betroffenen Person} oder Beschwerden einer Stelle, einer
+     Organisation oder eines Verbandes gemäß \hyperref[ch:80]{Artikel 80} befassen, den Gegenstand der Beschwerde in
+     angemessenem Umfang untersuchen und den Beschwerdeführer innerhalb einer angemessenen Frist über den Fortgang und
+     das Ergebnis der Untersuchung unterrichten, insbesondere, wenn eine weitere Untersuchung oder Koordinierung mit
+     einer anderen
      \hyperref[itm:04-21]{Aufsichtsbehörde} notwendig ist;
     \label{itm:57-1f}
 
-    \item mit anderen \hyperref[itm:04-21]{Aufsichtsbehörden} zusammenarbeiten, auch durch Informationsaustausch, und ihnen Amtshilfe leisten,
-     um die einheitliche Anwendung und Durchsetzung dieser Verordnung zu gewährleisten;
+    \item mit anderen \hyperref[itm:04-21]{Aufsichtsbehörden} zusammenarbeiten, auch durch Informationsaustausch, und
+     ihnen Amtshilfe leisten, um die einheitliche Anwendung und Durchsetzung dieser Verordnung zu gewährleisten;
     \label{itm:57-1g}
 
     \item Untersuchungen über die Anwendung dieser Verordnung durchführen, auch auf der Grundlage von Informationen
      einer anderen \hyperref[itm:04-21]{Aufsichtsbehörde} oder einer anderen Behörde;
     \label{itm:57-1h}
 
-    \item maßgebliche Entwicklungen verfolgen, soweit sie sich auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} auswirken,
-     insbesondere die Entwicklung der Informations- und Kommunikationstechnologie und der Geschäftspraktiken;
+    \item maßgebliche Entwicklungen verfolgen, soweit sie sich auf den Schutz \hyperref[itm:04-1]
+     {personenbezogener Daten} auswirken, insbesondere die Entwicklung der Informations- und Kommunikationstechnologie
+     und der Geschäftspraktiken;
     \label{itm:57-1i}
 
     \item Standardvertragsklauseln im Sinne des \hyperref[itm:28-8]{Artikels 28 Absatz 8} und des \hyperref[itm:46-2d]
@@ -59,7 +63,8 @@
      eine Datenschutz-Folgenabschätzung durchzuführen ist;
     \label{itm:57-1k}
 
-    \item Beratung in Bezug auf die in \hyperref[itm:36-1]{Artikel 36 Absatz 2} genannten Verarbeitungsvorgänge leisten;
+    \item Beratung in Bezug auf die in \hyperref[itm:36-1]{Artikel 36 Absatz 2} genannten Verarbeitungsvorgänge
+     leisten;
     \label{itm:57-1l}
 
     \item die Ausarbeitung von Verhaltensregeln gemäß \hyperref[itm:40-1]{Artikel 40 Absatz 1} fördern und zu diesen
@@ -103,19 +108,19 @@
 
   \end{enumerate}
 
-  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} erleichtert das Einreichen von in \hyperref[itm:57-1f]{Absatz 1 Buchstabe f} genannten
-   Beschwerden durch Maßnahmen wie etwa die Bereitstellung eines Beschwerdeformulars, das auch elektronisch ausgefüllt
-   werden kann, ohne dass andere Kommunikationsmittel ausgeschlossen werden.
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} erleichtert das Einreichen von in \hyperref[itm:57-1f]{Absatz 1
+   Buchstabe f} genannten Beschwerden durch Maßnahmen wie etwa die Bereitstellung eines Beschwerdeformulars, das auch
+   elektronisch ausgefüllt werden kann, ohne dass andere Kommunikationsmittel ausgeschlossen werden.
   \label{itm:57-2}
 
-  \item Die Erfüllung der Aufgaben jeder \hyperref[itm:04-21]{Aufsichtsbehörde} ist für die \hyperref[itm:04-1]{betroffene Person} und gegebenenfalls für den
-   Datenschutzbeauftragten unentgeltlich.
+  \item Die Erfüllung der Aufgaben jeder \hyperref[itm:04-21]{Aufsichtsbehörde} ist für die \hyperref[itm:04-1]
+   {betroffene Person} und gegebenenfalls für den Datenschutzbeauftragten unentgeltlich.
   \label{itm:57-3}
 
   \item Bei offenkundig unbegründeten oder -- insbesondere im Fall von häufiger Wiederholung -- exzessiven Anfragen kann
-   die \hyperref[itm:04-21]{Aufsichtsbehörde} eine angemessene Gebühr auf der Grundlage der Verwaltungskosten verlangen oder sich weigern,
-   aufgrund der Anfrage tätig zu werden. In diesem Fall trägt die \hyperref[itm:04-21]{Aufsichtsbehörde} die Beweislast für den offenkundig
-   unbegründeten oder exzessiven Charakter der Anfrage.
+   die \hyperref[itm:04-21]{Aufsichtsbehörde} eine angemessene Gebühr auf der Grundlage der Verwaltungskosten verlangen
+   oder sich weigern, aufgrund der Anfrage tätig zu werden. In diesem Fall trägt die \hyperref[itm:04-21]
+   {Aufsichtsbehörde} die Beweislast für den offenkundig unbegründeten oder exzessiven Charakter der Anfrage.
   \label{itm:57-4}
 
 \end{enumerate}
