--- a/artikel/67.tex
+++ b/artikel/67.tex
@@ -5,8 +5,9 @@
 \addsec{Text der Verordnung}
 
 Die Kommission kann Durchführungsrechtsakte von allgemeiner Tragweite zur Festlegung der Ausgestaltung des
-elektronischen Informationsaustauschs zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden} sowie zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden} und dem
-Ausschuss, insbesondere des standardisierten Formats nach \hyperref[ch:64]{Artikel 64}, erlassen.
+elektronischen Informationsaustauschs zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden} sowie zwischen den \hyperref
+[itm:04-21]{Aufsichtsbehörden} und dem Ausschuss, insbesondere des standardisierten Formats nach \hyperref[ch:64]
+{Artikel 64}, erlassen.
 
 Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} erlassen.  
 
