--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -17,18 +17,18 @@
       \hyperref[itm:04-21]{Aufsichtsbehörden};
     \label{itm:70-1a}
 
-    \item Beratung der Kommission in allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} in der
-     Union stehen, einschließlich etwaiger Vorschläge zur Änderung dieser Verordnung;
+    \item Beratung der Kommission in allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]
+     {personenbezogener Daten} in der Union stehen, einschließlich etwaiger Vorschläge zur Änderung dieser Verordnung;
     \label{itm:70-1b}
 
     \item Beratung der Kommission über das Format und die Verfahren für den Austausch von Informationen zwischen den
-     \hyperref[itm:04-7]{Verantwortlichen}, den \hyperref[itm:04-8]{Auftragsverarbeitern} und den \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf \hyperref[itm:04-20]{verbindliche interne
-     Datenschutzvorschriften};
+     \hyperref[itm:04-7]{Verantwortlichen}, den \hyperref[itm:04-8]{Auftragsverarbeitern} und den \hyperref[itm:04-21]
+      {Aufsichtsbehörden} in Bezug auf \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften};
     \label{itm:70-1c}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren zu Verfahren für die Löschung gemäß
-     \hyperref[itm:17-2]{Artikel 17 Absatz 2} von Links zu \hyperref[itm:04-1]{personenbezogenen Daten} oder Kopien oder Replikationen dieser
-     Daten aus öffentlich zugänglichen Kommunikationsdiensten;
+     \hyperref[itm:17-2]{Artikel 17 Absatz 2} von Links zu \hyperref[itm:04-1]{personenbezogenen Daten} oder Kopien oder
+      Replikationen dieser Daten aus öffentlich zugänglichen Kommunikationsdiensten;
     \label{itm:70-1d}
 
     \item Prüfung -- von sich aus, auf Antrag eines seiner Mitglieder oder auf Ersuchen der Kommission -- von die
@@ -37,28 +37,32 @@
     \label{itm:70-1e}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die auf \hyperref[itm:04-4]{Profiling} beruhenden
-     Entscheidungen gemäß \hyperref[itm:22-2]{Artikel 22 Absatz 2};
+     vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die auf \hyperref[itm:04-4]
+     {Profiling} beruhenden Entscheidungen gemäß \hyperref[itm:22-2]{Artikel 22 Absatz 2};
     \label{itm:70-1f}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} für die Feststellung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener Daten} und die
-     Festlegung der Unverzüglichkeit im Sinne des \hyperref[ch:33]{Artikels 33} Absätze \hyperref[itm:33-1]{1} und
-     \hyperref[itm:33-2]{2}, und zu den spezifischen Umständen, unter denen der \hyperref[itm:04-7]{Verantwortliche} oder der
-     \hyperref[itm:04-8]{Auftragsverarbeiter} die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu melden hat;
+     vorliegenden Absatzes} für die Feststellung von \hyperref[itm:04-12]{Verletzungen des Schutzes personenbezogener
+     Daten} und die Festlegung der Unverzüglichkeit im Sinne des \hyperref[ch:33]{Artikels 33} Absätze \hyperref
+     [itm:33-1]{1} und
+     \hyperref[itm:33-2]{2}, und zu den spezifischen Umständen, unter denen der \hyperref[itm:04-7]
+      {Verantwortliche} oder der
+     \hyperref[itm:04-8]{Auftragsverarbeiter} die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}
+      zu melden hat;
     \label{itm:70-1g}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
-     vorliegenden Absatzes} zu den Umständen, unter denen eine \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}
-     voraussichtlich ein hohes Risiko für die Rechte und Freiheiten natürlicher Personen im Sinne des \hyperref
-     [itm:34-1]{Artikels 34 Absatz 1} zur Folge hat;
+     vorliegenden Absatzes} zu den Umständen, unter denen eine \hyperref[itm:04-12]{Verletzung des Schutzes
+     personenbezogener Daten} voraussichtlich ein hohes Risiko für die Rechte und Freiheiten natürlicher Personen im
+     Sinne des \hyperref[itm:34-1]{Artikels 34 Absatz 1} zur Folge hat;
     \label{itm:70-1h}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der in \hyperref[ch:47]{Artikel 47} aufgeführten Kriterien und
-     Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf \hyperref[itm:04-20]{verbindlichen internen
-     Datenschutzvorschriften} von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} beruhen, und der dort aufgeführten weiteren
-     erforderlichen Anforderungen zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} der \hyperref[itm:04-1]{betroffenen Personen};
+     Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf \hyperref[itm:04-20]
+     {verbindlichen internen Datenschutzvorschriften} von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
+     [itm:04-8]{Auftragsverarbeitern} beruhen, und der dort aufgeführten weiteren erforderlichen Anforderungen zum
+     Schutz \hyperref[itm:04-1]{personenbezogener Daten} der \hyperref[itm:04-1]{betroffenen Personen};
     \label{itm:70-1i}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
@@ -66,9 +70,9 @@
      \hyperref[itm:04-1]{personenbezogener Daten} gemäß \hyperref[itm:49-1-1]{Artikel 49 Absatz 1};
     \label{itm:70-1j}
 
-    \item Ausarbeitung von Leitlinien für die \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf die Anwendung von Maßnahmen nach \hyperref
-     [ch:58]{Artikel 58} Absätze \hyperref[itm:58-1]{1}, \hyperref[itm:58-2]{2} und \hyperref[itm:58-3]{3} und die
-     Festsetzung von Geldbußen gemäß \hyperref[ch:83]{Artikel 83};
+    \item Ausarbeitung von Leitlinien für die \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf die Anwendung von
+     Maßnahmen nach \hyperref[ch:58]{Artikel 58} Absätze \hyperref[itm:58-1]{1}, \hyperref[itm:58-2]{2} und \hyperref
+     [itm:58-3]{3} und die Festsetzung von Geldbußen gemäß \hyperref[ch:83]{Artikel 83};
     \label{itm:70-1k}
 
     \item Überprüfung der praktischen Anwendung der unter den Buchstaben \hyperref[itm:70-1e]{e} und \hyperref
@@ -87,8 +91,8 @@
 
     \item Akkreditierung von Zertifizierungsstellen und deren regelmäßige Überprüfung gemäß \hyperref[ch:43]{Artikel 43}
      und Führung eines öffentlichen Registers der akkreditierten Einrichtungen gemäß \hyperref[itm:43-6]{Artikel 43
-     Absatz 6} und der in Drittländern niedergelassenen akkreditierten \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}
-     gemäß \hyperref[itm:42-7]{Artikel 42 Absatz 7};
+     Absatz 6} und der in Drittländern niedergelassenen akkreditierten \hyperref[itm:04-7]
+     {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß \hyperref[itm:42-7]{Artikel 42 Absatz 7};
     \label{itm:70-1o}
 
     \item Präzisierung der in \hyperref[itm:43-3]{Artikel 43 Absatz 3} genannten Anforderungen im Hinblick auf die
@@ -105,24 +109,25 @@
 
     \item Abgabe einer Stellungnahme für die Kommission zur Beurteilung der Angemessenheit des in einem Drittland oder
      einer internationalen Organisation gebotenen Schutzniveaus einschließlich zur Beurteilung der Frage, ob das
-     Drittland, das Gebiet, ein oder mehrere spezifische Sektoren in diesem Drittland oder eine \hyperref[itm:04-29]{internationale
-     Organisation} kein angemessenes Schutzniveau mehr gewährleistet. Zu diesem Zweck gibt die Kommission dem Ausschuss
-     alle erforderlichen Unterlagen, darunter den Schriftwechsel mit der Regierung des Drittlands, dem Gebiet oder
-     spezifischen Sektor oder der internationalen Organisation;
+     Drittland, das Gebiet, ein oder mehrere spezifische Sektoren in diesem Drittland oder eine \hyperref[itm:04-29]
+     {internationale Organisation} kein angemessenes Schutzniveau mehr gewährleistet. Zu diesem Zweck gibt die
+     Kommission dem Ausschuss alle erforderlichen Unterlagen, darunter den Schriftwechsel mit der Regierung des
+     Drittlands, dem Gebiet oder spezifischen Sektor oder der internationalen Organisation;
     \label{itm:70-1s}
 
     \item Abgabe von Stellungnahmen im Kohärenzverfahren gemäß \hyperref[itm:64-1]{Artikel 64 Absatz 1} zu
-     Beschlussentwürfen von \hyperref[itm:04-21]{Aufsichtsbehörden}, zu Angelegenheiten, die nach \hyperref[itm:64-2]{Artikel 64 Absatz 2}
-     vorgelegt wurden und um Erlass verbindlicher Beschlüsse gemäß \hyperref[ch:65]{Artikel 65}, einschließlich der
-     in \hyperref[ch:66]{Artikel 66} genannten Fälle;
+     Beschlussentwürfen von \hyperref[itm:04-21]{Aufsichtsbehörden}, zu Angelegenheiten, die nach \hyperref[itm:64-2]
+     {Artikel 64 Absatz 2} vorgelegt wurden und um Erlass verbindlicher Beschlüsse gemäß \hyperref[ch:65]{Artikel 65},
+     einschließlich der in \hyperref[ch:66]{Artikel 66} genannten Fälle;
     \label{itm:70-1t}
 
     \item Förderung der Zusammenarbeit und eines wirksamen bilateralen und multilateralen Austauschs von Informationen
      und bewährten Verfahren zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden};
     \label{itm:70-1u}
 
-    \item Förderung von Schulungsprogrammen und Erleichterung des Personalaustausches zwischen \hyperref[itm:04-21]{Aufsichtsbehörden} sowie
-     gegebenenfalls mit \hyperref[itm:04-21]{Aufsichtsbehörden} von Drittländern oder mit internationalen Organisationen;
+    \item Förderung von Schulungsprogrammen und Erleichterung des Personalaustausches zwischen \hyperref[itm:04-21]
+     {Aufsichtsbehörden} sowie gegebenenfalls mit \hyperref[itm:04-21]{Aufsichtsbehörden} von Drittländern oder mit
+     internationalen Organisationen;
     \label{itm:70-1v}
 
     \item Förderung des Austausches von Fachwissen und von Dokumentationen über Datenschutzvorschriften und -praxis mit
@@ -133,8 +138,8 @@
      {Artikel 40 Absatz 9} und
     \label{itm:70-1x}
 
-    \item Führung eines öffentlich zugänglichen elektronischen Registers der Beschlüsse der \hyperref[itm:04-21]{Aufsichtsbehörden} und
-     Gerichte in Bezug auf Fragen, die im Rahmen des Kohärenzverfahrens behandelt wurden.
+    \item Führung eines öffentlich zugänglichen elektronischen Registers der Beschlüsse der \hyperref[itm:04-21]
+     {Aufsichtsbehörden} und Gerichte in Bezug auf Fragen, die im Rahmen des Kohärenzverfahrens behandelt wurden.
     \label{itm:70-1y}
 
   \end{enumerate}
