--- a/artikel/71.tex
+++ b/artikel/71.tex
@@ -6,9 +6,9 @@
 
 \begin{enumerate}
 
-  \item Der Ausschuss erstellt einen Jahresbericht über den Schutz natürlicher Personen bei der \hyperref[itm:04-2]{Verarbeitung} in der
-   Union und gegebenenfalls in Drittländern und internationalen Organisationen. Der Bericht wird veröffentlicht und dem
-   Europäischen Parlament, dem Rat und der Kommission übermittelt.
+  \item Der Ausschuss erstellt einen Jahresbericht über den Schutz natürlicher Personen bei der \hyperref[itm:04-2]
+   {Verarbeitung} in der Union und gegebenenfalls in Drittländern und internationalen Organisationen. Der Bericht wird
+   veröffentlicht und dem Europäischen Parlament, dem Rat und der Kommission übermittelt.
   \label{itm:71-1}
 
   \item Der Jahresbericht enthält eine Überprüfung der praktischen Anwendung der in \hyperref[itm:70-1l]{Artikel 70
