--- a/artikel/80.tex
+++ b/artikel/80.tex
@@ -8,18 +8,20 @@
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, eine Einrichtung, Organisationen oder Vereinigung ohne
    Gewinnerzielungsabsicht, die ordnungsgemäß nach dem Recht eines Mitgliedstaats gegründet ist, deren satzungsmäßige
-   Ziele im öffentlichem Interesse liegen und die im Bereich des Schutzes der Rechte und Freiheiten von \hyperref[itm:04-1]{betroffenen
-   Personen} in Bezug auf den Schutz ihrer \hyperref[itm:04-1]{personenbezogenen Daten} tätig ist, zu beauftragen, in ihrem Namen eine
-   Beschwerde einzureichen, in ihrem Namen die in den Artikeln \hyperref[ch:77]{77}, \hyperref[ch:78]{78} und \hyperref
-   [ch:79]{79} genannten Rechte wahrzunehmen und das Recht auf Schadensersatz gemäß \hyperref[ch:82]{Artikel 82} in
-   Anspruch zu nehmen, sofern dieses im Recht der Mitgliedstaaten vorgesehen ist.
+   Ziele im öffentlichem Interesse liegen und die im Bereich des Schutzes der Rechte und Freiheiten von \hyperref
+   [itm:04-1]{betroffenen Personen} in Bezug auf den Schutz ihrer \hyperref[itm:04-1]{personenbezogenen Daten} tätig
+   ist, zu beauftragen, in ihrem Namen eine Beschwerde einzureichen, in ihrem Namen die in den Artikeln \hyperref
+   [ch:77]{77}, \hyperref[ch:78]{78} und \hyperref[ch:79]{79} genannten Rechte wahrzunehmen und das Recht auf
+   Schadensersatz gemäß \hyperref[ch:82]{Artikel 82} in Anspruch zu nehmen, sofern dieses im Recht der Mitgliedstaaten
+   vorgesehen ist.
   \label{itm:80-1}
 
   \item Die Mitgliedstaaten können vorsehen, dass jede der in \hyperref[itm:80-1]{Absatz 1 des vorliegenden Artikels}
-   genannten Einrichtungen, Organisationen oder Vereinigungen unabhängig von einem Auftrag der \hyperref[itm:04-1]{betroffenen Person} in
-   diesem Mitgliedstaat das Recht hat, bei der gemäß \hyperref[ch:77]{Artikel 77} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} eine
-   Beschwerde einzulegen und die in den Artikeln \hyperref[ch:78]{78} und \hyperref[ch:79]{79} aufgeführten Rechte in
-   Anspruch zu nehmen, wenn ihres Erachtens die Rechte einer \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung infolge einer
+   genannten Einrichtungen, Organisationen oder Vereinigungen unabhängig von einem Auftrag der \hyperref[itm:04-1]
+   {betroffenen Person} in diesem Mitgliedstaat das Recht hat, bei der gemäß \hyperref[ch:77]{Artikel 77}
+   zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} eine Beschwerde einzulegen und die in den Artikeln \hyperref
+   [ch:78]{78} und \hyperref[ch:79]{79} aufgeführten Rechte in Anspruch zu nehmen, wenn ihres Erachtens die Rechte
+   einer \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung infolge einer
    \hyperref[itm:04-2]{Verarbeitung} verletzt worden sind.
   \label{itm:80-2}
 
