--- a/artikel/94.tex
+++ b/artikel/94.tex
@@ -10,9 +10,10 @@
   \label{itm:94-1}
 
   \item Verweise auf die aufgehobene Richtlinie gelten als Verweise auf die vorliegende Verordnung. Verweise auf die
-   durch Artikel 29 der Richtlinie 95/46/EG eingesetzte Gruppe für den Schutz von Personen bei der \hyperref[itm:04-2]{Verarbeitung}
-   \hyperref[itm:04-1]{personenbezogener Daten} gelten als Verweise auf den kraft dieser Verordnung errichteten Europäischen
-   Datenschutzausschuss.
+   durch Artikel 29 der Richtlinie 95/46/EG eingesetzte Gruppe für den Schutz von Personen bei der \hyperref[itm:04-2]
+   {Verarbeitung}
+   \hyperref[itm:04-1]{personenbezogener Daten} gelten als Verweise auf den kraft dieser Verordnung errichteten
+    Europäischen Datenschutzausschuss.
   \label{itm:94-2}
 
 \end{enumerate}
