--- a/artikel/97.tex
+++ b/artikel/97.tex
@@ -16,9 +16,11 @@
 
   \begin{enumerate}
   
-    \item des \hyperref[part:5]{Kapitels V} über die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an Drittländer oder an
-     \hyperref[itm:04-29]{internationale Organisationen} insbesondere im Hinblick auf die gemäß \hyperref[itm:45-3]{Artikel 45 Absatz 3} der
-     vorliegenden Verordnung erlassenen Beschlüsse sowie die gemäß Artikel 25 Absatz 6 der Richtlinie 95/46/EG
+    \item des \hyperref[part:5]{Kapitels V} über die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an
+     Drittländer oder an
+     \hyperref[itm:04-29]{internationale Organisationen} insbesondere im Hinblick auf die gemäß \hyperref[itm:45-3]
+      {Artikel 45 Absatz 3} der vorliegenden Verordnung erlassenen Beschlüsse sowie die gemäß Artikel 25 Absatz 6 der
+      Richtlinie 95/46/EG
      \todo{Recherche}
      erlassenen Feststellungen,
     \label{itm:97-2a}
